// Package builder å®ç°åŒºå—æ„å»ºæœåŠ¡
//
// ğŸ¯ **BlockBuilder æœåŠ¡å®ç°**
//
// æœ¬åŒ…å®ç°äº†åŒºå—æ„å»ºæœåŠ¡ï¼Œè´Ÿè´£åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—ã€‚
// é‡‡ç”¨å“ˆå¸Œ+ç¼“å­˜æ¶æ„æ¨¡å¼ï¼Œæ”¯æŒå¹¶å‘æŒ–çŸ¿åœºæ™¯ã€‚
//
// ğŸ’¡ **æ ¸å¿ƒèŒè´£**ï¼š
// - åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—
// - ç®¡ç†å€™é€‰åŒºå—ç¼“å­˜
// - æä¾›æ„å»ºæ€§èƒ½æŒ‡æ ‡
// nolint:U1000 // å…è®¸æœªä½¿ç”¨çš„å‡½æ•°ä»¥å¤‡å°†æ¥ä½¿ç”¨
package builder

import (
	"context"
	"fmt"
	"strings"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/block/interfaces"
	"github.com/weisyn/v1/internal/core/block/merkle"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	metricsiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/metrics"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	metricsutil "github.com/weisyn/v1/pkg/utils/metrics"
)

// Service åŒºå—æ„å»ºæœåŠ¡
//
// ğŸ¯ **è®¾è®¡ç†å¿µ**ï¼š
// - è½»é‡çº§æ„å»ºï¼šå¿«é€Ÿåˆ›å»ºå€™é€‰åŒºå—
// - ç¼“å­˜ä¼˜åŒ–ï¼šå‡å°‘é‡å¤æ„å»ºå¼€é”€
// - å¹¶å‘å®‰å…¨ï¼šæ”¯æŒå¤šçŸ¿å·¥å¹¶å‘æ„å»º
//
// ğŸ“¦ **æœåŠ¡èŒè´£**ï¼š
// - CreateMiningCandidate: åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—
// - GetCandidateBlock: è·å–ç¼“å­˜çš„å€™é€‰åŒºå—
// - GetBuilderMetrics: è·å–æ„å»ºæ€§èƒ½æŒ‡æ ‡
type Service struct {
	// ==================== ä¾èµ–æ³¨å…¥ ====================

	// storage å­˜å‚¨æœåŠ¡ï¼ˆè¯»å–é“¾çŠ¶æ€ï¼‰
	storage storage.BadgerStore

	// mempool äº¤æ˜“æ± ï¼ˆè·å–å¾…æ‰“åŒ…äº¤æ˜“ï¼‰
	mempool mempool.TxPool

	// txProcessor äº¤æ˜“å¤„ç†å™¨ï¼ˆéªŒè¯å’Œå¤„ç†äº¤æ˜“ï¼‰
	txProcessor tx.TxProcessor

	// hasher å“ˆå¸ŒæœåŠ¡ï¼ˆç”¨äºMerkleæ ‘è®¡ç®—ï¼‰
	hasher merkle.Hasher

	// blockHashClient åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—åŒºå—å“ˆå¸Œï¼‰
	blockHashClient core.BlockHashServiceClient

	// txHashClient äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼Œç¡®ä¿ä¸å…±è¯†å±‚ä¸€è‡´ï¼‰
	txHashClient transaction.TransactionHashServiceClient

	// utxoQuery UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºè·å–çŠ¶æ€æ ¹ï¼ŒP3-4ï¼‰
	utxoQuery persistence.UTXOQuery

	// blockQuery åŒºå—æŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºè·å–éš¾åº¦ï¼ŒP3-5ï¼‰
	blockQuery persistence.BlockQuery

	// chainQuery é“¾æŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºè·å–é“¾çŠ¶æ€ï¼Œå¦‚å½“å‰é«˜åº¦å’Œæœ€ä½³åŒºå—å“ˆå¸Œï¼‰
	chainQuery persistence.ChainQuery

	// feeManager è´¹ç”¨ç®¡ç†å™¨ï¼ˆç”¨äºæ„å»º Coinbase äº¤æ˜“ï¼ŒP3-3ï¼‰
	feeManager tx.FeeManager

	// minerAddress çŸ¿å·¥åœ°å€ï¼ˆç”¨äº Coinbase è¾“å‡ºï¼ŒP3-3ï¼‰
	minerAddress []byte
	minerMu      sync.RWMutex

	// logger æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
	logger log.Logger

	// configProvider é…ç½®æä¾›è€…ï¼ˆå¿…éœ€ï¼Œç”¨äº v2 éš¾åº¦/æ—¶é—´æˆ³è§„åˆ™å‚æ•°ï¼‰
	configProvider config.Provider

	// ==================== å€™é€‰åŒºå—ç¼“å­˜ ====================

	// cache å€™é€‰åŒºå—LRUç¼“å­˜
	cache *CandidateLRUCache

	// ==================== æŒ‡æ ‡æ”¶é›† ====================

	// metrics æ„å»ºæœåŠ¡æŒ‡æ ‡
	metrics *interfaces.BuilderMetrics

	// metricsMu æŒ‡æ ‡è¯»å†™é”
	metricsMu sync.Mutex

	// ==================== çŠ¶æ€ç®¡ç† ====================

	// isHealthy å¥åº·çŠ¶æ€
	isHealthy bool

	// lastError æœ€åé”™è¯¯
	lastError error

	// chainIDOnce ç¡®ä¿é“¾IDåªè§£æä¸€æ¬¡
	chainIDOnce sync.Once
	// chainID ç¼“å­˜è§£æåçš„é“¾ID
	chainID uint64
	// chainIDErr ç¼“å­˜è§£æé“¾IDæ—¶å‘ç”Ÿçš„é”™è¯¯
	chainIDErr error
}

// NewService åˆ›å»ºåŒºå—æ„å»ºæœåŠ¡
//
// ğŸ”§ **åˆå§‹åŒ–æµç¨‹**ï¼š
// 1. éªŒè¯å¿…éœ€ä¾èµ–
// 2. åˆå§‹åŒ–ç¼“å­˜
// 3. åˆå§‹åŒ–æŒ‡æ ‡
// 4. è®¾ç½®é»˜è®¤é…ç½®
//
// å‚æ•°ï¼š
//   - storage: å­˜å‚¨æœåŠ¡ï¼ˆå¿…éœ€ï¼‰
//   - mempool: äº¤æ˜“æ± ï¼ˆå¿…éœ€ï¼‰
//   - txProcessor: äº¤æ˜“å¤„ç†å™¨ï¼ˆå¯é€‰ï¼Œå¦‚ä¸ºnilåˆ™ä¸éªŒè¯äº¤æ˜“ï¼‰
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆå¿…éœ€ï¼‰
//   - utxoQuery: UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºè·å–çŠ¶æ€æ ¹ï¼ŒP3-4ï¼‰
//   - blockQuery: åŒºå—æŸ¥è¯¢æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºè·å–éš¾åº¦ï¼ŒP3-5ï¼‰
//   - chainQuery: é“¾æŸ¥è¯¢æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºè·å–é“¾çŠ¶æ€ï¼‰
//   - feeManager: è´¹ç”¨ç®¡ç†å™¨ï¼ˆå¯é€‰ï¼Œç”¨äºæ„å»º Coinbase äº¤æ˜“ï¼ŒP3-3ï¼‰
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// è¿”å›ï¼š
//   - interfaces.InternalBlockBuilder: åŒºå—æ„å»ºæœåŠ¡å®ä¾‹
//   - error: åˆ›å»ºé”™è¯¯
func NewService(
	storage storage.BadgerStore,
	mempool mempool.TxPool,
	txProcessor tx.TxProcessor,
	hashManager crypto.HashManager,
	blockHashClient core.BlockHashServiceClient,
	txHashClient transaction.TransactionHashServiceClient,
	utxoQuery persistence.UTXOQuery,
	blockQuery persistence.BlockQuery,
	chainQuery persistence.ChainQuery,
	feeManager tx.FeeManager,
	configProvider config.Provider,
	logger log.Logger,
) (interfaces.InternalBlockBuilder, error) {
	// éªŒè¯å¿…éœ€ä¾èµ–
	if storage == nil {
		return nil, fmt.Errorf("storage ä¸èƒ½ä¸ºç©º")
	}
	if mempool == nil {
		return nil, fmt.Errorf("mempool ä¸èƒ½ä¸ºç©º")
	}
	if hashManager == nil {
		return nil, fmt.Errorf("hashManager ä¸èƒ½ä¸ºç©º")
	}
	if blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient ä¸èƒ½ä¸ºç©º")
	}
	if txHashClient == nil {
		return nil, fmt.Errorf("txHashClient ä¸èƒ½ä¸ºç©º")
	}
	if configProvider == nil {
		return nil, fmt.Errorf("configProvider ä¸èƒ½ä¸ºç©º")
	}

	// åˆ›å»ºå“ˆå¸Œé€‚é…å™¨ï¼ˆç”¨äºMerkleæ ‘è®¡ç®—ï¼‰
	hasher := merkle.NewHashManagerAdapter(hashManager)

	// åˆ›å»ºLRUç¼“å­˜
	maxCacheSize := 100 // é»˜è®¤ç¼“å­˜100ä¸ªå€™é€‰åŒºå—
	lruCache := NewCandidateLRUCache(maxCacheSize, logger)

	// åˆ›å»ºæœåŠ¡å®ä¾‹
	s := &Service{
		storage:         storage,
		mempool:         mempool,
		txProcessor:     txProcessor,
		hasher:          hasher,
		blockHashClient: blockHashClient,
		txHashClient:    txHashClient,
		utxoQuery:       utxoQuery,
		blockQuery:      blockQuery,
		chainQuery:      chainQuery,
		feeManager:      feeManager,
		configProvider:  configProvider,
		logger:          logger,
		cache:           lruCache,
		metrics: &interfaces.BuilderMetrics{
			MaxCacheSize: maxCacheSize,
		},
		isHealthy: true,
	}

	if logger != nil {
		logger.Infof("âœ… BlockBuilder æœåŠ¡åˆå§‹åŒ–æˆåŠŸï¼ˆä½¿ç”¨ TxPool å®ä¾‹: %pï¼‰", mempool)
	}

	return s, nil
}

// CreateMiningCandidate åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—
//
// ğŸ¯ **æ ¸å¿ƒä¸šåŠ¡é€»è¾‘**ï¼š
// 1. è·å–å½“å‰é“¾çŠ¶æ€ï¼ˆé«˜åº¦ã€æœ€ä½³åŒºå—å“ˆå¸Œï¼‰
// 2. ä»äº¤æ˜“æ± è·å–å¾…æ‰“åŒ…äº¤æ˜“
// 3. åˆ›å»ºåŒºå—å¤´
// 4. åˆ›å»ºåŒºå—ä½“
// 5. è®¡ç®—åŒºå—å“ˆå¸Œ
// 6. ç¼“å­˜å€™é€‰åŒºå—
// 7. è¿”å›åŒºå—å“ˆå¸Œ
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//
// è¿”å›ï¼š
//   - []byte: å€™é€‰åŒºå—å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - error: åˆ›å»ºé”™è¯¯
func (s *Service) CreateMiningCandidate(ctx context.Context) ([]byte, error) {
	startTime := time.Now()
	defer func() {
		s.recordCreation(time.Since(startTime))
	}()

	if s.logger != nil {
		s.logger.Debug("å¼€å§‹åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—")
	}

	// 1. è·å–å½“å‰é“¾çŠ¶æ€
	currentHeight, parentHash, err := s.getCurrentChainState(ctx)
	if err != nil {
		s.recordError(err)
		return nil, fmt.Errorf("è·å–é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	// 2. ä»äº¤æ˜“æ± è·å–å¾…æ‰“åŒ…äº¤æ˜“
	candidateTxs, err := s.mempool.GetTransactionsForMining()
	if err != nil {
		s.recordError(err)
		return nil, fmt.Errorf("ä»äº¤æ˜“æ± è·å–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// 3. æ„å»ºå€™é€‰åŒºå—ï¼ˆè¯¦ç»†å®ç°åœ¨ candidate.goï¼‰
	candidateBlock, err := s.buildCandidate(ctx, currentHeight, parentHash, candidateTxs)
	if err != nil {
		s.recordError(err)
		return nil, fmt.Errorf("æ„å»ºå€™é€‰åŒºå—å¤±è´¥: %w", err)
	}

	// 4. è®¡ç®—åŒºå—å“ˆå¸Œå¹¶ç¼“å­˜å€™é€‰åŒºå—
	var blockHash []byte
	if candidateBlock != nil && candidateBlock.Header != nil {
		var err error
		blockHash, err = s.calculateBlockHash(ctx, candidateBlock.Header)
		if err != nil {
			if s.logger != nil {
				s.logger.Warnf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %v", err)
			}
			blockHash = []byte{} // ä½¿ç”¨ç©ºå“ˆå¸Œä½œä¸ºåå¤‡
		}

		if len(blockHash) > 0 {
			if err := s.cacheCandidate(blockHash, candidateBlock); err != nil {
				// ç¼“å­˜å¤±è´¥ä¸å½±å“è¿”å›ï¼Œåªè®°å½•è­¦å‘Š
				if s.logger != nil {
					s.logger.Warnf("ç¼“å­˜å€™é€‰åŒºå—å¤±è´¥: %v", err)
				}
			}
		}
	} else {
		// candidateBlock ä¸º nilï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ
		if s.logger != nil {
			s.logger.Warnf("å€™é€‰åŒºå—ä¸ºnilï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
		}
		blockHash = []byte{} // ä½¿ç”¨ç©ºå“ˆå¸Œä½œä¸ºåå¤‡
	}

	if s.logger != nil {
		if len(blockHash) >= 8 && candidateBlock != nil && candidateBlock.Header != nil {
			s.logger.Infof("âœ… æˆåŠŸåˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—ï¼Œå“ˆå¸Œ: %x, é«˜åº¦: %d, äº¤æ˜“æ•°: %d",
				blockHash[:8], candidateBlock.Header.Height, len(candidateBlock.Body.Transactions))
		} else if candidateBlock != nil && candidateBlock.Header != nil {
			s.logger.Infof("âœ… æˆåŠŸåˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—ï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
				candidateBlock.Header.Height, len(candidateBlock.Body.Transactions))
		} else {
			s.logger.Infof("âœ… æˆåŠŸåˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—")
		}
	}

	return blockHash, nil
}

// GetCandidateBlock è·å–å€™é€‰åŒºå—
//
// ğŸ¯ **ä»LRUç¼“å­˜è·å–å€™é€‰åŒºå—**
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - blockHash: å€™é€‰åŒºå—å“ˆå¸Œ
//
// è¿”å›ï¼š
//   - *core.Block: å€™é€‰åŒºå—
//   - error: è·å–é”™è¯¯
func (s *Service) GetCandidateBlock(ctx context.Context, blockHash []byte) (*core.Block, error) {
	key := fmt.Sprintf("%x", blockHash)
	block, exists := s.cache.Get(key)
	if !exists {
		s.recordCacheMiss()
		// ğŸ”§ ä¿®å¤ï¼šæ£€æŸ¥ blockHash é•¿åº¦ï¼Œé¿å… panic
		if len(blockHash) >= 8 {
			return nil, fmt.Errorf("å€™é€‰åŒºå—ä¸å­˜åœ¨äºç¼“å­˜ä¸­: %x", blockHash[:8])
		}
		return nil, fmt.Errorf("å€™é€‰åŒºå—ä¸å­˜åœ¨äºç¼“å­˜ä¸­: %x", blockHash)
	}

	s.recordCacheHit()
	return block, nil
}

// ==================== å†…éƒ¨ç®¡ç†æ–¹æ³• ====================

// GetBuilderMetrics è·å–æ„å»ºæœåŠ¡æŒ‡æ ‡
func (s *Service) GetBuilderMetrics(ctx context.Context) (*interfaces.BuilderMetrics, error) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	// æ›´æ–°ç¼“å­˜å¤§å°
	s.metrics.CacheSize = s.cache.Size()

	// æ›´æ–°å¥åº·çŠ¶æ€
	s.metrics.IsHealthy = s.isHealthy
	if s.lastError != nil {
		s.metrics.ErrorMessage = s.lastError.Error()
	}

	return s.metrics, nil
}

// GetCachedCandidate è·å–ç¼“å­˜çš„å€™é€‰åŒºå—ï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
func (s *Service) GetCachedCandidate(ctx context.Context, blockHash []byte) (*core.Block, error) {
	return s.GetCandidateBlock(ctx, blockHash)
}

// ClearCandidateCache æ¸…ç†å€™é€‰åŒºå—ç¼“å­˜
func (s *Service) ClearCandidateCache(ctx context.Context) error {
	s.cache.Clear()

	// æ›´æ–°æŒ‡æ ‡
	s.metricsMu.Lock()
	s.metrics.CacheSize = 0
	s.metricsMu.Unlock()

	if s.logger != nil {
		s.logger.Info("âœ… å€™é€‰åŒºå—ç¼“å­˜å·²æ¸…ç†")
	}

	return nil
}

// RemoveCachedCandidate ä»ç¼“å­˜ä¸­ç§»é™¤æŒ‡å®šçš„å€™é€‰åŒºå—
//
// ğŸ¯ **ä½¿ç”¨åœºæ™¯**ï¼š
// - åŒºå—æŒ–å‡ºåï¼šç§»é™¤å·²æˆåŠŸæŒ–å‡ºçš„å€™é€‰åŒºå—
// - è¿‡æœŸæ¸…ç†ï¼šç§»é™¤è¿‡æœŸçš„å€™é€‰åŒºå—
// - åˆ†å‰å¤„ç†ï¼šç§»é™¤åˆ†å‰é“¾ä¸Šçš„æ— æ•ˆå€™é€‰åŒºå—
func (s *Service) RemoveCachedCandidate(ctx context.Context, blockHash []byte) error {
	return s.removeCachedCandidate(blockHash)
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// getCurrentChainState è·å–å½“å‰é“¾çŠ¶æ€
func (s *Service) getCurrentChainState(ctx context.Context) (height uint64, parentHash []byte, err error) {
	// ä¼˜å…ˆé€šè¿‡ QueryService æŠ½è±¡è·å–é“¾å°–ä¿¡æ¯ï¼Œé¿å…ç›´æ¥ä¾èµ–åº•å±‚å­˜å‚¨ key çº¦å®š
	if s.chainQuery != nil {
		chainInfo, err := s.chainQuery.GetChainInfo(ctx)
		// âš ï¸ å…¼å®¹ï¼šQueryService å¯èƒ½å°šæœªå°±ç»ª/è¿”å›ç©ºä¿¡æ¯ï¼ˆå•æµ‹/å¯åŠ¨æ—©æœŸå¸¸è§ï¼‰ï¼Œæ­¤æ—¶å›é€€åˆ°å­˜å‚¨é“¾å°– keyã€‚
		if err == nil && chainInfo != nil {
			// ğŸ”§ ä¿®å¤ï¼šåŒºåˆ†"é“¾ä¸ºç©º"å’Œ"é“¾ä¸Šæœ‰åˆ›ä¸–åŒºå—"ä¸¤ç§åœºæ™¯
			// åœºæ™¯1ï¼šé“¾ä¸Šè¿˜æ²¡æœ‰ä»»ä½•åŒºå—ï¼ˆè¿åˆ›ä¸–åŒºå—éƒ½æ²¡æœ‰ï¼‰
			if chainInfo.Height == 0 && len(chainInfo.BestBlockHash) == 0 {
				// ç»§ç»­èµ°å­˜å‚¨å…¼å®¹è·¯å¾„ï¼ˆä¸‹æ–¹ï¼‰ï¼Œä»¥ä¾¿è¯»å– state:chain:tipï¼ˆæµ‹è¯•/æ—§è·¯å¾„ï¼‰
			} else {
				// åœºæ™¯2ï¼šé“¾ä¸Šå·²æœ‰åŒºå—ï¼ˆé«˜åº¦>=0ï¼Œä¸”æœ‰BestBlockHashï¼‰
				if len(chainInfo.BestBlockHash) != 32 {
					return 0, nil, fmt.Errorf("æœ€ä½³åŒºå—å“ˆå¸Œé•¿åº¦é”™è¯¯: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚",
						len(chainInfo.BestBlockHash))
				}

				parentHash = make([]byte, 32)
				copy(parentHash, chainInfo.BestBlockHash)
				return chainInfo.Height, parentHash, nil
			}
		}

		// err != nil æˆ– chainInfo ç©º/æœªå°±ç»ªï¼šèµ°å­˜å‚¨å…¼å®¹è·¯å¾„
	}

	// å…¼å®¹è·¯å¾„ï¼šç›´æ¥ä» state:chain:tip è¯»å–é“¾å°–æ•°æ®ï¼ˆä»…ç”¨äºç¼ºå°‘ QueryService çš„åœºæ™¯ï¼‰
	// æ ¼å¼ï¼šheight(8å­—èŠ‚) + blockHash(32å­—èŠ‚)
	tipKey := []byte("state:chain:tip")
	tipData, err := s.storage.Get(ctx, tipKey)
	if err != nil {
		// å…¼å®¹ï¼šé“¾å°– key ä¸å­˜åœ¨æ—¶è§†ä¸ºâ€œç©ºé“¾â€ï¼Œå…è®¸ç»§ç»­æŒ–åˆ›ä¸–/é«˜åº¦1åŒºå—
		if strings.Contains(err.Error(), "key not found") {
			return 0, make([]byte, 32), nil
		}
		return 0, nil, fmt.Errorf("è¯»å–é“¾å°–æ•°æ®å¤±è´¥: %w", err)
	}
	if len(tipData) == 0 {
		// åˆ›ä¸–åŒºå—åœºæ™¯ï¼šé“¾å°–ä¸å­˜åœ¨ï¼ˆä¸æ˜¯é”™è¯¯ï¼‰
		return 0, make([]byte, 32), nil
	}

	// éªŒè¯æ•°æ®é•¿åº¦
	if len(tipData) != 40 { // 8 + 32
		return 0, nil, fmt.Errorf("é“¾å°–æ•°æ®æ ¼å¼é”™è¯¯ï¼šæœŸæœ›40å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(tipData))
	}

	// è§£æé«˜åº¦å’ŒåŒºå—å“ˆå¸Œ
	height = bytesToUint64(tipData[0:8])
	parentHash = make([]byte, 32)
	copy(parentHash, tipData[8:40])

	return height, parentHash, nil
}

// resolveChainID è§£æå¹¶ç¼“å­˜é“¾ID
//
// ğŸ¯ è®¾è®¡çº¦æŸï¼š
// - ç”Ÿäº§è·¯å¾„ä¸­ä¸å¾—é™é»˜å›é€€ä¸º 1
// - å¿…é¡»èƒ½å¤Ÿä»åˆ›ä¸–åŒºå—è§£æå‡ºé 0 çš„é“¾IDï¼Œå¦åˆ™è¿”å›é”™è¯¯
func (s *Service) resolveChainID(ctx context.Context) (uint64, error) {
	if s == nil {
		// ç†è®ºä¸Šä¸ä¼šå‘ç”Ÿï¼Œä»…ä½œä¸ºé˜²å¾¡æ€§ä»£ç ï¼Œé»˜è®¤è¿”å› 1
		return 1, nil
	}

	s.chainIDOnce.Do(func() {
		// 1) å…ˆä»é…ç½®è¯»å– ChainIDï¼ˆå•æµ‹/å·¥å…·åœºæ™¯æœªå¿…æœ‰åˆ›ä¸–åŒºå—å†™å…¥DBï¼‰
		var cfgChainID uint64
		if s.configProvider != nil {
			cfgChainID = s.configProvider.GetBlockchain().ChainID
		}
		if cfgChainID == 0 {
			s.chainIDErr = fmt.Errorf("é…ç½®é“¾IDä¸º0ï¼Œæ— æ³•è§£æé“¾ID")
			return
		}

		// 2) å°è¯•ä»åˆ›ä¸–åŒºå—è¯»å– ChainID åšä¸€è‡´æ€§æ ¡éªŒï¼›ä¸å¯ç”¨åˆ™é™çº§ç”¨é…ç½®å€¼
		if s.blockQuery == nil {
			s.chainID = cfgChainID
			if s.logger != nil {
				s.logger.Warnf("blockQuery æœªæ³¨å…¥ï¼Œæ— æ³•ä»åˆ›ä¸–åŒºå—æ ¡éªŒé“¾IDï¼Œé™çº§ä½¿ç”¨é…ç½®é“¾ID=%d", s.chainID)
			}
			return
		}

		genesis, err := s.blockQuery.GetBlockByHeight(ctx, 0)
		if err != nil || genesis == nil || genesis.Header == nil {
			s.chainID = cfgChainID
			if s.logger != nil {
				if err != nil {
					s.logger.Warnf("è·å–åˆ›ä¸–åŒºå—å¤±è´¥ï¼Œæ— æ³•æ ¡éªŒé“¾IDï¼Œé™çº§ä½¿ç”¨é…ç½®é“¾ID=%d: %v", s.chainID, err)
				} else {
					s.logger.Warnf("åˆ›ä¸–åŒºå—/åŒºå—å¤´ç¼ºå¤±ï¼Œæ— æ³•æ ¡éªŒé“¾IDï¼Œé™çº§ä½¿ç”¨é…ç½®é“¾ID=%d", s.chainID)
				}
			}
			return
		}

		if genesis.Header.ChainId == 0 {
			s.chainIDErr = fmt.Errorf("åˆ›ä¸–åŒºå—é“¾IDä¸º0ï¼Œéæ³•é…ç½®")
			if s.logger != nil {
				s.logger.Error("åˆ›ä¸–åŒºå—é“¾IDä¸º0ï¼Œéæ³•é…ç½®")
			}
			return
		}

		// 3) å›å½’æ ¡éªŒï¼šé…ç½® chain_id å¿…é¡»ä¸åˆ›ä¸– chain_id ä¸€è‡´
		if genesis.Header.ChainId != cfgChainID {
			s.chainIDErr = fmt.Errorf("chain_id ä¸ä¸€è‡´: config=%d genesis=%d", cfgChainID, genesis.Header.ChainId)
			return
		}

		s.chainID = genesis.Header.ChainId
		if s.logger != nil {
			s.logger.Debugf("âœ… æˆåŠŸä»åˆ›ä¸–åŒºå—åŠ è½½é“¾ID: %d", s.chainID)
		}
	})

	if s.chainIDErr != nil {
		// è¿”å›è§£æé“¾IDæ—¶ç¼“å­˜çš„é”™è¯¯
		return 0, s.chainIDErr
	}

	if s.chainID == 0 {
		return 0, fmt.Errorf("é“¾IDå°šæœªåˆå§‹åŒ–")
	}

	return s.chainID, nil
}

// recordCreation è®°å½•åˆ›å»ºæŒ‡æ ‡
func (s *Service) recordCreation(duration time.Duration) {
	if s == nil {
		return // é˜²æ­¢ nil æŒ‡é’ˆ
	}
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	if s.metrics == nil {
		return // é˜²æ­¢ nil æŒ‡é’ˆ
	}

	s.metrics.CandidatesCreated++
	s.metrics.LastCandidateTime = time.Now().Unix()

	// æ›´æ–°å¹³å‡åˆ›å»ºè€—æ—¶ï¼ˆæ»‘åŠ¨å¹³å‡ï¼‰
	alpha := 0.1
	newTime := duration.Seconds()
	if s.metrics.AvgCreationTime == 0 {
		s.metrics.AvgCreationTime = newTime
	} else {
		s.metrics.AvgCreationTime = alpha*newTime + (1-alpha)*s.metrics.AvgCreationTime
	}

	// æ›´æ–°æœ€å¤§åˆ›å»ºè€—æ—¶
	if newTime > s.metrics.MaxCreationTime {
		s.metrics.MaxCreationTime = newTime
	}
}

// recordCacheHit è®°å½•ç¼“å­˜å‘½ä¸­
func (s *Service) recordCacheHit() {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.CacheHits++
}

// recordCacheMiss è®°å½•ç¼“å­˜æœªå‘½ä¸­
func (s *Service) recordCacheMiss() {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.CacheMisses++
}

// recordError è®°å½•é”™è¯¯
func (s *Service) recordError(err error) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.isHealthy = false
	s.lastError = err
}

// bytesToUint64 å­—èŠ‚è½¬uint64
func bytesToUint64(b []byte) uint64 {
	if len(b) != 8 {
		return 0
	}
	return uint64(b[0])<<56 | uint64(b[1])<<48 | uint64(b[2])<<40 | uint64(b[3])<<32 |
		uint64(b[4])<<24 | uint64(b[5])<<16 | uint64(b[6])<<8 | uint64(b[7])
}

// uint64ToBytes uint64è½¬å­—èŠ‚
//
// ğŸ¯ **ç”¨é€”**ï¼š
// - ä¸ bytesToUint64 å¯¹ç§°ï¼Œç”¨äºå°† uint64 è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„
// - å¯ç”¨äºå†™å…¥é“¾çŠ¶æ€ï¼ˆå¦‚å†™å…¥é“¾å°–é«˜åº¦ï¼‰
//
// TODO: å½“éœ€è¦å°†é«˜åº¦å†™å…¥å­˜å‚¨æ—¶ä½¿ç”¨æ­¤å‡½æ•°
// nolint:U1000 // ä¿ç•™ä»¥å¤‡å°†æ¥ä½¿ç”¨ï¼ˆä¸ bytesToUint64 å¯¹ç§°ï¼‰
func uint64ToBytes(n uint64) []byte {
	b := make([]byte, 8)
	b[0] = byte(n >> 56)
	b[1] = byte(n >> 48)
	b[2] = byte(n >> 40)
	b[3] = byte(n >> 32)
	b[4] = byte(n >> 24)
	b[5] = byte(n >> 16)
	b[6] = byte(n >> 8)
	b[7] = byte(n)
	return b
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalBlockBuilder = (*Service)(nil)

// ============================================================================
// å†…å­˜ç›‘æ§æ¥å£å®ç°ï¼ˆMemoryReporterï¼‰
// ============================================================================

// ModuleName è¿”å›æ¨¡å—åç§°ï¼ˆå®ç° MemoryReporter æ¥å£ï¼‰
func (s *Service) ModuleName() string {
	return "block"
}

// CollectMemoryStats æ”¶é›†åŒºå—æ¨¡å—çš„å†…å­˜ç»Ÿè®¡ä¿¡æ¯ï¼ˆå®ç° MemoryReporter æ¥å£ï¼‰
//
// æ˜ å°„è§„åˆ™ï¼ˆæ ¹æ® memory-standards.mdï¼‰ï¼š
// - Objects: å½“å‰ç¼“å­˜çš„åŒºå—æ•°é‡ï¼ˆå€™é€‰åŒºå—ï¼‰
// - ApproxBytes: åŒºå—ç¼“å­˜æ€»ä¼°ç®— bytesï¼ˆcache size * avg block sizeï¼ŒåŸºäº proto.Size çš„æ»šåŠ¨ç»Ÿè®¡ï¼‰
// - CacheItems: block cache æ¡ç›®
// - QueueLength: å¾…å¤„ç†åŒºå—é˜Ÿåˆ—é•¿åº¦ï¼ˆå½“å‰æš‚ä¸º 0ï¼Œå› ä¸º BlockBuilder æ— é˜Ÿåˆ—ï¼‰
func (s *Service) CollectMemoryStats() metricsiface.ModuleMemoryStats {
	// è·å–ç¼“å­˜å¤§å°
	cacheSize := 0
	if s.cache != nil {
		cacheSize = s.cache.Size()
	}

	// æ ¹æ®å†…å­˜ç›‘æ§æ¨¡å¼å†³å®šæ˜¯å¦è®¡ç®— ApproxBytes
	var approxBytes int64 = 0
	mode := metricsutil.GetMemoryMonitoringMode()
	if mode != "minimal" {
		// heuristic å’Œ accurate æ¨¡å¼ï¼šä½¿ç”¨ç¼“å­˜å†…éƒ¨ç»´æŠ¤çš„å¹³å‡åŒºå—å¤§å°ï¼ˆåŸºäº proto.Size çš„æ»šåŠ¨ç»Ÿè®¡ï¼‰
		if s.cache != nil && cacheSize > 0 {
			avgSize := s.cache.AvgBlockSizeBytes()
			if avgSize > 0 {
				approxBytes = int64(cacheSize) * avgSize
			}
		}
	}

	return metricsiface.ModuleMemoryStats{
		Module:      "block",
		Layer:       "L4-CoreBusiness",
		Objects:     int64(cacheSize),
		ApproxBytes: approxBytes,
		CacheItems:  int64(cacheSize),
		QueueLength: 0, // BlockBuilder æ— é˜Ÿåˆ—
	}
}

// ShrinkCache ä¸»åŠ¨è£å‰ªå€™é€‰åŒºå—ç¼“å­˜ï¼ˆä¾› MemoryDoctor è°ƒç”¨ï¼‰
func (s *Service) ShrinkCache(targetSize int) {
	if s.cache == nil {
		return
	}
	if targetSize <= 0 {
		targetSize = 1
	}
	if s.logger != nil {
		s.logger.Warnf("MemoryDoctor è§¦å‘ BlockBuilder ç¼“å­˜æ”¶ç¼©: targetSize=%d (current=%d)",
			targetSize, s.cache.Size())
	}
	// å½“å‰ LRU ç¼“å­˜å®ç°ä¸æ”¯æŒç²¾ç¡®è°ƒæ•´å®¹é‡ï¼Œè¿™é‡Œé‡‡ç”¨å¿«é€Ÿæ¸…ç©ºçš„æ–¹å¼ï¼š
	// - æ¸…ç©ºç¼“å­˜æ•°æ®
	// - ä¿ç•™ maxSize é…ç½®ï¼Œç”±åç»­è®¿é—®é‡æ–°å¡«å……çƒ­ç‚¹å€™é€‰åŒºå—
	s.cache.Clear()
}
