// block_sync.go - åŒºå—åŒæ­¥æ ¸å¿ƒé€»è¾‘
// è´Ÿè´£æ‰§è¡ŒKæ¡¶æ™ºèƒ½åŒæ­¥å’Œåˆ†é¡µè¡¥é½åŒæ­¥
package sync

import (
	"context"
	"fmt"
	"time"

	peer "github.com/libp2p/go-libp2p/core/peer"
	"google.golang.org/protobuf/proto"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/network"
	"github.com/weisyn/v1/pkg/types"
)

// EmptyBatchError è¡¨ç¤ºç©ºæ‰¹æ¬¡çš„ç‰¹æ®Šé”™è¯¯ï¼ŒåŒ…å«è·³è·ƒä¿¡æ¯
type EmptyBatchError struct {
	StartHeight uint64
	EndHeight   uint64
	NextHeight  uint64
	Reason      string
}

func (e *EmptyBatchError) Error() string {
	return fmt.Sprintf("ç©ºæ‰¹æ¬¡è·³è·ƒ: [%d, %d] -> %d (%s)",
		e.StartHeight, e.EndHeight, e.NextHeight, e.Reason)
}

// ============================================================================
//                           Kæ¡¶æ™ºèƒ½åŒæ­¥å®ç°
// ============================================================================

// performKBucketSmartSync æ‰§è¡ŒKæ¡¶æ™ºèƒ½åŒæ­¥ï¼ˆè·å–åˆå§‹åŒºå—æ‰¹æ¬¡ï¼‰
//
// ğŸ¯ **æ™ºèƒ½åŒæ­¥ç­–ç•¥**ï¼š
// 1. å‘é€Kæ¡¶åŒæ­¥è¯·æ±‚åˆ°æœ€ä¼˜èŠ‚ç‚¹
// 2. æ¥æ”¶åˆå§‹åŒºå—æ‰¹æ¬¡æ•°æ®
// 3. éªŒè¯å“åº”çš„æœ‰æ•ˆæ€§å’Œå®Œæ•´æ€§
//
// ğŸ“ **æ³¨æ„**ï¼šæ­¤å‡½æ•°ä¸å†è¿”å›"ç½‘ç»œé«˜åº¦"ï¼Œå› ä¸ºçœŸå®çš„ç½‘ç»œé«˜åº¦åº”è¯¥é€šè¿‡
// ä¸“é—¨çš„é«˜åº¦æŸ¥è¯¢è·å¾—ï¼Œè€Œéä»åŒæ­¥å“åº”çš„NextHeightæ¨ç®—ã€‚
func performKBucketSmartSync(
	ctx context.Context,
	targetPeer peer.ID,
	localHeight uint64,
	localChainInfo *types.ChainInfo,
	networkService network.Network,
	host node.Host,
	configProvider config.Provider,
	logger log.Logger,
) (initialBlocks []*core.Block, err error) {
	if logger != nil {
		logger.Debugf("ğŸ“¡ å‘èŠ‚ç‚¹ %s å‘èµ·Kæ¡¶æ™ºèƒ½åŒæ­¥", targetPeer.String()[:8])
	}

	// è·å–æœ¬åœ°èŠ‚ç‚¹ID
	localNodeID := host.ID()

	// è·å–åŒæ­¥é…ç½®
	blockchainConfig := configProvider.GetBlockchain()
	var maxResponseSize uint32 = 5 * 1024 * 1024 // é»˜è®¤5MB
	if blockchainConfig != nil && blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
		maxResponseSize = blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
	}

	// æ„é€ Kæ¡¶åŒæ­¥è¯·æ±‚
	request := &protocol.KBucketSyncRequest{
		RequestId:       fmt.Sprintf("kbucket-sync-%d", time.Now().UnixNano()),
		LocalHeight:     localHeight,
		RoutingKey:      localChainInfo.BestBlockHash,
		MaxResponseSize: maxResponseSize,              // ä»é…ç½®è·å–
		RequesterPeerId: []byte(localNodeID.String()), // ä½¿ç”¨hostæ¥å£è·å–çœŸå®èŠ‚ç‚¹ID
		TargetHeight:    nil,                          // åŒæ­¥åˆ°æœ€æ–°é«˜åº¦
	}

	// åºåˆ—åŒ–è¯·æ±‚
	requestData, err := proto.Marshal(request)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–Kæ¡¶åŒæ­¥è¯·æ±‚å¤±è´¥: %w", err)
	}

	// é…ç½®ä¼ è¾“é€‰é¡¹ï¼ˆä»é…ç½®è·å–è¶…æ—¶å‚æ•°ï¼‰
	var connectTimeout = 15 * time.Second
	var writeTimeout = 10 * time.Second
	var readTimeout = 30 * time.Second
	var maxRetries = 2
	var retryDelay = 2 * time.Second

	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.ConnectTimeout > 0 {
			connectTimeout = blockchainConfig.Sync.Advanced.ConnectTimeout
		}
		if blockchainConfig.Sync.Advanced.WriteTimeout > 0 {
			writeTimeout = blockchainConfig.Sync.Advanced.WriteTimeout
		}
		if blockchainConfig.Sync.Advanced.ReadTimeout > 0 {
			readTimeout = blockchainConfig.Sync.Advanced.ReadTimeout
		}
		if blockchainConfig.Sync.Advanced.MaxRetryAttempts > 0 {
			maxRetries = blockchainConfig.Sync.Advanced.MaxRetryAttempts
		}
		if blockchainConfig.Sync.Advanced.RetryDelay > 0 {
			retryDelay = blockchainConfig.Sync.Advanced.RetryDelay
		}
	}

	transportOpts := &types.TransportOptions{
		ConnectTimeout: connectTimeout,
		WriteTimeout:   writeTimeout,
		ReadTimeout:    readTimeout,
		MaxRetries:     maxRetries,
		RetryDelay:     retryDelay,
		BackoffFactor:  2.0,
	}

	// å‘é€Kæ¡¶æ™ºèƒ½åŒæ­¥è¯·æ±‚
	responseData, err := networkService.Call(ctx, targetPeer, protocols.ProtocolKBucketSync, requestData, transportOpts)
	if err != nil {
		return nil, fmt.Errorf("Kæ¡¶æ™ºèƒ½åŒæ­¥è°ƒç”¨å¤±è´¥: %w", err)
	}

	// è§£æå“åº”
	var response protocol.IntelligentPaginationResponse
	if err := proto.Unmarshal(responseData, &response); err != nil {
		return nil, fmt.Errorf("è§£æKæ¡¶åŒæ­¥å“åº”å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”
	if !response.Success {
		errorMsg := "æœªçŸ¥é”™è¯¯"
		if response.ErrorMessage != nil {
			errorMsg = *response.ErrorMessage
		}
		return nil, fmt.Errorf("Kæ¡¶åŒæ­¥è¯·æ±‚å¤±è´¥: %s", errorMsg)
	}

	if response.RequestId != request.RequestId {
		return nil, fmt.Errorf("å“åº”RequestIDä¸åŒ¹é…: æœŸæœ›=%s, å®é™…=%s",
			request.RequestId, response.RequestId)
	}

	// ä½¿ç”¨protobufç»Ÿä¸€çš„åŒºå—æ ¼å¼
	blocks := response.Blocks

	if logger != nil {
		logger.Infof("âœ… Kæ¡¶æ™ºèƒ½åŒæ­¥æˆåŠŸ: æ¥æ”¶åŒºå—=%d, æ•°æ®å¤§å°=%d, NextHeight=%d",
			len(blocks), response.ActualSize, response.NextHeight)
	}

	return blocks, nil
}

// ============================================================================
//                           åˆ†é¡µè¡¥é½åŒæ­¥å®ç°
// ============================================================================

// performRangePaginatedSync æ‰§è¡Œåˆ†é¡µè¡¥é½åŒæ­¥
//
// ğŸ¯ **åˆ†é¡µåŒæ­¥ç­–ç•¥**ï¼š
// 1. æ ¹æ®å‰©ä½™é«˜åº¦èŒƒå›´è®¡ç®—éœ€è¦åŒæ­¥çš„åŒºå—
// 2. ä½¿ç”¨åˆ†é¡µæ–¹å¼è·å–åŒºå—æ•°æ®ï¼Œæ”¯æŒèŠ‚ç‚¹æ•…éšœè½¬ç§»
// 3. é€æ‰¹æ¬¡å¤„ç†å’ŒéªŒè¯åŒºå—
func performRangePaginatedSync(
	ctx context.Context,
	sourcePeers []peer.ID, // æ”¯æŒå¤šä¸ªå¤‡ç”¨èŠ‚ç‚¹çš„æ•…éšœè½¬ç§»
	currentHeight, targetHeight uint64,
	networkService network.Network,
	host node.Host,
	blockService blockchain.BlockService,
	configProvider config.Provider,
	logger log.Logger,
) error {
	if len(sourcePeers) == 0 {
		return fmt.Errorf("æ²¡æœ‰å¯ç”¨çš„æºèŠ‚ç‚¹è¿›è¡Œåˆ†é¡µåŒæ­¥")
	}

	remainingHeight := currentHeight

	// ä»é…ç½®è·å–æ‰¹æ¬¡å¤§å°å’Œæ•…éšœè½¬ç§»å‚æ•°
	batchSize := uint64(50) // é»˜è®¤50ä¸ªåŒºå—
	maxFailuresPerPeer := 3 // é»˜è®¤æ¯ä¸ªèŠ‚ç‚¹æœ€å¤šå¤±è´¥3æ¬¡

	blockchainConfig := configProvider.GetBlockchain()
	if blockchainConfig != nil {
		// è·å–æ‰¹æ¬¡å¤§å°é…ç½®
		if blockchainConfig.Sync.BatchSize > 0 {
			batchSize = uint64(blockchainConfig.Sync.BatchSize)
		} else if blockchainConfig.Sync.Advanced.MaxBatchSize > 0 {
			batchSize = uint64(blockchainConfig.Sync.Advanced.MaxBatchSize)
		}

		// è·å–æ•…éšœè½¬ç§»ç­–ç•¥å‚æ•°
		if blockchainConfig.Sync.Advanced.MaxRetryAttempts > 0 {
			maxFailuresPerPeer = blockchainConfig.Sync.Advanced.MaxRetryAttempts
		}

		// æ ¹æ®FailoverNodeCounté™åˆ¶å¯ç”¨èŠ‚ç‚¹æ•°é‡
		if blockchainConfig.Sync.Advanced.FailoverNodeCount > 0 &&
			blockchainConfig.Sync.Advanced.FailoverNodeCount < len(sourcePeers) {
			maxNodes := blockchainConfig.Sync.Advanced.FailoverNodeCount
			if maxNodes < 1 {
				maxNodes = 1
			}
			sourcePeers = sourcePeers[:maxNodes]
			if logger != nil {
				logger.Debugf("ğŸ“Š åŸºäºFailoverNodeCounté…ç½®é™åˆ¶èŠ‚ç‚¹æ•°é‡: %d", maxNodes)
			}
		}
	}

	if logger != nil {
		logger.Infof("ğŸ”„ å¼€å§‹åˆ†é¡µè¡¥é½åŒæ­¥: ä»é«˜åº¦ %d åˆ° %d (å…±%dä¸ªåŒºå—), å¯ç”¨èŠ‚ç‚¹=%d",
			currentHeight+1, targetHeight, targetHeight-currentHeight, len(sourcePeers))
		logger.Debugf("ğŸ“Š æ•…éšœè½¬ç§»é…ç½®: æ¯èŠ‚ç‚¹æœ€å¤§å¤±è´¥æ¬¡æ•°=%d, æ‰¹æ¬¡å¤§å°=%d",
			maxFailuresPerPeer, batchSize)
	}

	// æ•…éšœè½¬ç§»çŠ¶æ€ç®¡ç†
	currentPeerIndex := 0
	failedAttempts := 0

	for remainingHeight < targetHeight {
		// è®¡ç®—å½“å‰æ‰¹æ¬¡çš„ç»“æŸé«˜åº¦
		batchEndHeight := remainingHeight + batchSize
		if batchEndHeight > targetHeight {
			batchEndHeight = targetHeight
		}

		// è·å–å½“å‰æ‰¹æ¬¡çš„åŒºå—ï¼ˆæ”¯æŒæ•…éšœè½¬ç§»ï¼‰
		if currentPeerIndex >= len(sourcePeers) {
			return fmt.Errorf("æ‰€æœ‰å¤‡ç”¨èŠ‚ç‚¹éƒ½å·²å°è¯•å¤±è´¥")
		}

		currentPeer := sourcePeers[currentPeerIndex]
		blocks, err := fetchBlockRange(ctx, currentPeer, remainingHeight+1, batchEndHeight, networkService, host, configProvider, logger)
		if err != nil {
			failedAttempts++
			if logger != nil {
				logger.Warnf("ğŸ’¥ èŠ‚ç‚¹ %s è·å–åŒºå—å¤±è´¥ (å°è¯• %d/%d): %v",
					currentPeer.String()[:8], failedAttempts, maxFailuresPerPeer, err)
			}

			// æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ‡æ¢åˆ°ä¸‹ä¸€ä¸ªèŠ‚ç‚¹
			if failedAttempts >= maxFailuresPerPeer {
				currentPeerIndex++
				failedAttempts = 0
				if logger != nil {
					logger.Warnf("ğŸ”„ èŠ‚ç‚¹ %s å¤±è´¥æ¬¡æ•°è¿‡å¤šï¼Œåˆ‡æ¢åˆ°ä¸‹ä¸ªèŠ‚ç‚¹ (ç´¢å¼•: %d)",
						currentPeer.String()[:8], currentPeerIndex)
				}
				if currentPeerIndex >= len(sourcePeers) {
					return fmt.Errorf("æ‰€æœ‰å¤‡ç”¨èŠ‚ç‚¹éƒ½å·²å°è¯•å¤±è´¥ï¼Œæœ€åé”™è¯¯: %w", err)
				}
			}
			continue // é‡è¯•å½“å‰æ‰¹æ¬¡
		}

		// æˆåŠŸè·å–åŒºå—ï¼Œé‡ç½®å¤±è´¥è®¡æ•°
		failedAttempts = 0

		// å¤„ç†å½“å‰æ‰¹æ¬¡çš„åŒºå—
		err = processBlockBatch(ctx, blocks, blockService, logger)
		if err != nil {
			return fmt.Errorf("å¤„ç†åŒºå—æ‰¹æ¬¡å¤±è´¥: %w", err)
		}

		// æ›´æ–°è¿›åº¦
		processedInBatch := uint64(len(blocks))
		updateSyncProgress(processedInBatch)
		remainingHeight += processedInBatch

		if logger != nil {
			logger.Infof("ğŸ“Š åˆ†é¡µåŒæ­¥è¿›åº¦: %d/%d (%.1f%%)",
				remainingHeight, targetHeight,
				float64(remainingHeight)/float64(targetHeight)*100.0)
		}

		// æ£€æŸ¥æ˜¯å¦è¢«å–æ¶ˆ
		select {
		case <-ctx.Done():
			return fmt.Errorf("åˆ†é¡µåŒæ­¥è¢«å–æ¶ˆ: %w", ctx.Err())
		default:
			// ç»§ç»­
		}
	}

	if logger != nil {
		logger.Info("âœ… range_paginated åè®®è°ƒç”¨å®Œæˆ")
		logger.Info("ğŸ‰ åˆ†é¡µè¡¥é½åŒæ­¥åè®®æ‰§è¡ŒæˆåŠŸ")
	}

	return nil
}

// fetchBlockRange è·å–æŒ‡å®šé«˜åº¦èŒƒå›´çš„åŒºå—
//
// ğŸ¯ **æ™ºèƒ½åˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥**ï¼š
// 1. æ„é€ KBucketSyncRequestï¼ˆå¤ç”¨ä½œä¸ºRangeRequestï¼‰
// 2. ä½¿ç”¨ProtocolRangePaginatedåè®®å‘é€è¯·æ±‚
// 3. è§£æIntelligentPaginationResponseå“åº”
// 4. è¿”å›åŒºå—åˆ—è¡¨ç»™è°ƒç”¨æ–¹å¤„ç†
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼ˆè¶…æ—¶æ§åˆ¶ï¼‰
//   - sourcePeer: æºèŠ‚ç‚¹ID
//   - startHeight, endHeight: æœŸæœ›çš„åŒºå—é«˜åº¦èŒƒå›´
//   - networkService: ç½‘ç»œæœåŠ¡æ¥å£
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - []*core.Block: è·å–åˆ°çš„åŒºå—åˆ—è¡¨
//   - error: è·å–å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func fetchBlockRange(
	ctx context.Context,
	sourcePeer peer.ID,
	startHeight, endHeight uint64,
	networkService network.Network,
	host node.Host,
	configProvider config.Provider,
	logger log.Logger,
) ([]*core.Block, error) {
	if logger != nil {
		logger.Infof("ğŸ“¥ å¼€å§‹ä»èŠ‚ç‚¹ %s è·å–åŒºå—èŒƒå›´ [%d, %d] (å…±%dä¸ªåŒºå—)",
			sourcePeer.String()[:8], startHeight, endHeight, endHeight-startHeight+1)
	}

	// è·å–åŒæ­¥é…ç½®
	blockchainConfig := configProvider.GetBlockchain()
	var maxResponseSize uint32 = 5 * 1024 * 1024 // é»˜è®¤5MB
	if blockchainConfig != nil && blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
		maxResponseSize = blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
	}

	// 1. æ„é€ KBucketSyncRequestï¼ˆå¤ç”¨ä¸ºèŒƒå›´è¯·æ±‚ï¼‰
	request := &protocol.KBucketSyncRequest{
		RequestId:       fmt.Sprintf("range-sync-%d-%d", startHeight, time.Now().UnixNano()),
		LocalHeight:     startHeight - 1,                                            // æœ¬åœ°é«˜åº¦ä¸ºèµ·å§‹é«˜åº¦å‰ä¸€ä¸ª
		RoutingKey:      []byte(fmt.Sprintf("range-%d-%d", startHeight, endHeight)), // ä½¿ç”¨èŒƒå›´ä½œä¸ºè·¯ç”±é”®
		MaxResponseSize: maxResponseSize,                                            // ä»é…ç½®è·å–
		RequesterPeerId: []byte(host.ID().String()),                                 // æœ¬åœ°èŠ‚ç‚¹IDï¼ˆè¯·æ±‚è€…ï¼‰
		TargetHeight:    &endHeight,                                                 // ç›®æ ‡é«˜åº¦
	}

	// 2. åºåˆ—åŒ–è¯·æ±‚
	reqBytes, err := proto.Marshal(request)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–èŒƒå›´åŒæ­¥è¯·æ±‚å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Debugf("ğŸ“¤ å‘é€èŒƒå›´åŒæ­¥è¯·æ±‚: ID=%s, å¤§å°=%då­—èŠ‚", request.RequestId, len(reqBytes))
	}

	// 3. é…ç½®ä¼ è¾“é€‰é¡¹ï¼ˆä»é…ç½®è·å–ï¼‰
	var connectTimeout = 10 * time.Second
	var writeTimeout = 15 * time.Second
	var readTimeout = 30 * time.Second
	var maxRetries = 2
	var retryDelay = 1 * time.Second

	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.ConnectTimeout > 0 {
			connectTimeout = blockchainConfig.Sync.Advanced.ConnectTimeout
		}
		if blockchainConfig.Sync.Advanced.WriteTimeout > 0 {
			writeTimeout = blockchainConfig.Sync.Advanced.WriteTimeout
		}
		if blockchainConfig.Sync.Advanced.ReadTimeout > 0 {
			readTimeout = blockchainConfig.Sync.Advanced.ReadTimeout
		}
		if blockchainConfig.Sync.Advanced.MaxRetryAttempts > 0 {
			maxRetries = blockchainConfig.Sync.Advanced.MaxRetryAttempts
		}
		if blockchainConfig.Sync.Advanced.RetryDelay > 0 {
			retryDelay = blockchainConfig.Sync.Advanced.RetryDelay
		}
	}

	// 4. å‘é€åè®®è¯·æ±‚
	responseBytes, err := networkService.Call(
		ctx,
		sourcePeer,
		protocols.ProtocolRangePaginated,
		reqBytes,
		&types.TransportOptions{
			ConnectTimeout: connectTimeout,
			WriteTimeout:   writeTimeout,
			ReadTimeout:    readTimeout,
			MaxRetries:     maxRetries,
			RetryDelay:     retryDelay,
		},
	)
	if err != nil {
		return nil, fmt.Errorf("å‘é€èŒƒå›´åŒæ­¥è¯·æ±‚å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Debugf("ğŸ“¦ æ”¶åˆ°èŒƒå›´åŒæ­¥å“åº”: å¤§å°=%då­—èŠ‚", len(responseBytes))
	}

	// 4. è§£æIntelligentPaginationResponse
	response := &protocol.IntelligentPaginationResponse{}
	if err := proto.Unmarshal(responseBytes, response); err != nil {
		return nil, fmt.Errorf("è§£æèŒƒå›´åŒæ­¥å“åº”å¤±è´¥: %w", err)
	}

	// 5. æ£€æŸ¥å“åº”çŠ¶æ€
	if !response.Success {
		errorMsg := "æœªçŸ¥é”™è¯¯"
		if response.ErrorMessage != nil {
			errorMsg = *response.ErrorMessage
		}
		return nil, fmt.Errorf("å¯¹ç«¯å¤„ç†å¤±è´¥: %s", errorMsg)
	}

	// 6. éªŒè¯å“åº”å†…å®¹
	if response.RequestId != request.RequestId {
		return nil, fmt.Errorf("å“åº”IDä¸åŒ¹é…: æœŸæœ›=%s, å®é™…=%s", request.RequestId, response.RequestId)
	}

	blocks := response.Blocks
	if len(blocks) == 0 {
		if logger != nil {
			logger.Warnf("âš ï¸ èŠ‚ç‚¹ %s è¿”å›ç©ºåŒºå—åˆ—è¡¨ (èŒƒå›´ [%d, %d]), NextHeight=%d",
				sourcePeer.String()[:8], startHeight, endHeight, response.NextHeight)
		}

		// ğŸ”§ **ç©ºæ‰¹æ¬¡å¤„ç†ç­–ç•¥**ï¼š
		// å¦‚æœå¯¹ç«¯è¿”å›ç©ºåŒºå—ä½†æä¾›äº†NextHeightï¼Œè¯´æ˜å¯ä»¥è·³è¿‡å½“å‰èŒƒå›´
		if response.NextHeight > startHeight {
			// è¿”å›ç‰¹æ®Šçš„"ç©ºè·³è·ƒ"ç»“æœï¼Œè®©ä¸Šå±‚èƒ½æ ¹æ®NextHeightæ¨è¿›
			return []*core.Block{}, &EmptyBatchError{
				StartHeight: startHeight,
				EndHeight:   endHeight,
				NextHeight:  response.NextHeight,
				Reason:      response.PaginationReason,
			}
		}

		// NextHeightæœªå‰è¿›ï¼Œè¯´æ˜èŠ‚ç‚¹å¯èƒ½æœ‰é—®é¢˜
		return []*core.Block{}, fmt.Errorf("èŠ‚ç‚¹è¿”å›ç©ºæ‰¹æ¬¡ä¸”æœªæä¾›æœ‰æ•ˆçš„NextHeight: start=%d, next=%d",
			startHeight, response.NextHeight)
	}

	// 7. éªŒè¯åŒºå—é«˜åº¦è¿ç»­æ€§
	if err := validateBlockSequence(blocks, startHeight, logger); err != nil {
		return nil, fmt.Errorf("åŒºå—åºåˆ—éªŒè¯å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("âœ… æˆåŠŸè·å–åŒºå—èŒƒå›´ [%d, %d]: è¿”å›%dä¸ªåŒºå—, å¤§å°=%då­—èŠ‚, åˆ†é¡µ=%s",
			startHeight, endHeight, len(blocks), response.ActualSize, response.PaginationReason)

		if response.HasMore {
			logger.Infof("ğŸ“„ è¿˜æœ‰æ›´å¤šæ•°æ®ï¼Œä¸‹æ¬¡è¯·æ±‚é«˜åº¦: %d", response.NextHeight)
		}
	}

	return blocks, nil
}

// validateBlockSequence éªŒè¯åŒºå—åºåˆ—çš„è¿ç»­æ€§å’Œæœ‰æ•ˆæ€§
func validateBlockSequence(blocks []*core.Block, expectedStartHeight uint64, logger log.Logger) error {
	if len(blocks) == 0 {
		return nil // ç©ºåºåˆ—æ— éœ€éªŒè¯
	}

	// æ£€æŸ¥ç¬¬ä¸€ä¸ªåŒºå—é«˜åº¦
	firstBlock := blocks[0]
	if firstBlock.Header.Height != expectedStartHeight {
		return fmt.Errorf("é¦–ä¸ªåŒºå—é«˜åº¦ä¸åŒ¹é…: æœŸæœ›=%d, å®é™…=%d",
			expectedStartHeight, firstBlock.Header.Height)
	}

	// æ£€æŸ¥åŒºå—é«˜åº¦è¿ç»­æ€§
	for i := 1; i < len(blocks); i++ {
		prevHeight := blocks[i-1].Header.Height
		currentHeight := blocks[i].Header.Height

		if currentHeight != prevHeight+1 {
			return fmt.Errorf("åŒºå—é«˜åº¦ä¸è¿ç»­: ä½ç½®%d height=%d, ä½ç½®%d height=%d",
				i-1, prevHeight, i, currentHeight)
		}
	}

	if logger != nil {
		logger.Debugf("âœ… åŒºå—åºåˆ—éªŒè¯é€šè¿‡: é«˜åº¦èŒƒå›´ [%d, %d]",
			blocks[0].Header.Height, blocks[len(blocks)-1].Header.Height)
	}

	return nil
}

// ============================================================================
//                           åŒºå—æ‰¹å¤„ç†å®ç°
// ============================================================================

// processBlockBatch å¤„ç†åŒºå—æ‰¹æ¬¡
//
// ğŸ¯ **åŒºå—å¤„ç†ç­–ç•¥**ï¼š
// 1. é€ä¸ªéªŒè¯åŒºå—çš„æœ‰æ•ˆæ€§
// 2. éªŒè¯é€šè¿‡åå¤„ç†åŒºå—ï¼ˆåº”ç”¨çŠ¶æ€å˜æ›´ï¼‰
// 3. è®°å½•å¤„ç†ç»“æœå’Œé”™è¯¯ä¿¡æ¯
func processBlockBatch(
	ctx context.Context,
	blocks []*core.Block,
	blockService blockchain.BlockService,
	logger log.Logger,
) error {
	if len(blocks) == 0 {
		return nil // ç©ºæ‰¹æ¬¡ï¼Œç›´æ¥è¿”å›
	}

	if logger != nil {
		logger.Infof("ğŸ”¨ å¼€å§‹å¤„ç†åŒºå—æ‰¹æ¬¡: %d ä¸ªåŒºå—", len(blocks))
	}

	for i, block := range blocks {
		// æ£€æŸ¥å–æ¶ˆä¿¡å·
		select {
		case <-ctx.Done():
			return fmt.Errorf("åŒºå—å¤„ç†è¢«å–æ¶ˆ: %w", ctx.Err())
		default:
			// ç»§ç»­å¤„ç†
		}

		// éªŒè¯åŒºå—ï¼ˆå§”æ‰˜ç»™BlockServiceï¼Œé¿å…é‡å¤éªŒè¯é€»è¾‘ï¼‰
		valid, err := blockService.ValidateBlock(ctx, block)
		if err != nil {
			return fmt.Errorf("éªŒè¯åŒºå— %d å¤±è´¥: %w", block.Header.Height, err)
		}

		if !valid {
			return fmt.Errorf("åŒºå— %d éªŒè¯å¤±è´¥ï¼šåŒºå—æ— æ•ˆ", block.Header.Height)
		}

		// å¤„ç†åŒºå—ï¼ˆå§”æ‰˜ç»™BlockServiceï¼‰
		err = blockService.ProcessBlock(ctx, block)
		if err != nil {
			return fmt.Errorf("å¤„ç†åŒºå— %d å¤±è´¥: %w", block.Header.Height, err)
		}

		if logger != nil {
			logger.Debugf("âœ… åŒºå— %d å¤„ç†æˆåŠŸ (%d/%d)",
				block.Header.Height, i+1, len(blocks))
		}
	}

	if logger != nil {
		logger.Infof("âœ… åŒºå—æ‰¹æ¬¡å¤„ç†å®Œæˆ: %d ä¸ªåŒºå—", len(blocks))
	}

	return nil
}
