// Package network_handler å®ç°åŒæ­¥æ¨¡å—çš„ç½‘ç»œåè®®å¤„ç†æœåŠ¡
//
// ğŸ¯ **åŒæ­¥ç½‘ç»œåè®®å¤„ç†æœåŠ¡æ¨¡å—**
//
// æœ¬åŒ…å®ç° SyncProtocolRouter æ¥å£ï¼Œæä¾›åŒæ­¥ç½‘ç»œåè®®å¤„ç†åŠŸèƒ½ï¼š
// - å®ç° HandleKBucketSync æ¥å£ï¼ˆKæ¡¶åŒæ­¥åè®®å¤„ç†ï¼‰
// - å®ç° HandleRangePaginated æ¥å£ï¼ˆåˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥åè®®å¤„ç†ï¼‰
// - æ”¯æŒåŒºå—é“¾æ•°æ®çš„é«˜æ•ˆåŒæ­¥ä¼ è¾“
package network_handler

import (
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	peer "github.com/libp2p/go-libp2p/core/peer"
	"google.golang.org/protobuf/proto"
)

// SyncNetworkHandler åŒæ­¥ç½‘ç»œåè®®å¤„ç†å™¨å®ç°ï¼ˆè–„å§”æ‰˜å±‚ï¼‰
//
// ğŸ¯ **èŒè´£å®šä½**ï¼š
// - å®ç° integration/network.SyncProtocolRouter æ¥å£ï¼ˆæµå¼åè®®ï¼‰
// - å¤„ç†æ¥è‡ªå…¶ä»–èŠ‚ç‚¹çš„Kæ¡¶åŒæ­¥è¯·æ±‚
// - å¤„ç†æ¥è‡ªå…¶ä»–èŠ‚ç‚¹çš„åˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥è¯·æ±‚
// - æ‰§è¡Œï¼šè§£ç  â†’ æŸ¥è¯¢ â†’ ç¼–ç  â†’ å“åº”çš„å®Œæ•´æµç¨‹
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - éµå¾ªManagerå§”æ‰˜æ¨¡å¼ï¼Œä½œä¸ºsyncåŸŸçš„ç½‘ç»œå­æ¨¡å—
// - ç»Ÿä¸€å½’å£å¤„ç†æ‰€æœ‰åŒæ­¥ç›¸å…³çš„ç½‘ç»œæ¶ˆæ¯
// - ä½¿ç”¨protobufæ ‡å‡†åè®®ï¼Œç¡®ä¿æ•°æ®ä¸€è‡´æ€§
// - ä¸¥æ ¼éµå¾ªå…¬å…±æ¥å£ï¼Œä¸ç›´æ¥è°ƒç”¨å†…éƒ¨å®ç°
type SyncNetworkHandler struct {
	logger            log.Logger                   // æ—¥å¿—æœåŠ¡
	chainService      blockchain.ChainService      // åŒºå—é“¾æœåŠ¡ï¼Œç”¨äºæŸ¥è¯¢æœ¬åœ°çŠ¶æ€
	repositoryManager repository.RepositoryManager // æ•°æ®å­˜å‚¨ç®¡ç†å™¨ï¼Œç”¨äºæŸ¥è¯¢åŒºå—æ•°æ®ï¼ˆåªè¯»è®¿é—®ï¼‰
	configProvider    config.Provider              // é…ç½®æä¾›å™¨

	// ç»Ÿè®¡ä¿¡æ¯
	kbucketRequestCount   uint64 // Kæ¡¶åŒæ­¥è¯·æ±‚è®¡æ•°
	rangeRequestCount     uint64 // èŒƒå›´åŒæ­¥è¯·æ±‚è®¡æ•°
	totalBytesTransmitted uint64 // ä¼ è¾“å­—èŠ‚æ€»æ•°
}

// NewSyncNetworkHandler åˆ›å»ºåŒæ­¥ç½‘ç»œåè®®å¤„ç†å™¨å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å‡½æ•°**ï¼š
// åˆ›å»ºSyncNetworkHandlerå®ä¾‹ï¼Œæ³¨å…¥å¿…è¦çš„ä¾èµ–ã€‚
//
// å‚æ•°ï¼š
//   - logger: æ—¥å¿—æœåŠ¡ï¼Œç”¨äºè®°å½•å¤„ç†è¿‡ç¨‹
//   - chainService: åŒºå—é“¾æœåŠ¡ï¼Œç”¨äºæŸ¥è¯¢æœ¬åœ°çŠ¶æ€
//   - repositoryManager: æ•°æ®å­˜å‚¨ç®¡ç†å™¨ï¼Œç”¨äºæŸ¥è¯¢åŒºå—æ•°æ®ï¼ˆåªè¯»è®¿é—®ï¼‰
//   - configProvider: é…ç½®æä¾›å™¨ï¼Œç”¨äºè·å–åŒæ­¥é…ç½®å‚æ•°
//
// è¿”å›ï¼š
//   - *SyncNetworkHandler: åŒæ­¥ç½‘ç»œåè®®å¤„ç†å™¨å®ä¾‹
func NewSyncNetworkHandler(logger log.Logger, chainService blockchain.ChainService, repositoryManager repository.RepositoryManager, configProvider config.Provider) *SyncNetworkHandler {
	return &SyncNetworkHandler{
		logger:            logger,
		chainService:      chainService,
		repositoryManager: repositoryManager,
		configProvider:    configProvider,
	}
}

// HandleKBucketSync å¤„ç†Kæ¡¶åŒæ­¥åè®®è¯·æ±‚
//
// ğŸ¯ **å®ç° integration/network.SyncProtocolRouter æ¥å£**
//
// å¤„ç†æµç¨‹ï¼š
// 1. è§£æKæ¡¶åŒæ­¥è¯·æ±‚æ•°æ®ï¼ˆåŒ…å«è¯·æ±‚èŠ‚ç‚¹ä¿¡æ¯ï¼‰
// 2. éªŒè¯è¯·æ±‚çš„å®Œæ•´æ€§å’Œæ ¼å¼
// 3. æŸ¥è¯¢æœ¬åœ°åŒºå—é«˜åº¦å’Œç½‘ç»œçŠ¶æ€ä¿¡æ¯
// 4. æ„é€ æ™ºèƒ½åˆ†é¡µå“åº”æ•°æ®
// 5. åºåˆ—åŒ–å“åº”å¹¶è¿”å›
//
// ğŸ“ **Kæ¡¶åŒæ­¥ç‰¹æ€§**ï¼š
// - åŸºäºKademliaè·ç¦»è®¡ç®—çš„æ™ºèƒ½èŠ‚ç‚¹é€‰æ‹©
// - é«˜æ•ˆçš„ç½‘ç»œæ‹“æ‰‘æ„ŸçŸ¥åŒæ­¥
// - æ”¯æŒåˆ†å±‚çš„P2Pç½‘ç»œæ¶æ„
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼ˆç”¨äºè¶…æ—¶æ§åˆ¶ï¼‰
//   - from: è¯·æ±‚æ¥æºèŠ‚ç‚¹ID
//   - reqBytes: åºåˆ—åŒ–çš„Kæ¡¶åŒæ­¥è¯·æ±‚æ•°æ®
//
// è¿”å›ï¼š
//   - []byte: åºåˆ—åŒ–çš„æ™ºèƒ½åˆ†é¡µå“åº”æ•°æ®
//   - error: å¤„ç†å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (h *SyncNetworkHandler) HandleKBucketSync(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	h.kbucketRequestCount++

	if h.logger != nil {
		h.logger.Debugf("[SyncNetworkHandler] ğŸ“š æ”¶åˆ°Kæ¡¶åŒæ­¥è¯·æ±‚: from=%s, size=%d bytes",
			from.String()[:8], len(reqBytes))
	}

	// 1. è§£æKBucketSyncRequest protobufæ¶ˆæ¯
	request := &protocol.KBucketSyncRequest{}
	if err := proto.Unmarshal(reqBytes, request); err != nil {
		if h.logger != nil {
			h.logger.Errorf("è§£æKæ¡¶åŒæ­¥è¯·æ±‚å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "è§£æè¯·æ±‚å¤±è´¥", fmt.Sprintf("protobufè§£æé”™è¯¯: %v", err))
	}

	// 2. æŸ¥è¯¢æœ¬åœ°åŒºå—é“¾é«˜åº¦å’ŒçŠ¶æ€
	chainInfo, err := h.chainService.GetChainInfo(ctx)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("æŸ¥è¯¢æœ¬åœ°é“¾çŠ¶æ€å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "é“¾çŠ¶æ€æŸ¥è¯¢å¤±è´¥", err.Error())
	}

	// 3. æ£€æŸ¥æ˜¯å¦ä¸ºé«˜åº¦æŸ¥è¯¢è¯·æ±‚
	isHeightQuery := (request.LocalHeight == 0 && string(request.RoutingKey) == "height-query")

	if isHeightQuery {
		// é«˜åº¦æŸ¥è¯¢ï¼šè¿”å›æœ¬åœ°é«˜åº¦ä¿¡æ¯ï¼Œä¸æä¾›åŒºå—æ•°æ®
		if h.logger != nil {
			h.logger.Debugf("å¤„ç†é«˜åº¦æŸ¥è¯¢è¯·æ±‚: æœ¬åœ°é«˜åº¦=%d", chainInfo.Height)
		}
		return h.createHeightQueryResponse(request.RequestId, chainInfo.Height)
	}

	// 4. å¤„ç†æ ‡å‡†Kæ¡¶åŒæ­¥è¯·æ±‚
	if h.logger != nil {
		h.logger.Debugf("å¤„ç†Kæ¡¶åŒæ­¥è¯·æ±‚: è¯·æ±‚é«˜åº¦=%d, æœ¬åœ°é«˜åº¦=%d", request.LocalHeight, chainInfo.Height)
	}

	// 4.1 åˆ¤æ–­æ˜¯å¦éœ€è¦æä¾›åŒºå—æ•°æ®
	if request.LocalHeight >= chainInfo.Height {
		// è¯·æ±‚è€…å·²æ˜¯æœ€æ–°æˆ–æ›´æ–°ï¼Œè¿”å›ç©ºå“åº”
		if h.logger != nil {
			h.logger.Debugf("è¯·æ±‚è€…å·²æ˜¯æœ€æ–°: æœ¬åœ°é«˜åº¦=%d >= é“¾é«˜åº¦=%d",
				request.LocalHeight, chainInfo.Height)
		}
		return h.createEmptyResponse(request.RequestId, chainInfo.Height)
	}

	// 4.2 ä½¿ç”¨æ™ºèƒ½åˆ†é¡µé€»è¾‘æ„å»ºåŒºå—å“åº”
	startHeight := request.LocalHeight + 1
	targetHeight := chainInfo.Height
	if request.TargetHeight != nil && *request.TargetHeight < chainInfo.Height {
		targetHeight = *request.TargetHeight
	}

	maxResponseSize := request.MaxResponseSize
	if maxResponseSize == 0 {
		// ğŸ”§ **ç»Ÿä¸€æœåŠ¡ç«¯å“åº”å¤§å°é…ç½®**ï¼šä¼˜å…ˆä»é…ç½®è·å–ï¼Œç¡®ä¿å®¢æˆ·ç«¯/æœåŠ¡ç«¯ç­–ç•¥ä¸€è‡´
		maxResponseSize = 2 * 1024 * 1024 // å…œåº•é»˜è®¤å€¼ï¼š2MBï¼ˆKBucketåŒæ­¥è¾ƒå°å“åº”ï¼‰
		if h.configProvider != nil {
			blockchainConfig := h.configProvider.GetBlockchain()
			if blockchainConfig != nil && blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
				maxResponseSize = blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
				if h.logger != nil {
					h.logger.Debugf("ğŸ“Š ä»é…ç½®è·å–KBucketå“åº”å¤§å°é™åˆ¶: %d å­—èŠ‚", maxResponseSize)
				}
			}
		}
	}

	blocks, nextHeight, hasMore, actualSize, paginationReason := h.buildBlockBatch(
		ctx, startHeight, targetHeight, maxResponseSize)

	// 4.3 æ„é€ Kæ¡¶åŒæ­¥å“åº”ï¼ˆä½¿ç”¨ç›¸åŒçš„protobufç»“æ„ï¼‰
	response := &protocol.IntelligentPaginationResponse{
		RequestId:        request.RequestId,
		Blocks:           blocks,
		NextHeight:       nextHeight,
		HasMore:          hasMore,
		ActualSize:       actualSize,
		PaginationReason: fmt.Sprintf("KBUCKET_SYNC_%s", paginationReason),
		Success:          true,
		ErrorMessage:     nil,
	}

	responseData, err := proto.Marshal(response)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("åºåˆ—åŒ–Kæ¡¶å“åº”å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "å“åº”åºåˆ—åŒ–å¤±è´¥", err.Error())
	}

	h.totalBytesTransmitted += uint64(len(responseData))

	if h.logger != nil {
		h.logger.Infof("âœ… [SyncNetworkHandler] Kæ¡¶åŒæ­¥è¯·æ±‚å¤„ç†å®Œæˆ: from=%s, response_size=%d",
			from.String()[:8], len(responseData))
	}

	return responseData, nil
}

// HandleRangePaginated å¤„ç†åˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥åè®®è¯·æ±‚
//
// ğŸ¯ **å®ç° integration/network.SyncProtocolRouter æ¥å£**
//
// å¤„ç†æµç¨‹ï¼š
// 1. è§£æåˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥è¯·æ±‚ï¼ˆèµ·å§‹é«˜åº¦ã€ç»“æŸé«˜åº¦ã€é¡µå¤§å°ï¼‰
// 2. éªŒè¯è¯·æ±‚å‚æ•°çš„åˆæ³•æ€§ï¼ˆé«˜åº¦èŒƒå›´ã€é¡µå¤§å°é™åˆ¶ï¼‰
// 3. æŸ¥è¯¢æŒ‡å®šèŒƒå›´å†…çš„åŒºå—æ•°æ®
// 4. åˆ†é¡µå¤„ç†åŒºå—æ•°æ®ï¼Œæ”¯æŒå¤§èŒƒå›´æŸ¥è¯¢
// 5. æ„é€ æ™ºèƒ½åˆ†é¡µå“åº”ï¼ŒåŒ…å«åŒºå—æ•°æ®å’Œåˆ†é¡µä¿¡æ¯
//
// ğŸ“ **åˆ†é¡µåŒæ­¥ç‰¹æ€§**ï¼š
// - æ”¯æŒå¤§èŒƒå›´åŒºå—æ•°æ®æŸ¥è¯¢
// - æ™ºèƒ½åˆ†é¡µæœºåˆ¶ï¼Œé¿å…å•æ¬¡ä¼ è¾“è¿‡å¤§
// - æ–­ç‚¹ç»­ä¼ æ”¯æŒï¼Œæé«˜åŒæ­¥æ•ˆç‡
// - ç½‘ç»œå‹å¥½çš„æ‰¹é‡ä¼ è¾“ä¼˜åŒ–
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼ˆç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆï¼‰
//   - from: è¯·æ±‚æ¥æºèŠ‚ç‚¹ID
//   - reqBytes: åºåˆ—åŒ–çš„åˆ†é¡µèŒƒå›´åŒæ­¥è¯·æ±‚æ•°æ®
//
// è¿”å›ï¼š
//   - []byte: åºåˆ—åŒ–çš„æ™ºèƒ½åˆ†é¡µå“åº”æ•°æ®ï¼ˆåŒ…å«åŒºå—æ•°æ®ï¼‰
//   - error: å¤„ç†å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (h *SyncNetworkHandler) HandleRangePaginated(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	h.rangeRequestCount++

	if h.logger != nil {
		h.logger.Debugf("[SyncNetworkHandler] ğŸ“„ æ”¶åˆ°åˆ†é¡µåŒºå—èŒƒå›´åŒæ­¥è¯·æ±‚: from=%s, size=%d bytes",
			from.String()[:8], len(reqBytes))
	}

	// 1. è§£æKBucketSyncRequest protobufæ¶ˆæ¯ï¼ˆå¤ç”¨ç›¸åŒè¯·æ±‚æ ¼å¼ï¼‰
	request := &protocol.KBucketSyncRequest{}
	if err := proto.Unmarshal(reqBytes, request); err != nil {
		if h.logger != nil {
			h.logger.Errorf("è§£æåˆ†é¡µåŒæ­¥è¯·æ±‚å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "è§£æè¯·æ±‚å¤±è´¥", fmt.Sprintf("protobufè§£æé”™è¯¯: %v", err))
	}

	// 2. æŸ¥è¯¢æœ¬åœ°åŒºå—é“¾çŠ¶æ€
	chainInfo, err := h.chainService.GetChainInfo(ctx)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("æŸ¥è¯¢æœ¬åœ°é“¾çŠ¶æ€å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "é“¾çŠ¶æ€æŸ¥è¯¢å¤±è´¥", err.Error())
	}

	// 3. éªŒè¯è¯·æ±‚çš„é«˜åº¦èŒƒå›´åˆæ³•æ€§
	startHeight := request.LocalHeight + 1 // è¯·æ±‚è€…çš„ä¸‹ä¸€ä¸ªé«˜åº¦
	targetHeight := chainInfo.Height       // æœ¬åœ°æœ€æ–°é«˜åº¦

	if request.TargetHeight != nil && *request.TargetHeight < targetHeight {
		targetHeight = *request.TargetHeight // ä½¿ç”¨è¯·æ±‚çš„ç›®æ ‡é«˜åº¦
	}

	if startHeight > targetHeight {
		// è¯·æ±‚è€…å·²æ˜¯æœ€æ–°ï¼Œè¿”å›ç©ºå“åº”
		if h.logger != nil {
			h.logger.Debugf("è¯·æ±‚è€… %s å·²æ˜¯æœ€æ–°: è¯·æ±‚é«˜åº¦=%d, æœ¬åœ°é«˜åº¦=%d",
				from.String()[:8], startHeight, targetHeight)
		}
		return h.createEmptyResponse(request.RequestId, startHeight)
	}

	// 4. å®æ–½æ™ºèƒ½åˆ†é¡µé€»è¾‘
	maxResponseSize := request.MaxResponseSize
	if maxResponseSize == 0 {
		// ğŸ”§ **ç»Ÿä¸€æœåŠ¡ç«¯å“åº”å¤§å°é…ç½®**ï¼šä¼˜å…ˆä»é…ç½®è·å–ï¼Œç¡®ä¿å®¢æˆ·ç«¯/æœåŠ¡ç«¯ç­–ç•¥ä¸€è‡´
		maxResponseSize = 5 * 1024 * 1024 // å…œåº•é»˜è®¤å€¼ï¼š5MBï¼ˆèŒƒå›´åˆ†é¡µéœ€è¦æ›´å¤§å“åº”ï¼‰
		if h.configProvider != nil {
			blockchainConfig := h.configProvider.GetBlockchain()
			if blockchainConfig != nil && blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
				maxResponseSize = blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
				if h.logger != nil {
					h.logger.Debugf("ğŸ“Š ä»é…ç½®è·å–èŒƒå›´åˆ†é¡µå“åº”å¤§å°é™åˆ¶: %d å­—èŠ‚", maxResponseSize)
				}
			}
		}
	}

	blocks, nextHeight, hasMore, actualSize, paginationReason := h.buildBlockBatch(
		ctx, startHeight, targetHeight, maxResponseSize)

	// 5. æ„é€ IntelligentPaginationResponse
	response := &protocol.IntelligentPaginationResponse{
		RequestId:        request.RequestId,
		Blocks:           blocks,
		NextHeight:       nextHeight,
		HasMore:          hasMore,
		ActualSize:       actualSize,
		PaginationReason: paginationReason,
		Success:          true,
		ErrorMessage:     nil,
	}

	// 6. åºåˆ—åŒ–å¹¶è¿”å›å“åº”æ•°æ®
	responseData, err := proto.Marshal(response)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("åºåˆ—åŒ–åˆ†é¡µå“åº”å¤±è´¥: %v", err)
		}
		return h.createErrorResponse(request.RequestId, "å“åº”åºåˆ—åŒ–å¤±è´¥", err.Error())
	}

	h.totalBytesTransmitted += uint64(len(responseData))

	if h.logger != nil {
		h.logger.Infof("âœ… [SyncNetworkHandler] åˆ†é¡µèŒƒå›´åŒæ­¥è¯·æ±‚å¤„ç†å®Œæˆ: from=%s, response_size=%d",
			from.String()[:8], len(responseData))
	}

	return responseData, nil
}

// ============================================================================
//                              å“åº”åˆ›å»ºè¾…åŠ©æ–¹æ³•
// ============================================================================

// createErrorResponse åˆ›å»ºé”™è¯¯å“åº”
func (h *SyncNetworkHandler) createErrorResponse(requestId, reason, detail string) ([]byte, error) {
	response := &protocol.IntelligentPaginationResponse{
		RequestId:    requestId,
		Blocks:       []*core.Block{},
		NextHeight:   0,
		HasMore:      false,
		ActualSize:   0,
		Success:      false,
		ErrorMessage: &detail,
	}

	return proto.Marshal(response)
}

// createEmptyResponse åˆ›å»ºç©ºå“åº”ï¼ˆæ²¡æœ‰æ–°åŒºå—ï¼‰
func (h *SyncNetworkHandler) createEmptyResponse(requestId string, nextHeight uint64) ([]byte, error) {
	response := &protocol.IntelligentPaginationResponse{
		RequestId:        requestId,
		Blocks:           []*core.Block{},
		NextHeight:       nextHeight,
		HasMore:          false,
		ActualSize:       0,
		PaginationReason: "NO_NEW_BLOCKS",
		Success:          true,
		ErrorMessage:     nil,
	}

	return proto.Marshal(response)
}

// buildBlockBatch æ„å»ºåŒºå—æ‰¹æ¬¡ï¼ˆæ™ºèƒ½åˆ†é¡µé€»è¾‘ï¼‰
//
// ğŸ¯ **æ™ºèƒ½åˆ†é¡µç®—æ³•**ï¼š
// 1. ä»startHeightå¼€å§‹é€ä¸ªæŸ¥è¯¢åŒºå—
// 2. ç´¯ç§¯åŒºå—å¤§å°ï¼Œç›´åˆ°æ¥è¿‘maxResponseSizeé™åˆ¶
// 3. è‡³å°‘è¿”å›1ä¸ªåŒºå—ï¼Œç¡®ä¿åŒæ­¥è¿›å±•
// 4. è¿”å›åŒºå—åˆ—è¡¨å’Œåˆ†é¡µä¿¡æ¯
//
// ğŸ“‹ **ä½¿ç”¨repository.RepositoryManagerè¿›è¡ŒåŒºå—æŸ¥è¯¢**ï¼š
// - ä¸¥æ ¼éµå¾ªå•ä¸€æ•°æ®æºåŸåˆ™ï¼Œé€šè¿‡repositoryå±‚è·å–åŒºå—æ•°æ®
// - æ”¯æŒæ™ºèƒ½åˆ†é¡µï¼Œæ ¹æ®åŒºå—å¤§å°åŠ¨æ€è°ƒæ•´æ‰¹æ¬¡
// - ç¡®ä¿ç½‘ç»œä¼ è¾“æ•ˆç‡å’Œèµ„æºä½¿ç”¨çš„å¹³è¡¡
func (h *SyncNetworkHandler) buildBlockBatch(
	ctx context.Context,
	startHeight, targetHeight uint64,
	maxResponseSize uint32,
) ([]*core.Block, uint64, bool, uint32, string) {

	var blocks []*core.Block
	var actualSize uint32
	paginationReason := "NORMAL_BATCH"

	if h.logger != nil {
		h.logger.Debugf("ğŸ“„ æ„å»ºåŒºå—æ‰¹æ¬¡: èŒƒå›´[%d, %d], å¤§å°é™åˆ¶=%då­—èŠ‚",
			startHeight, targetHeight, maxResponseSize)
	}

	// æ™ºèƒ½åˆ†é¡µé€»è¾‘ï¼šé€ä¸ªè·å–åŒºå—ï¼Œç›´åˆ°æ¥è¿‘å¤§å°é™åˆ¶
	currentHeight := startHeight
	for currentHeight <= targetHeight {
		// ä½¿ç”¨repository.RepositoryManagerè·å–å•ä¸ªåŒºå—
		block, err := h.repositoryManager.GetBlockByHeight(ctx, currentHeight)
		if err != nil {
			if h.logger != nil {
				h.logger.Warnf("è·å–åŒºå—å¤±è´¥: é«˜åº¦=%d, é”™è¯¯=%v", currentHeight, err)
			}
			// åŒºå—è·å–å¤±è´¥ï¼Œç»“æŸæ‰¹æ¬¡æ„å»º
			break
		}

		// è®¡ç®—åŒºå—åºåˆ—åŒ–å¤§å°
		blockBytes, err := proto.Marshal(block)
		if err != nil {
			if h.logger != nil {
				h.logger.Warnf("åŒºå—åºåˆ—åŒ–å¤±è´¥: é«˜åº¦=%d, é”™è¯¯=%v", currentHeight, err)
			}
			currentHeight++
			continue
		}

		blockSize := uint32(len(blockBytes))

		// æ£€æŸ¥æ˜¯å¦ä¼šè¶…è¿‡å¤§å°é™åˆ¶
		if len(blocks) > 0 && actualSize+blockSize > maxResponseSize {
			// å·²æœ‰åŒºå—ä¸”ä¼šè¶…è¿‡é™åˆ¶ï¼Œåœæ­¢æ·»åŠ 
			paginationReason = "SIZE_LIMIT_REACHED"
			break
		}

		// æ·»åŠ åŒºå—åˆ°æ‰¹æ¬¡
		blocks = append(blocks, block)
		actualSize += blockSize
		currentHeight++

		// ç¡®ä¿è‡³å°‘è¿”å›ä¸€ä¸ªåŒºå—
		if len(blocks) == 1 && actualSize > maxResponseSize {
			// å•ä¸ªåŒºå—å°±è¶…è¿‡é™åˆ¶ï¼Œä½†ä»éœ€è¿”å›ä»¥ç¡®ä¿åŒæ­¥è¿›å±•
			paginationReason = "LARGE_BLOCK_FORCED"
			break
		}
	}

	// è®¡ç®—ä¸‹ä¸€ä¸ªé«˜åº¦å’Œæ˜¯å¦è¿˜æœ‰æ›´å¤šåŒºå—
	nextHeight := currentHeight
	hasMore := (currentHeight <= targetHeight)

	if len(blocks) == 0 {
		paginationReason = "NO_BLOCKS_AVAILABLE"
		nextHeight = startHeight
	}

	if h.logger != nil {
		h.logger.Infof("âœ… åŒºå—æ‰¹æ¬¡æ„å»ºå®Œæˆ: è¿”å›%dä¸ªåŒºå— [%d-%d], å¤§å°=%då­—èŠ‚, ä¸‹ä¸€é«˜åº¦=%d, è¿˜æœ‰æ›´å¤š=%t, åŸå› =%s",
			len(blocks), startHeight, currentHeight-1, actualSize, nextHeight, hasMore, paginationReason)
	}

	return blocks, nextHeight, hasMore, actualSize, paginationReason
}

// createHeightQueryResponse åˆ›å»ºé«˜åº¦æŸ¥è¯¢å“åº”
func (h *SyncNetworkHandler) createHeightQueryResponse(requestId string, currentHeight uint64) ([]byte, error) {
	response := &protocol.IntelligentPaginationResponse{
		RequestId:        requestId,
		Blocks:           []*core.Block{},
		NextHeight:       currentHeight, // åœ¨NextHeightå­—æ®µè¿”å›å½“å‰é«˜åº¦
		HasMore:          false,
		ActualSize:       0,
		PaginationReason: "HEIGHT_QUERY",
		Success:          true,
		ErrorMessage:     nil,
	}

	return proto.Marshal(response)
}

// GetSyncNetworkStats è·å–åŒæ­¥ç½‘ç»œå¤„ç†ç»Ÿè®¡ä¿¡æ¯
//
// ğŸ“Š **ç½‘ç»œç»Ÿè®¡ä¿¡æ¯æŸ¥è¯¢**
//
// è¿”å›syncç½‘ç»œå¤„ç†æ¨¡å—çš„ç»Ÿè®¡æ•°æ®ï¼Œç”¨äºç›‘æ§å’Œæ€§èƒ½åˆ†æã€‚
//
// è¿”å›ï¼š
//   - map[string]interface{}: ç½‘ç»œå¤„ç†ç»Ÿè®¡ä¿¡æ¯
func (h *SyncNetworkHandler) GetSyncNetworkStats() map[string]interface{} {
	totalRequests := h.kbucketRequestCount + h.rangeRequestCount

	avgBytesPerRequest := float64(0)
	if totalRequests > 0 {
		avgBytesPerRequest = float64(h.totalBytesTransmitted) / float64(totalRequests)
	}

	return map[string]interface{}{
		"kbucket_request_count":    h.kbucketRequestCount,
		"range_request_count":      h.rangeRequestCount,
		"total_requests_processed": totalRequests,
		"total_bytes_transmitted":  h.totalBytesTransmitted,
		"avg_bytes_per_request":    avgBytesPerRequest,
	}
}
