// trigger.go - åŒæ­¥è§¦å‘ä¸»å…¥å£
// è´Ÿè´£åè°ƒ3é˜¶æ®µåŒæ­¥æµç¨‹ï¼šåŒæ­¥è§¦å‘ä¸èŠ‚ç‚¹é€‰æ‹©ã€Kæ¡¶æ™ºèƒ½åŒæ­¥ã€åˆ†é¡µè¡¥é½åŒæ­¥
// - ä½¿ç”¨Kæ¡¶ç®—æ³•é€‰æ‹©æœ€è¿‘é‚»èŠ‚ç‚¹
// - æŸ¥è¯¢ç½‘ç»œé«˜åº¦å¹¶æ‰§è¡Œæ™ºèƒ½åŒæ­¥
// - å¤„ç†åŒºå—éªŒè¯å’Œåº”ç”¨æµç¨‹
package sync

import (
	"context"
	"fmt"
	"time"

	peer "github.com/libp2p/go-libp2p/core/peer"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/network"
)

// ============================================================================
//                              ä¸»è¦åŒæ­¥å…¥å£
// ============================================================================
//
// æ³¨æ„ï¼š
// - åŒæ­¥çŠ¶æ€ç®¡ç†å·²ç§»è‡³ sync_state.go
// - Kæ¡¶èŠ‚ç‚¹é€‰æ‹©å·²ç§»è‡³ node_selection.go
// - ç½‘ç»œé«˜åº¦æŸ¥è¯¢å·²ç§»è‡³ height_query.go
// - åŒºå—åŒæ­¥é€»è¾‘å·²ç§»è‡³ block_sync.go
// - æ•°æ®ç»“æ„ä½¿ç”¨pb/blockchain/block/block.protoç»Ÿä¸€æ ¼å¼

// ============================================================================
//                           åŒæ­¥è§¦å‘å®ç°
// ============================================================================

// triggerSyncImpl æ‰‹åŠ¨è§¦å‘åŒæ­¥çš„å…·ä½“å®ç°
//
// ğŸ¯ **3é˜¶æ®µKæ¡¶æ™ºèƒ½åŒæ­¥ç­–ç•¥**ï¼š
// 1. åŒæ­¥è§¦å‘ä¸èŠ‚ç‚¹é€‰æ‹©ï¼šæ£€æŸ¥ç³»ç»ŸçŠ¶æ€ï¼Œä½¿ç”¨Kæ¡¶é€‰æ‹©æœ€ä¼˜èŠ‚ç‚¹
// 2. Kæ¡¶æ™ºèƒ½åŒæ­¥ï¼šè·å–åˆå§‹åŒºå—æ‰¹æ¬¡å’Œç½‘ç»œé«˜åº¦
// 3. åˆ†é¡µè¡¥é½åŒæ­¥ï¼šä½¿ç”¨åˆ†é¡µæ–¹å¼åŒæ­¥å‰©ä½™åŒºå—
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - chainService: é“¾æœåŠ¡ï¼Œç”¨äºæŸ¥è¯¢æœ¬åœ°çŠ¶æ€
//   - blockService: åŒºå—æœåŠ¡ï¼Œç”¨äºéªŒè¯å’Œå¤„ç†åŒºå—
//   - kBucketManager: Kæ¡¶ç®¡ç†å™¨ï¼Œç”¨äºèŠ‚ç‚¹é€‰æ‹©
//   - networkService: ç½‘ç»œæœåŠ¡ï¼Œç”¨äºP2Pé€šä¿¡
//   - host: ä¸»æœºæœåŠ¡ï¼Œç”¨äºèŠ‚ç‚¹IDè·å–å’ŒéªŒè¯
//   - configProvider: é…ç½®æä¾›è€…ï¼Œç”¨äºè·å–é“¾IDç­‰é…ç½®
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - error: åŒæ­¥é”™è¯¯ï¼Œnilè¡¨ç¤ºæˆåŠŸ
func triggerSyncImpl(
	ctx context.Context,
	chainService blockchain.ChainService,
	blockService blockchain.BlockService,
	routingManager kademlia.RoutingTableManager,
	networkService network.Network,
	host node.Host,
	configProvider config.Provider,
	logger log.Logger,
) error {
	if logger != nil {
		logger.Info("[TriggerSync] ğŸš€ å¯åŠ¨æ ‡å‡†Kæ¡¶3é˜¶æ®µåŒæ­¥æµç¨‹")
	}

	// ç”Ÿæˆè¯·æ±‚ID
	requestID := fmt.Sprintf("sync-%d", time.Now().UnixNano())

	// ================================
	// é˜¶æ®µ0: åŒæ­¥å†²çªæ£€æŸ¥å’Œé”è·å–
	// ================================
	if !tryAcquireSyncLock(requestID, logger) {
		return fmt.Errorf("åŒæ­¥ä»»åŠ¡å·²åœ¨è¿›è¡Œä¸­ï¼Œè¯·ç­‰å¾…å½“å‰ä»»åŠ¡å®Œæˆ")
	}
	defer releaseSyncLock(logger)

	// åˆ›å»ºå¯å–æ¶ˆçš„åŒæ­¥ä¸Šä¸‹æ–‡
	syncCtx, cancelFunc := context.WithCancel(ctx)
	defer cancelFunc()

	// ================================
	// é˜¶æ®µ1: åŒæ­¥è§¦å‘ä¸èŠ‚ç‚¹é€‰æ‹©
	// ================================
	if logger != nil {
		logger.Info("[TriggerSync] ğŸ“ é˜¶æ®µ1: åŒæ­¥è§¦å‘ä¸èŠ‚ç‚¹é€‰æ‹©")
	}

	// 1.1 ç³»ç»Ÿå°±ç»ªæ€§æ£€æŸ¥
	ready, err := chainService.IsReady(syncCtx)
	if err != nil {
		return fmt.Errorf("ç³»ç»Ÿå°±ç»ªæ£€æŸ¥å¤±è´¥: %w", err)
	}
	if !ready {
		return fmt.Errorf("ç³»ç»Ÿå°šæœªå°±ç»ªï¼Œæ— æ³•å¯åŠ¨åŒæ­¥")
	}

	// 1.2 è·å–æœ¬åœ°é“¾ä¿¡æ¯
	localChainInfo, err := chainService.GetChainInfo(syncCtx)
	if err != nil {
		return fmt.Errorf("è·å–æœ¬åœ°åŒºå—é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}
	localHeight := localChainInfo.Height

	// 1.4 Kæ¡¶èŠ‚ç‚¹é€‰æ‹©ï¼ˆåŸºäºKademliaè·ç¦»ç®—æ³•ï¼‰
	selectedPeers, err := selectKBucketPeersForSync(syncCtx, routingManager, host, localChainInfo, logger)
	if err != nil {
		if logger != nil {
			logger.Warnf("[TriggerSync] âš ï¸ Kæ¡¶èŠ‚ç‚¹é€‰æ‹©å¤±è´¥: %v", err)
		}
		return fmt.Errorf("Kæ¡¶èŠ‚ç‚¹é€‰æ‹©å¤±è´¥: %w", err)
	}

	if len(selectedPeers) == 0 {
		if logger != nil {
			logger.Warn("[TriggerSync] âš ï¸ æ²¡æœ‰æ‰¾åˆ°å¯ç”¨çš„åŒæ­¥èŠ‚ç‚¹ï¼Œå¯èƒ½ç½‘ç»œå°šæœªè¿æ¥")
		}
		return fmt.Errorf("æ²¡æœ‰å¯ç”¨çš„åŒæ­¥èŠ‚ç‚¹")
	}

	// 1.4.1 è¿‡æ»¤æœ€è¿‘å·²åŒæ­¥è¿‡çš„èŠ‚ç‚¹ï¼ˆé¿å…é‡å¤åŒæ­¥ï¼‰
	// ä»é…ç½®è·å–èŠ‚ç‚¹åŒæ­¥ç¼“å­˜è¿‡æœŸæ—¶é—´
	syncCacheExpiry := 5 * time.Minute // é»˜è®¤5åˆ†é’Ÿ
	if configProvider != nil {
		if blockchainConfig := configProvider.GetBlockchain(); blockchainConfig != nil {
			if blockchainConfig.Sync.Advanced.PeerSyncCacheExpiryMins > 0 {
				syncCacheExpiry = time.Duration(blockchainConfig.Sync.Advanced.PeerSyncCacheExpiryMins) * time.Minute
			}
		}
	}
	var filteredPeers []peer.ID
	for _, peerID := range selectedPeers {
		if !checkIfPeerRecentlySynced(peerID, localHeight, syncCacheExpiry) {
			filteredPeers = append(filteredPeers, peerID)
		} else {
			if logger != nil {
				logger.Infof("[TriggerSync] â© skip: recently-synced peer (expiry=%.0fm), peer=%s",
					syncCacheExpiry.Minutes(), peerID.String()[:12]+"...")
			}
		}
	}

	if len(filteredPeers) == 0 {
		if logger != nil {
			logger.Info("[TriggerSync] â© skip: no new WES peers after filtering (all recently-synced)")
		}
		return nil
	}

	selectedPeers = filteredPeers

	if logger != nil {
		logger.Infof("[TriggerSync] âœ… é˜¶æ®µ1å®Œæˆ: æœ¬åœ°é«˜åº¦=%d, å€™é€‰èŠ‚ç‚¹=%d (è¿‡æ»¤å=%d)",
			localHeight, len(selectedPeers)+len(filteredPeers), len(selectedPeers))
		for i, peerID := range selectedPeers {
			if i < 3 { // åªæ˜¾ç¤ºå‰3ä¸ªèŠ‚ç‚¹ä»¥é¿å…æ—¥å¿—è¿‡é•¿
				logger.Debugf("[TriggerSync] å€™é€‰èŠ‚ç‚¹[%d]: %s", i+1, peerID.String()[:12]+"...")
			}
		}
	}

	// ================================
	// é˜¶æ®µ1.5: ç½‘ç»œé«˜åº¦æŸ¥è¯¢ï¼ˆè·å–çœŸå®ç›®æ ‡é«˜åº¦ï¼‰
	// ================================
	if logger != nil {
		logger.Info("[TriggerSync] ğŸ“ é˜¶æ®µ1.5: ç½‘ç»œé«˜åº¦æŸ¥è¯¢")
	}

	// 1.5.1 æ˜¾å¼æŸ¥è¯¢ç½‘ç»œæœ€æ–°é«˜åº¦ï¼ˆä½¿ç”¨å·²ç­›é€‰çš„å€™é€‰èŠ‚ç‚¹ï¼‰
	networkHeight, networkSourcePeer, err := queryNetworkHeightFromCandidates(
		syncCtx, selectedPeers, networkService, host, localChainInfo, configProvider, logger,
	)
	if err != nil {
		if logger != nil {
			logger.Warnf("[TriggerSync] âš ï¸ ç½‘ç»œé«˜åº¦æŸ¥è¯¢å¤±è´¥: %v", err)
		}
		return fmt.Errorf("ç½‘ç»œé«˜åº¦æŸ¥è¯¢å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("[TriggerSync] âœ… é˜¶æ®µ1.5å®Œæˆ: ç½‘ç»œçœŸå®é«˜åº¦=%d, æ¥æºèŠ‚ç‚¹=%s",
			networkHeight, networkSourcePeer.String()[:8])
	}

	// 1.5.2 è®°å½•åŒæ­¥æŸ¥è¯¢ç»“æœåˆ°ç¼“å­˜
	recordPeerSyncResult(networkSourcePeer, localHeight, networkHeight)

	// 1.5.3 åˆ¤æ–­æ˜¯å¦éœ€è¦åŒæ­¥
	if networkHeight <= localHeight {
		if logger != nil {
			logger.Info("[TriggerSync] ğŸ‰ èŠ‚ç‚¹å·²ä¸ç½‘ç»œåŒæ­¥ï¼Œæ— éœ€è¿›ä¸€æ­¥åŒæ­¥")
			logger.Infof("[TriggerSync] ğŸ“Š Sync state: up-to-date (local=%d, remote=%d), no action needed", localHeight, networkHeight)
			if networkHeight == localHeight {
				logger.Info("[TriggerSync] âœ… é«˜åº¦å®Œå…¨ä¸€è‡´ï¼ŒèŠ‚ç‚¹ä¸ç½‘ç»œä¿æŒåŒæ­¥çŠ¶æ€")
			} else {
				logger.Info("[TriggerSync] âœ… æœ¬åœ°é«˜åº¦é¢†å…ˆï¼Œæ— éœ€åŒæ­¥ä¸‹è½½")
			}
		}
		return nil
	}

	// ================================
	// é˜¶æ®µ2: Kæ¡¶æ™ºèƒ½åŒæ­¥è¯·æ±‚ï¼ˆè·å–åˆå§‹åŒºå—æ‰¹æ¬¡ï¼‰
	// ================================
	if logger != nil {
		logger.Info("[TriggerSync] ğŸ“ é˜¶æ®µ2: Kæ¡¶æ™ºèƒ½åŒæ­¥è¯·æ±‚")
	}

	// 2.1 æ‰§è¡ŒKæ¡¶æ™ºèƒ½åŒæ­¥ï¼ˆä»…è·å–åˆå§‹åŒºå—æ‰¹æ¬¡ï¼Œä¸å†è¿”å›"ç½‘ç»œé«˜åº¦"ï¼‰
	var initialBlocks []*core.Block // ä½¿ç”¨protoç»Ÿä¸€æ ¼å¼
	var sourcePeer peer.ID

	for _, peerID := range selectedPeers {
		initialBlocks, err = performKBucketSmartSync(
			syncCtx, peerID, localHeight, localChainInfo,
			networkService, host, configProvider, logger,
		)
		if err != nil {
			if logger != nil {
				logger.Warnf("[TriggerSync] èŠ‚ç‚¹ %s Kæ¡¶åŒæ­¥å¤±è´¥: %v", peerID.String()[:8], err)
			}
			continue // å°è¯•ä¸‹ä¸€ä¸ªèŠ‚ç‚¹
		}

		sourcePeer = peerID
		break
	}

	if err != nil {
		if logger != nil {
			logger.Warnf("[TriggerSync] âŒ æ‰€æœ‰å€™é€‰èŠ‚ç‚¹çš„Kæ¡¶åŒæ­¥å‡å¤±è´¥ï¼ŒåŒæ­¥ä¸­æ­¢")
		}
		return fmt.Errorf("æ‰€æœ‰Kæ¡¶èŠ‚ç‚¹åŒæ­¥å‡å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("[TriggerSync] âœ… Kæ¡¶æ™ºèƒ½åŒæ­¥æˆåŠŸï¼Œè·å¾—åˆå§‹åŒºå—æ‰¹æ¬¡: %dä¸ªåŒºå—, æ•°æ®æº: %s",
			len(initialBlocks), sourcePeer.String()[:12]+"...")
	}

	// 2.3 è®¾ç½®æ´»è·ƒåŒæ­¥çŠ¶æ€
	setActiveSyncTask(&activeSyncContext{
		RequestID:       requestID,
		StartTime:       time.Now(),
		TargetHeight:    networkHeight,
		SourcePeerID:    sourcePeer,
		CancelFunc:      cancelFunc,
		ProcessedBlocks: 0,
	})

	if logger != nil {
		logger.Infof("[TriggerSync] âœ… é˜¶æ®µ2å®Œæˆ: ç½‘ç»œé«˜åº¦=%d, åˆå§‹åŒºå—=%d, æ•°æ®æº=%s",
			networkHeight, len(initialBlocks), sourcePeer.String()[:8])
	}

	// ================================
	// é˜¶æ®µ3: åˆ†é¡µè¡¥é½åŒæ­¥
	// ================================
	if logger != nil {
		logger.Info("[TriggerSync] ğŸ“ é˜¶æ®µ3: åˆ†é¡µè¡¥é½åŒæ­¥")
	}

	// 3.1 å¤„ç†åˆå§‹åŒºå—ï¼ˆæ¥è‡ªKæ¡¶æ™ºèƒ½åŒæ­¥ï¼‰
	if len(initialBlocks) > 0 {
		if logger != nil {
			logger.Infof("[TriggerSync] ğŸ“¦ å¼€å§‹å¤„ç†åˆå§‹åŒºå—æ‰¹æ¬¡: %dä¸ªåŒºå—", len(initialBlocks))
		}
		err = processBlockBatch(syncCtx, initialBlocks, blockService, logger)
		if err != nil {
			if logger != nil {
				logger.Errorf("[TriggerSync] âŒ åˆå§‹åŒºå—æ‰¹æ¬¡å¤„ç†å¤±è´¥: %v", err)
			}
			return fmt.Errorf("åˆå§‹åŒºå—æ‰¹æ¬¡å¤„ç†å¤±è´¥: %w", err)
		}
		updateSyncProgress(uint64(len(initialBlocks)))
		if logger != nil {
			logger.Infof("[TriggerSync] âœ… åˆå§‹åŒºå—æ‰¹æ¬¡å¤„ç†å®Œæˆ: %dä¸ªåŒºå—å·²åº”ç”¨", len(initialBlocks))
		}
	} else {
		if logger != nil {
			logger.Info("[TriggerSync] ğŸ“¦ Kæ¡¶åŒæ­¥æœªè¿”å›åˆå§‹åŒºå—ï¼Œç»§ç»­åˆ†é¡µåŒæ­¥")
		}
	}

	// 3.2 è®¡ç®—å‰©ä½™éœ€è¦åŒæ­¥çš„é«˜åº¦èŒƒå›´
	currentHeight := localHeight + uint64(len(initialBlocks))
	if networkHeight > currentHeight {
		missingBlocks := networkHeight - currentHeight
		if logger != nil {
			logger.Infof("[TriggerSync] ğŸ“ éœ€è¦åˆ†é¡µåŒæ­¥å‰©ä½™åŒºå—: %dä¸ª (ä»é«˜åº¦%dåˆ°%d)",
				missingBlocks, currentHeight+1, networkHeight)
		}

		// 3.3 æ‰§è¡Œåˆ†é¡µè¡¥é½åŒæ­¥ï¼ˆä½¿ç”¨æ‰€æœ‰å¯ç”¨èŠ‚ç‚¹è¿›è¡Œæ•…éšœè½¬ç§»ï¼‰
		availablePeers := []peer.ID{sourcePeer}
		// æ·»åŠ å…¶ä»–å¤‡ç”¨èŠ‚ç‚¹ï¼ˆæ’é™¤å·²ä½¿ç”¨çš„sourcePeerï¼‰
		for _, peer := range selectedPeers {
			if peer != sourcePeer {
				availablePeers = append(availablePeers, peer)
			}
		}

		if logger != nil {
			logger.Infof("[TriggerSync] ğŸ”„ å¯åŠ¨åˆ†é¡µè¡¥é½åŒæ­¥ï¼Œå¯ç”¨èŠ‚ç‚¹: %dä¸ª", len(availablePeers))
		}

		err = performRangePaginatedSync(
			syncCtx, availablePeers, currentHeight, networkHeight,
			networkService, host, blockService, configProvider, logger,
		)
		if err != nil {
			if logger != nil {
				logger.Errorf("[TriggerSync] âŒ åˆ†é¡µè¡¥é½åŒæ­¥å¤±è´¥: %v", err)
			}
			return fmt.Errorf("åˆ†é¡µè¡¥é½åŒæ­¥å¤±è´¥: %w", err)
		}

		if logger != nil {
			logger.Infof("[TriggerSync] âœ… åˆ†é¡µè¡¥é½åŒæ­¥å®Œæˆ: å·²åŒæ­¥åˆ°é«˜åº¦%d", networkHeight)
		}
	} else {
		if logger != nil {
			logger.Info("[TriggerSync] ğŸ“ æ— éœ€åˆ†é¡µåŒæ­¥ï¼Œåˆå§‹æ‰¹æ¬¡å·²åŒ…å«æ‰€æœ‰ç¼ºå¤±åŒºå—")
		}
	}

	if logger != nil {
		logger.Info("[TriggerSync] ğŸ‰ æ ‡å‡†3é˜¶æ®µåŒæ­¥æµç¨‹å®Œæˆï¼")
	}
	return nil
}

// ============================================================================
//                           é…ç½®è·å–å·¥å…·å‡½æ•°
// ============================================================================
