// Package recovery æä¾›é“¾æ´¾ç”Ÿæ•°æ®çš„ç»Ÿä¸€æ¢å¤ç®¡ç†
//
// ğŸ¯ **æ ¸å¿ƒè®¾è®¡åŸåˆ™**ï¼š
// - UTXOã€ç´¢å¼•ã€çŠ¶æ€æ ¹ç­‰æ´¾ç”Ÿæ•°æ®åŒç­‰åœ°ä½
// - ç»Ÿä¸€çš„æ£€æŸ¥å’Œä¿®å¤æœºåˆ¶
// - åˆ†çº§ä¿®å¤ç­–ç•¥ï¼šé€‰æ‹©æ€§ä¿®å¤ â†’ åŒºåŸŸé‡å»º â†’ å…¨é‡é‡å»º
//
// ğŸ“‹ **æ¶æ„èŒè´£**ï¼š
// - ä½œä¸ºä¸­å¤®è°ƒåº¦å™¨ï¼Œç»Ÿä¸€ç®¡ç†æ‰€æœ‰æ´¾ç”Ÿæ•°æ®çš„ä¿®å¤
// - ç›‘å¬æŸåäº‹ä»¶ï¼Œåˆ†æ´¾åˆ°å¯¹åº”çš„å­ç®¡ç†å™¨
// - å®æ–½åˆ†çº§ä¿®å¤ç­–ç•¥ï¼Œå¹³è¡¡æ€§èƒ½å’Œå½»åº•æ€§
package recovery

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/persistence/repair"
	core "github.com/weisyn/v1/pb/blockchain/block"
	blockif "github.com/weisyn/v1/pkg/interfaces/block"
	"github.com/weisyn/v1/pkg/interfaces/eutxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	eventiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	logiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/types"
	corruptutil "github.com/weisyn/v1/pkg/utils/corruption"
)

// ============================================================================
//                              æ•°æ®ç»“æ„
// ============================================================================

// DerivedDataRecoveryManager ç»Ÿä¸€æ´¾ç”Ÿæ•°æ®æ¢å¤ç®¡ç†å™¨
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - ç»Ÿä¸€ç®¡ç†æ‰€æœ‰æ´¾ç”Ÿæ•°æ®ï¼ˆUTXOã€ç´¢å¼•ã€çŠ¶æ€æ ¹ï¼‰çš„ä¿®å¤
// - ç›‘å¬ corruption.detected äº‹ä»¶å¹¶åˆ†æ´¾åˆ°å­ç®¡ç†å™¨
// - å®æ–½åˆ†çº§ä¿®å¤ç­–ç•¥
// - è®°å½•ä¿®å¤å†å²å’ŒçŠ¶æ€
type DerivedDataRecoveryManager struct {
	// å­ç®¡ç†å™¨
	indexManager *IndexRecoveryManager
	utxoManager  *UTXORecoveryManager
	blockManager *BlockCorruptionManager

	// å…±äº«ä¾èµ–
	queryService   persistence.QueryService
	blockProcessor blockif.BlockProcessor
	store          storage.BadgerStore
	fileStore      storage.FileStore // ğŸ†• ç”¨äºåˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤
	eventBus       eventiface.EventBus
	logger         logiface.Logger
	writeGate      WriteGateInterface // åªè¯»æ¨¡å¼æ§åˆ¶

	// ğŸ†• åŒºå—å“ˆå¸Œè®¡ç®—æœåŠ¡ï¼ˆç”¨äºåˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤ï¼‰
	blockHashClient core.BlockHashServiceClient

	// ä¿®å¤çŠ¶æ€
	mu               sync.Mutex
	repairInProgress map[string]bool      // key: issue_type
	repairHistory    []RepairRecord       // ä¿®å¤å†å²
	lastRepairTime   map[string]time.Time // key: issue_type
	throttle         time.Duration        // é™æµé—´éš”
}

// WriteGateInterface åªè¯»æ¨¡å¼æ§åˆ¶æ¥å£
type WriteGateInterface interface {
	IsReadOnly() bool
	ReadOnlyReason() string
	ExitReadOnly()
}

// RepairRecord ä¿®å¤è®°å½•
type RepairRecord struct {
	Timestamp   time.Time
	IssueType   string
	Severity    string
	Height      *uint64
	RepairLevel string // "selective", "regional", "full"
	Result      string // "success", "failed", "partial"
	Duration    time.Duration
	Error       string
}

// CorruptionIssue æŸåé—®é¢˜å®šä¹‰
type CorruptionIssue struct {
	Type        string  // "tip_inconsistent", "index_corrupt", etc.
	Severity    string  // "critical", "high", "medium", "low"
	Height      *uint64
	Description string
	RawError    error
}

// ============================================================================
//                              æ„é€ å‡½æ•°
// ============================================================================

// NewDerivedDataRecoveryManager åˆ›å»ºç»Ÿä¸€æ´¾ç”Ÿæ•°æ®æ¢å¤ç®¡ç†å™¨
func NewDerivedDataRecoveryManager(
	queryService persistence.QueryService,
	blockProcessor blockif.BlockProcessor,
	utxoSnapshot eutxo.UTXOSnapshot,
	store storage.BadgerStore,
	fileStore storage.FileStore, // ğŸ†• ç”¨äºåˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤
	blockHashClient core.BlockHashServiceClient, // ğŸ†• ç”¨äºåˆ›ä¸–åŒºå—å“ˆå¸Œè®¡ç®—
	hashManager crypto.HashManager,
	eventBus eventiface.EventBus,
	logger logiface.Logger,
	writeGate WriteGateInterface,
) *DerivedDataRecoveryManager {
	m := &DerivedDataRecoveryManager{
		queryService:     queryService,
		blockProcessor:   blockProcessor,
		store:            store,
		fileStore:        fileStore, // ğŸ†•
		blockHashClient:  blockHashClient, // ğŸ†•
		eventBus:         eventBus,
		logger:           logger,
		writeGate:        writeGate,
		repairInProgress: make(map[string]bool),
		repairHistory:    make([]RepairRecord, 0),
		lastRepairTime:   make(map[string]time.Time),
		throttle:         60 * time.Second,
	}

	// åˆ›å»ºå­ç®¡ç†å™¨ï¼ˆå¤ç”¨åŒä¸€ä¸ªhashManagerï¼‰
	m.indexManager = NewIndexRecoveryManager(queryService, store, hashManager, logger)
	m.utxoManager = NewUTXORecoveryManager(queryService, blockProcessor, utxoSnapshot, eventBus, logger)
	m.blockManager = NewBlockCorruptionManager(queryService, blockProcessor, store, eventBus, logger)

	return m
}

// ============================================================================
//                              äº‹ä»¶è®¢é˜…
// ============================================================================

// RegisterSubscriptions æ³¨å†Œäº‹ä»¶ç›‘å¬
//
// ğŸ¯ **åŠŸèƒ½**ï¼š
// - ç›‘å¬æ‰€æœ‰ corruption.detected äº‹ä»¶
// - æ ¹æ®é”™è¯¯ç±»å‹åˆ†æ´¾åˆ°å¯¹åº”çš„å­ç®¡ç†å™¨
// - å®æ–½é™æµå’Œå»é‡
func (m *DerivedDataRecoveryManager) RegisterSubscriptions(ctx context.Context) {
	if m == nil || m.eventBus == nil {
		return
	}

	_ = m.eventBus.Subscribe(eventiface.EventTypeCorruptionDetected, func(evCtx context.Context, data interface{}) error {
		evt, ok := data.(types.CorruptionEventData)
		if !ok {
			if p, ok2 := data.(*types.CorruptionEventData); ok2 && p != nil {
				evt = *p
				ok = true
			}
		}
		if !ok {
			return nil
		}

		// å¼‚æ­¥å¤„ç†ï¼Œé¿å…é˜»å¡äº‹ä»¶æ€»çº¿
		go m.handleCorruptionEvent(evCtx, evt)
		return nil
	})

	if m.logger != nil {
		m.logger.Info("âœ… DerivedDataRecoveryManager äº‹ä»¶è®¢é˜…å·²æ³¨å†Œ")
	}
}

// handleCorruptionEvent å¤„ç†æŸåäº‹ä»¶
func (m *DerivedDataRecoveryManager) handleCorruptionEvent(ctx context.Context, evt types.CorruptionEventData) {
	if evt.ErrClass == "" {
		evt.ErrClass = corruptutil.ClassifyErr(fmt.Errorf("%s", evt.Error))
	}

	// è½¬æ¢ä¸º CorruptionIssue
	issue := CorruptionIssue{
		Type:        evt.ErrClass,
		Severity:    string(evt.Severity),
		Height:      evt.Height,
		Description: evt.Error,
		RawError:    fmt.Errorf("%s", evt.Error),
	}

	// æ£€æŸ¥é™æµ
	m.mu.Lock()
	if m.repairInProgress[issue.Type] {
		m.mu.Unlock()
		if m.logger != nil {
			m.logger.Debugf("ä¿®å¤å·²åœ¨è¿›è¡Œä¸­ï¼Œè·³è¿‡: type=%s", issue.Type)
		}
		return
	}

	lastTime, exists := m.lastRepairTime[issue.Type]
	if exists && time.Since(lastTime) < m.throttle {
		m.mu.Unlock()
		if m.logger != nil {
			m.logger.Debugf("ä¿®å¤é™æµï¼Œè·³è¿‡: type=%s", issue.Type)
		}
		return
	}

	m.repairInProgress[issue.Type] = true
	m.lastRepairTime[issue.Type] = time.Now()
	m.mu.Unlock()

	defer func() {
		m.mu.Lock()
		m.repairInProgress[issue.Type] = false
		m.mu.Unlock()
	}()

	// æ‰§è¡Œåˆ†çº§ä¿®å¤
	if err := m.RepairWithStrategy(ctx, issue); err != nil {
		if m.logger != nil {
			m.logger.Errorf("ä¿®å¤å¤±è´¥: type=%s err=%v", issue.Type, err)
		}
	}
}

// ============================================================================
//                              åˆ†çº§ä¿®å¤ç­–ç•¥
// ============================================================================

// RepairWithStrategy æ‰§è¡Œåˆ†çº§ä¿®å¤ç­–ç•¥
//
// ğŸ¯ **åˆ†çº§ç­–ç•¥**ï¼š
// - Level 1: é€‰æ‹©æ€§ä¿®å¤ - åªä¿®å¤æ£€æµ‹åˆ°çš„å…·ä½“é—®é¢˜
// - Level 2: åŒºåŸŸé‡å»º - é‡æ”¾æœ€è¿‘Nä¸ªåŒºå—
// - Level 3: å…¨é‡é‡å»º - ä»genesisé‡æ–°æ´¾ç”Ÿæ‰€æœ‰æ•°æ®
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - issue: æŸåé—®é¢˜
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *DerivedDataRecoveryManager) RepairWithStrategy(ctx context.Context, issue CorruptionIssue) error {
	startTime := time.Now()
	record := RepairRecord{
		Timestamp: startTime,
		IssueType: issue.Type,
		Severity:  issue.Severity,
		Height:    issue.Height,
	}

	if m.logger != nil {
		m.logger.Infof("ğŸ”§ å¼€å§‹åˆ†çº§ä¿®å¤: type=%s severity=%s", issue.Type, issue.Severity)
	}

	// Level 1: é€‰æ‹©æ€§ä¿®å¤
	if m.logger != nil {
		m.logger.Debug("å°è¯• Level 1: é€‰æ‹©æ€§ä¿®å¤")
	}
	if err := m.trySelectiveRepair(ctx, issue); err == nil {
		record.RepairLevel = "selective"
		record.Result = "success"
		record.Duration = time.Since(startTime)
		m.recordRepair(record)

		if m.logger != nil {
			m.logger.Infof("âœ… Level 1 é€‰æ‹©æ€§ä¿®å¤æˆåŠŸ: type=%s duration=%v", issue.Type, record.Duration)
		}
		return nil
	} else {
		if m.logger != nil {
			m.logger.Warnf("Level 1 é€‰æ‹©æ€§ä¿®å¤å¤±è´¥: %v", err)
		}
	}

	// Level 2: åŒºåŸŸé‡å»º
	if m.logger != nil {
		m.logger.Debug("å°è¯• Level 2: åŒºåŸŸé‡å»º")
	}
	if err := m.tryRegionalRebuild(ctx, issue); err == nil {
		record.RepairLevel = "regional"
		record.Result = "success"
		record.Duration = time.Since(startTime)
		m.recordRepair(record)

		if m.logger != nil {
			m.logger.Infof("âœ… Level 2 åŒºåŸŸé‡å»ºæˆåŠŸ: type=%s duration=%v", issue.Type, record.Duration)
		}
		return nil
	} else {
		if m.logger != nil {
			m.logger.Warnf("Level 2 åŒºåŸŸé‡å»ºå¤±è´¥: %v", err)
		}
	}

	// Level 3: å…¨é‡é‡å»º
	if m.logger != nil {
		m.logger.Warn("å°è¯• Level 3: å…¨é‡é‡å»ºï¼ˆè¿™å¯èƒ½éœ€è¦å¾ˆé•¿æ—¶é—´ï¼‰")
	}
	if err := m.fullRebuild(ctx); err != nil {
		record.RepairLevel = "full"
		record.Result = "failed"
		record.Duration = time.Since(startTime)
		record.Error = err.Error()
		m.recordRepair(record)

		if m.logger != nil {
			m.logger.Errorf("âŒ Level 3 å…¨é‡é‡å»ºå¤±è´¥: %v", err)
		}
		return fmt.Errorf("all repair levels failed: %w", err)
	}

	record.RepairLevel = "full"
	record.Result = "success"
	record.Duration = time.Since(startTime)
	m.recordRepair(record)

	if m.logger != nil {
		m.logger.Infof("âœ… Level 3 å…¨é‡é‡å»ºæˆåŠŸ: duration=%v", record.Duration)
	}
	return nil
}

// ============================================================================
//                              Level 1: é€‰æ‹©æ€§ä¿®å¤
// ============================================================================

// trySelectiveRepair Level 1: é€‰æ‹©æ€§ä¿®å¤
//
// ğŸ¯ **ç­–ç•¥**ï¼š
// - åªä¿®å¤æ£€æµ‹åˆ°çš„å…·ä½“é—®é¢˜
// - æ€§èƒ½æœ€ä¼˜ï¼Œé€‚åˆå•ç‚¹æ•…éšœ
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - issue: æŸåé—®é¢˜
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *DerivedDataRecoveryManager) trySelectiveRepair(ctx context.Context, issue CorruptionIssue) error {
	switch issue.Type {
	case "genesis_index_corrupt":
		// ğŸ†• åˆ›ä¸–åŒºå—ç´¢å¼•æŸåï¼šä»blocksæ–‡ä»¶é‡å»ºç´¢å¼•
		if m.logger != nil {
			m.logger.Info("ğŸ©¹ æ£€æµ‹åˆ°åˆ›ä¸–åŒºå—ç´¢å¼•æŸåï¼Œè§¦å‘ä¿®å¤")
		}
		return m.repairGenesisIndex(ctx)

	case "tip_inconsistent":
		// Tipä¸ä¸€è‡´ï¼šé‡æ–°è®¡ç®—å¹¶æ›´æ–°
		if issue.Height == nil {
			return fmt.Errorf("tip_inconsistent requires height")
		}
		return m.indexManager.RepairTipByHeight(ctx, *issue.Height)

	case "index_corrupt_hash_height", "index_corrupt_height_index":
		// ç´¢å¼•æŸåï¼šé‡å»ºç‰¹å®šé«˜åº¦çš„ç´¢å¼•
		if issue.Height == nil {
			return fmt.Errorf("index corruption requires height")
		}
		return m.indexManager.RebuildHeightIndex(ctx, *issue.Height, *issue.Height)

	case "tx_index_corrupt":
		// äº¤æ˜“ç´¢å¼•æŸåï¼šé‡å»ºç‰¹å®šé«˜åº¦çš„äº¤æ˜“ç´¢å¼•
		if issue.Height == nil {
			return fmt.Errorf("tx_index_corrupt requires height")
		}
		return m.indexManager.RebuildTxIndex(ctx, *issue.Height, *issue.Height)

	case "utxo_inconsistent":
		// UTXOä¸ä¸€è‡´ï¼šå§”æ‰˜ç»™UTXORecoveryManager
		// æ³¨æ„ï¼šUTXORecoveryManagerå·²æœ‰è‡ªå·±çš„ç›‘å¬é€»è¾‘
		if m.logger != nil {
			m.logger.Debug("UTXOä¸ä¸€è‡´ç”±UTXORecoveryManagerç‹¬ç«‹å¤„ç†")
		}
		return nil

	case "timestamp_regression", "block_corrupt":
		// åŒºå—æŸåï¼šä»ç½‘ç»œé‡æ–°ä¸‹è½½
		if issue.Height == nil {
			return fmt.Errorf("block corruption requires height")
		}
		return m.blockManager.RedownloadAndReplaceBlock(ctx, *issue.Height)

	default:
		return fmt.Errorf("unknown issue type: %s", issue.Type)
	}
}

// ============================================================================
//                              åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤
// ============================================================================

// repairGenesisIndex ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// - ä» blocks/0000000000/0000000000.bin æ–‡ä»¶è¯»å–åˆ›ä¸–åŒºå—
// - ååºåˆ—åŒ–å¹¶è®¡ç®—å“ˆå¸Œ
// - é‡å»º indices:height:0 å’Œ indices:hash:<hash> ç´¢å¼•
// - å¦‚æœé“¾å°–é«˜åº¦ä¸º0ï¼Œä¸€å¹¶ä¿®å¤é“¾å°–
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *DerivedDataRecoveryManager) repairGenesisIndex(ctx context.Context) error {
	if m.fileStore == nil {
		return fmt.Errorf("fileStore æœªåˆå§‹åŒ–ï¼Œæ— æ³•ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•")
	}
	if m.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–ï¼Œæ— æ³•è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œ")
	}

	// å¯¼å…¥repairåŒ…çš„å‡½æ•°
	// æ³¨æ„ï¼šè¿™é‡Œç›´æ¥è°ƒç”¨repair.RepairGenesisIndex
	return repair.RepairGenesisIndex(ctx, m.store, m.fileStore, m.blockHashClient, m.logger)
}

// ============================================================================
//                              Level 2: åŒºåŸŸé‡å»º
// ============================================================================

// tryRegionalRebuild Level 2: åŒºåŸŸé‡å»º
//
// ğŸ¯ **ç­–ç•¥**ï¼š
// - é‡æ”¾æœ€è¿‘Nä¸ªåŒºå—ï¼ˆé»˜è®¤100ï¼‰
// - é‡æ–°æ´¾ç”Ÿè¿™äº›åŒºå—çš„æ‰€æœ‰ç´¢å¼•å’ŒUTXOå˜æ›´
// - é€‚åˆè¿ç»­åŒºå—çš„æŸåæˆ–ä¸ç¡®å®šæŸåèŒƒå›´
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - issue: æŸåé—®é¢˜
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *DerivedDataRecoveryManager) tryRegionalRebuild(ctx context.Context, issue CorruptionIssue) error {
	const replayDepth = 100

	chainInfo, err := m.queryService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("get chain info failed: %w", err)
	}

	currentHeight := chainInfo.Height

	// ç¡®å®šé‡æ”¾èŒƒå›´
	var fromHeight uint64
	if issue.Height != nil && *issue.Height > replayDepth {
		fromHeight = *issue.Height - replayDepth
	} else if currentHeight > replayDepth {
		fromHeight = currentHeight - replayDepth
	} else {
		fromHeight = 0
	}

	toHeight := currentHeight

	if m.logger != nil {
		m.logger.Infof("ğŸ”„ åŒºåŸŸé‡å»º: é‡æ”¾åŒºå— [%d..%d]", fromHeight, toHeight)
	}

	// é‡å»ºç´¢å¼•
	if err := m.indexManager.RebuildHeightIndex(ctx, fromHeight, toHeight); err != nil {
		return fmt.Errorf("rebuild index failed: %w", err)
	}

	// é‡å»ºäº¤æ˜“ç´¢å¼•
	if err := m.indexManager.RebuildTxIndex(ctx, fromHeight, toHeight); err != nil {
		return fmt.Errorf("rebuild tx index failed: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("âœ… åŒºåŸŸé‡å»ºå®Œæˆ: [%d..%d]", fromHeight, toHeight)
	}

	return nil
}

// ============================================================================
//                              Level 3: å…¨é‡é‡å»º
// ============================================================================

// fullRebuild Level 3: å…¨é‡é‡å»º
//
// ğŸ¯ **ç­–ç•¥**ï¼š
// - æ¸…ç©ºæ‰€æœ‰æ´¾ç”Ÿæ•°æ®ï¼ˆç´¢å¼•ã€UTXOç­‰ï¼‰
// - ä»genesisåŒºå—é‡æ–°æ´¾ç”Ÿ
// - æœ€å½»åº•ä½†æœ€æ…¢çš„ä¿®å¤æ–¹å¼
//
// âš ï¸ **è­¦å‘Š**ï¼š
// - è¿™ä¸ªæ“ä½œå¯èƒ½éœ€è¦æ•°å°æ—¶
// - ä¼šé”å®šèŠ‚ç‚¹ï¼Œæ— æ³•å¤„ç†æ–°äº¤æ˜“
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *DerivedDataRecoveryManager) fullRebuild(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Warn("âš ï¸ å¼€å§‹å…¨é‡é‡å»ºï¼Œè¿™å¯èƒ½éœ€è¦å¾ˆé•¿æ—¶é—´...")
	}

	// è·å–å½“å‰é“¾é«˜åº¦
	chainInfo, err := m.queryService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("get chain info failed: %w", err)
	}

	maxHeight := chainInfo.Height

	if m.logger != nil {
		m.logger.Infof("å…¨é‡é‡å»º: ä»genesisåˆ°é«˜åº¦ %d", maxHeight)
	}

	// æ¸…ç©ºç´¢å¼•ï¼ˆä¿ç•™åŒºå—æ–‡ä»¶ï¼‰
	if err := m.clearDerivedData(ctx); err != nil {
		return fmt.Errorf("clear derived data failed: %w", err)
	}

	// ä»genesisé‡æ–°æ´¾ç”Ÿ
	if err := m.indexManager.FullIndexRebuild(ctx, maxHeight); err != nil {
		return fmt.Errorf("full index rebuild failed: %w", err)
	}

	if m.logger != nil {
		m.logger.Info("âœ… å…¨é‡é‡å»ºå®Œæˆ")
	}

	return nil
}

// clearDerivedData æ¸…ç©ºæ´¾ç”Ÿæ•°æ®ï¼ˆä¿ç•™åŒºå—æ–‡ä»¶ï¼‰
func (m *DerivedDataRecoveryManager) clearDerivedData(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Warn("æ¸…ç©ºæ´¾ç”Ÿæ•°æ®ï¼ˆä¿ç•™åŒºå—æ–‡ä»¶ï¼‰...")
	}

	// è¿™é‡Œéœ€è¦å°å¿ƒï¼Œåªæ¸…ç©ºç´¢å¼•ï¼Œä¸æ¸…ç©ºåŒºå—æ–‡ä»¶
	// å…·ä½“å®ç°å–å†³äºå­˜å‚¨æ¶æ„
	// TODO: å®ç°æ¸…ç©ºé€»è¾‘

	return nil
}

// ============================================================================
//                              è¾…åŠ©æ–¹æ³•
// ============================================================================

// recordRepair è®°å½•ä¿®å¤å†å²
func (m *DerivedDataRecoveryManager) recordRepair(record RepairRecord) {
	m.mu.Lock()
	defer m.mu.Unlock()

	m.repairHistory = append(m.repairHistory, record)

	// ä¿æŒå†å²è®°å½•åœ¨åˆç†èŒƒå›´å†…ï¼ˆæœ€å¤š1000æ¡ï¼‰
	if len(m.repairHistory) > 1000 {
		m.repairHistory = m.repairHistory[len(m.repairHistory)-1000:]
	}

	// å‘å¸ƒä¿®å¤äº‹ä»¶
	if m.eventBus != nil {
		m.eventBus.Publish("repair.completed", nil, map[string]interface{}{
			"issue_type":   record.IssueType,
			"repair_level": record.RepairLevel,
			"result":       record.Result,
			"duration":     record.Duration.Seconds(),
		})
	}
}

// GetRepairHistory è·å–ä¿®å¤å†å²
func (m *DerivedDataRecoveryManager) GetRepairHistory() []RepairRecord {
	m.mu.Lock()
	defer m.mu.Unlock()

	// è¿”å›å‰¯æœ¬
	history := make([]RepairRecord, len(m.repairHistory))
	copy(history, m.repairHistory)
	return history
}

// GetIndexManager è·å–ç´¢å¼•ç®¡ç†å™¨ï¼ˆä¾›å¤–éƒ¨è°ƒç”¨ï¼‰
func (m *DerivedDataRecoveryManager) GetIndexManager() *IndexRecoveryManager {
	return m.indexManager
}

// GetUTXOManager è·å–UTXOç®¡ç†å™¨ï¼ˆä¾›å¤–éƒ¨è°ƒç”¨ï¼‰
func (m *DerivedDataRecoveryManager) GetUTXOManager() *UTXORecoveryManager {
	return m.utxoManager
}

// GetBlockManager è·å–åŒºå—ç®¡ç†å™¨ï¼ˆä¾›å¤–éƒ¨è°ƒç”¨ï¼‰
func (m *DerivedDataRecoveryManager) GetBlockManager() *BlockCorruptionManager {
	return m.blockManager
}

