// periodic_sync.go - å®šæ—¶åŒæ­¥æœºåˆ¶å®ç°
// è´Ÿè´£åŸºäºæ—¶é—´çš„è‡ªåŠ¨åŒæ­¥è§¦å‘ï¼Œç¡®ä¿é•¿æ—¶é—´æ— æ–°åŒºå—æ—¶èƒ½å¤ŸåŠæ—¶å‘ç°ç½‘ç»œæ›´æ–°
package sync

import (
	"context"
	"time"

	chaininterfaces "github.com/weisyn/v1/internal/core/chain/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/block"
	"github.com/weisyn/v1/pkg/interfaces/config"
	eventiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/network"
	p2pi "github.com/weisyn/v1/pkg/interfaces/p2p"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
)

// PeriodicSyncScheduler å®šæ—¶åŒæ­¥è°ƒåº¦å™¨
type PeriodicSyncScheduler struct {
	chainQuery      persistence.ChainQuery
	queryService    persistence.QueryService
	blockValidator  block.BlockValidator
	blockProcessor  block.BlockProcessor
	routingManager  kademlia.RoutingTableManager
	networkService  network.Network
	p2pService      p2pi.Service
	configProvider  config.Provider
	logger          log.Logger
	eventBus        eventiface.EventBus
	blockHashClient core.BlockHashServiceClient
	forkHandler     chaininterfaces.InternalForkHandler

	// âœ… P1ä¿®å¤ï¼šä¸´æ—¶å­˜å‚¨æœåŠ¡ï¼ˆç”¨äºåˆ†é¡µè¡¥é½æ—¶å¤„ç†ä¹±åºåŒºå—ï¼‰
	tempStore storage.TempStore

	// èŠ‚ç‚¹è¿è¡Œæ—¶çŠ¶æ€ï¼ˆç”¨äºæ›´æ–°åŒæ­¥çŠ¶æ€ï¼‰
	runtimeState p2pi.RuntimeState

	ticker          *time.Ticker
	stopChan        chan struct{}
	lastBlockHeight uint64
	lastBlockTime   time.Time
	isRunning       bool
}

func unixTimeFromBlockHeaderTimestamp(ts uint64) time.Time {
	if ts == 0 {
		return time.Time{}
	}
	// å…¼å®¹ï¼šç§’çº§/æ¯«ç§’çº§æ—¶é—´æˆ³
	// - ç§’çº§ï¼š~1e9
	// - æ¯«ç§’çº§ï¼š~1e12
	if ts > 1_000_000_000_000 {
		return time.Unix(0, int64(ts)*int64(time.Millisecond))
	}
	return time.Unix(int64(ts), 0)
}

// NewPeriodicSyncScheduler åˆ›å»ºå®šæ—¶åŒæ­¥è°ƒåº¦å™¨
//
// ğŸ¯ **é€‚é…æ–°çš„ä¾èµ–æ³¨å…¥æ¶æ„**ï¼š
// - chainQuery: ä½¿ç”¨persistence.ChainQueryæ›¿ä»£ChainServiceï¼ˆè¯»æ“ä½œï¼‰
// - blockValidator: ä½¿ç”¨block.BlockValidatoræ›¿ä»£BlockService.ValidateBlock
// - blockProcessor: ä½¿ç”¨block.BlockProcessoræ›¿ä»£BlockService.ProcessBlock
//
// âš ï¸ **åŒæ­¥çŠ¶æ€ç®¡ç†**ï¼š
// - åŒæ­¥çŠ¶æ€ä¸å†æŒä¹…åŒ–ï¼ŒæŸ¥è¯¢æ—¶å®æ—¶è®¡ç®—
// - é€šè¿‡ runtimeState å®æ—¶æ›´æ–°èŠ‚ç‚¹åŒæ­¥çŠ¶æ€
func NewPeriodicSyncScheduler(
	chainQuery persistence.ChainQuery,
	queryService persistence.QueryService,
	blockValidator block.BlockValidator,
	blockProcessor block.BlockProcessor,
	routingManager kademlia.RoutingTableManager,
	networkService network.Network,
	p2pService p2pi.Service,
	configProvider config.Provider,
	tempStore storage.TempStore,
	runtimeState p2pi.RuntimeState,
	blockHashClient core.BlockHashServiceClient,
	forkHandler chaininterfaces.InternalForkHandler,
	logger log.Logger,
	eventBus eventiface.EventBus,
) *PeriodicSyncScheduler {
	return &PeriodicSyncScheduler{
		chainQuery:      chainQuery,
		queryService:    queryService,
		blockValidator:  blockValidator,
		blockProcessor:  blockProcessor,
		routingManager:  routingManager,
		networkService:  networkService,
		p2pService:      p2pService,
		configProvider:  configProvider,
		logger:          logger,
		eventBus:        eventBus,
		blockHashClient: blockHashClient,
		forkHandler:     forkHandler,
		tempStore:       tempStore,
		runtimeState:    runtimeState,
		stopChan:        make(chan struct{}),
	}
}

// Start å¯åŠ¨å®šæ—¶åŒæ­¥è°ƒåº¦å™¨
func (p *PeriodicSyncScheduler) Start(ctx context.Context) error {
	if p.isRunning {
		return nil
	}

	// ä»é…ç½®è¯»å–å¼€å…³ï¼šå…è®¸ç¦ç”¨â€œæ—¶é—´æ¢é’ˆè§¦å‘â€é€»è¾‘
	if p.configProvider != nil {
		if bc := p.configProvider.GetBlockchain(); bc != nil {
			if !bc.Sync.Advanced.TimeCheckEnabled {
				if p.logger != nil {
					p.logger.Info("â° å®šæ—¶åŒæ­¥è°ƒåº¦å™¨æœªå¯åŠ¨ï¼štime_check_enabled=false")
				}
				return nil
			}
		}
	}

	// ä»é…ç½®è·å–å®šæ—¶åŒæ­¥é—´éš”
	var syncInterval time.Duration = 10 * time.Minute // é»˜è®¤10åˆ†é’Ÿ
	blockchainConfig := p.configProvider.GetBlockchain()
	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.TimeCheckIntervalMins > 0 {
		syncInterval = time.Duration(blockchainConfig.Sync.Advanced.TimeCheckIntervalMins) * time.Minute
		} else if blockchainConfig.Block.BlockTimeTarget > 0 {
			// è‹¥æœªé…ç½® interval minsï¼Œåˆ™é»˜è®¤æŒ‰å‡ºå—ç›®æ ‡æ—¶é—´çš„ 1/2 åšæ¢é’ˆé¢‘ç‡ï¼ˆæœ‰ä¸Šé™ï¼‰
			syncInterval = time.Duration(blockchainConfig.Block.BlockTimeTarget) * time.Second / 2
			if syncInterval < 5*time.Second {
				syncInterval = 5 * time.Second
			}
			if syncInterval > 1*time.Minute {
				syncInterval = 1 * time.Minute
			}
		}
	}

	p.ticker = time.NewTicker(syncInterval)
	p.isRunning = true

	if p.logger != nil {
		p.logger.Infof("âœ… å®šæ—¶åŒæ­¥è°ƒåº¦å™¨å·²å¯åŠ¨ï¼Œæ£€æŸ¥é—´éš”: %v", syncInterval)
	}

	go p.scheduledSyncLoop(ctx)
	return nil
}

// Stop åœæ­¢å®šæ—¶åŒæ­¥è°ƒåº¦å™¨
func (p *PeriodicSyncScheduler) Stop() {
	if !p.isRunning {
		return
	}

	close(p.stopChan)
	if p.ticker != nil {
		p.ticker.Stop()
	}
	p.isRunning = false

	if p.logger != nil {
		p.logger.Info("ğŸ›‘ å®šæ—¶åŒæ­¥è°ƒåº¦å™¨å·²åœæ­¢")
	}
}

// scheduledSyncLoop å®šæ—¶åŒæ­¥å¾ªç¯
func (p *PeriodicSyncScheduler) scheduledSyncLoop(ctx context.Context) {
	for {
		select {
		case <-p.stopChan:
			return
		case <-ctx.Done():
			return
		case <-p.ticker.C:
			p.performScheduledSyncCheck(ctx)
		}
	}
}

// performScheduledSyncCheck æ‰§è¡Œå®šæ—¶åŒæ­¥æ£€æŸ¥
func (p *PeriodicSyncScheduler) performScheduledSyncCheck(ctx context.Context) {
	if p.logger != nil {
		p.logger.Debug("â° æ‰§è¡Œå®šæ—¶åŒæ­¥æ£€æŸ¥")
	}

	// 1. è·å–å½“å‰é“¾çŠ¶æ€
	chainInfo, err := p.chainQuery.GetChainInfo(ctx)
	if err != nil {
		if p.logger != nil {
			p.logger.Warnf("å®šæ—¶åŒæ­¥æ£€æŸ¥-è·å–é“¾çŠ¶æ€å¤±è´¥: %v", err)
		}
		return
	}

	// æ£€æŸ¥é“¾ä¿¡æ¯æ˜¯å¦ä¸º nil
	if chainInfo == nil {
		if p.logger != nil {
			p.logger.Warnf("å®šæ—¶åŒæ­¥æ£€æŸ¥-é“¾ä¿¡æ¯ä¸ºç©º")
		}
		return
	}

	currentHeight := chainInfo.Height
	currentTime := time.Now()

	// 1.1 è¯»å–â€œæœ€æ–°åŒºå—çš„æ—¶é—´æˆ³â€ï¼ˆä¼˜å…ˆç”¨åŒºå—å¤´ timestampï¼Œè€Œä¸æ˜¯æœ¬åœ° wall clock å˜åŒ–ï¼‰
	latestBlockTime := currentTime
	if currentHeight > 0 && p.queryService != nil {
		if blk, err := p.queryService.GetBlockByHeight(ctx, currentHeight); err == nil && blk != nil && blk.Header != nil {
			if ts := unixTimeFromBlockHeaderTimestamp(blk.Header.Timestamp); !ts.IsZero() {
				latestBlockTime = ts
			}
		}
	}

	// æŸ¥è¯¢ç½‘ç»œé«˜åº¦ï¼ˆç”¨äºæ›´æ–° RuntimeStateï¼‰
	var networkHeight uint64 = currentHeight // é»˜è®¤ä½¿ç”¨æœ¬åœ°é«˜åº¦
	if p.runtimeState != nil {
		// å°è¯•æŸ¥è¯¢ç½‘ç»œé«˜åº¦ï¼ˆç®€åŒ–å®ç°ï¼šä½¿ç”¨æœ¬åœ°é«˜åº¦ä½œä¸ºé»˜è®¤å€¼ï¼‰
		// æ³¨æ„ï¼šå®Œæ•´çš„ç½‘ç»œé«˜åº¦æŸ¥è¯¢é€»è¾‘åœ¨ checkSyncImpl ä¸­ï¼Œè¿™é‡Œä»…åšåŸºæœ¬æ›´æ–°
		// è·å–åŒæ­¥æ»åé˜ˆå€¼ï¼ˆä½¿ç”¨é»˜è®¤å€¼ï¼Œé…ç½®ä¸­æš‚æ— æ­¤å­—æ®µï¼‰
		var syncLagThreshold uint64 = 10 // é»˜è®¤10ä¸ªåŒºå—

		// æ›´æ–° RuntimeStateï¼ˆä½¿ç”¨æœ¬åœ°é«˜åº¦ä½œä¸ºç½‘ç»œé«˜åº¦çš„ä¿å®ˆä¼°è®¡ï¼‰
		// æ³¨æ„ï¼šè¿™é‡Œä¸è¿›è¡Œå®Œæ•´çš„ç½‘ç»œé«˜åº¦æŸ¥è¯¢ï¼Œä»¥é¿å…åœ¨å®šæ—¶æ£€æŸ¥ä¸­å¢åŠ ç½‘ç»œå¼€é”€
		// å®Œæ•´çš„ç½‘ç»œé«˜åº¦æŸ¥è¯¢å’ŒçŠ¶æ€æ›´æ–°åœ¨ checkSyncImpl ä¸­è¿›è¡Œ
		isSyncing := p.runtimeState.GetSyncStatus() == p2pi.SyncStatusSyncing
		p.runtimeState.UpdateSyncStatusFromSyncService(
			currentHeight,
			networkHeight, // ä½¿ç”¨æœ¬åœ°é«˜åº¦ä½œä¸ºä¿å®ˆä¼°è®¡
			syncLagThreshold,
			isSyncing,
		)
	}

	// 2. æ£€æŸ¥æ˜¯å¦é•¿æ—¶é—´æ²¡æœ‰æ–°åŒºå—
	var blockStaleThreshold time.Duration = 15 * time.Minute // é»˜è®¤15åˆ†é’Ÿ
	blockchainConfig := p.configProvider.GetBlockchain()
	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.TimeCheckThresholdMins > 0 {
		blockStaleThreshold = time.Duration(blockchainConfig.Sync.Advanced.TimeCheckThresholdMins) * time.Minute
		} else if blockchainConfig.Block.BlockTimeTarget > 0 {
			// è‹¥æœªæ˜¾å¼é…ç½® threshold minsï¼Œåˆ™æŒ‰â€œå‡ºå—ç›®æ ‡æ—¶é—´ * 3 + ç½‘ç»œå»¶è¿Ÿbufferâ€æ´¾ç”Ÿã€‚
			blockStaleThreshold = time.Duration(blockchainConfig.Block.BlockTimeTarget) * time.Second * 3
			if blockStaleThreshold < 30*time.Second {
				blockStaleThreshold = 30 * time.Second
			}
			if blockchainConfig.Sync.Advanced.NetworkLatencyBuffer > 0 {
				blockStaleThreshold += blockchainConfig.Sync.Advanced.NetworkLatencyBuffer
			}
		}
	}

	// åˆå§‹åŒ–çŠ¶æ€è®°å½•
	if p.lastBlockHeight == 0 {
		p.lastBlockHeight = currentHeight
		p.lastBlockTime = latestBlockTime
		if p.logger != nil {
			p.logger.Debugf("å®šæ—¶åŒæ­¥æ£€æŸ¥-åˆå§‹åŒ–çŠ¶æ€è®°å½•: height=%d", currentHeight)
		}
		return
	}

	// 3. åˆ¤æ–­æ˜¯å¦éœ€è¦è§¦å‘åŒæ­¥
	needsSync := false
	reason := ""

	if currentHeight > p.lastBlockHeight {
		// é«˜åº¦å¢åŠ äº†ï¼Œæ›´æ–°è®°å½•
		prev := p.lastBlockHeight
		p.lastBlockHeight = currentHeight
		p.lastBlockTime = latestBlockTime
		if p.logger != nil {
			p.logger.Debugf("å®šæ—¶åŒæ­¥æ£€æŸ¥-é«˜åº¦æ›´æ–°: %d â†’ %d", prev, currentHeight)
		}
	} else if currentTime.Sub(p.lastBlockTime) > blockStaleThreshold {
		// é•¿æ—¶é—´æ²¡æœ‰æ–°åŒºå—ï¼Œè§¦å‘åŒæ­¥
		needsSync = true
		reason = "é•¿æ—¶é—´æ— æ–°åŒºå—"
	}

	if needsSync {
		// å·²åœ¨åŒæ­¥ä¸­åˆ™ä¸é‡å¤è§¦å‘ï¼ˆé¿å…å¯¹å¤–è¡¨ç°ä¸ºâ€œå¤±è´¥/å †ç§¯â€ï¼‰
		if hasActiveSyncTask() {
			if p.logger != nil {
				p.logger.Debugf("â° å®šæ—¶åŒæ­¥è·³è¿‡ï¼šå·²æœ‰åŒæ­¥ä»»åŠ¡è¿›è¡Œä¸­ï¼ˆreason=%sï¼‰", reason)
			}
			return
		}

		// âœ… è½»é‡æ¢é’ˆï¼šå…ˆåš hello/é«˜åº¦é‡‡æ ·åˆ¤æ–­æ˜¯å¦çœŸçš„éœ€è¦ full syncã€‚
		// è®¾è®¡æ„å›¾ï¼š
		// - â€œé•¿æ—¶é—´æ— æ–°åŒºå—â€å¯èƒ½æ˜¯ï¼šç½‘ç»œç¡®å®æ²¡æœ‰å‡ºå—ã€ç½‘ç»œå»¶è¿Ÿã€è®¢é˜…ä¸¢åŒ…/æŠ–åŠ¨ï¼›
		// - full sync æˆæœ¬è¾ƒé«˜ï¼ˆä¼šè¿›å…¥ hello + blocks + rangeï¼‰ï¼Œè€Œ probe åªåš hello/é«˜åº¦é‡‡æ ·ï¼›
		// - å…ˆ probe å†å†³å®šæ˜¯å¦ full syncï¼Œæ—¢ä¿è¯åŠæ—¶æ€§åˆé¿å…æ— è°“ç½‘ç»œå¼€é”€ã€‚
		decision, _ := probeSyncImpl(
			ctx,
			p.chainQuery,
			p.queryService,
			p.routingManager,
			p.networkService,
			p.p2pService,
			p.configProvider,
			p.blockHashClient,
			p.logger,
		)

		if p.logger != nil {
			p.logger.Infof("ğŸ§ª å®šæ—¶åŒæ­¥æ¢é’ˆç»“æœ: need_full_sync=%t reason=%s local=%d network_tip=%d fork=%t sampled=%d hello_ok=%d hint=%s",
				decision.ShouldFullSync,
				decision.Reason,
				currentHeight,
				decision.NetworkTip,
				decision.ForkDetected,
				decision.SampledPeers,
				decision.HelloSuccess,
				func() string {
					if decision.HintPeer == "" {
						return ""
					}
					s := decision.HintPeer.String()
					if len(s) > 12 {
						return s[:12] + "..."
					}
					return s
				}(),
			)
		}

		if !decision.ShouldFullSync {
			// å…³é”®ï¼šæ¢é’ˆç¡®è®¤â€œæ— éœ€ full syncâ€æ—¶ï¼Œé¿å…æ¯ä¸ª tick éƒ½é‡å¤è§¦å‘â€œé•¿æ—¶é—´æ— æ–°åŒºå—â€çš„ full syncã€‚
			// è¿™é‡Œå°† lastBlockTime è§†ä¸ºâ€œå·²é€šè¿‡æ¢é’ˆç¡®è®¤ç½‘ç»œçŠ¶æ€â€çš„æ—¶é—´ç‚¹ï¼Œä»è€Œå»¶åä¸‹ä¸€æ¬¡è§¦å‘ã€‚
			p.lastBlockTime = currentTime
			return
		}

		if p.logger != nil {
			p.logger.Infof("â° å®šæ—¶åŒæ­¥è§¦å‘: %s (ä¸Šæ¬¡åŒºå—æ—¶é—´: %vå‰)",
				reason, currentTime.Sub(p.lastBlockTime))
		}

		// æ¸…ç†è¿‡æœŸçš„èŠ‚ç‚¹åŒæ­¥ç¼“å­˜
		cleanupExpiredPeerRecords(24 * time.Hour)

		// æ‰§è¡ŒåŒæ­¥æ£€æŸ¥ï¼ˆæºå¸¦ tempStoreï¼Œç¡®ä¿åˆ†é¡µè¡¥é½è·¯å¾„å¯ç”¨ä¹±åºåŒºå—ä¸´æ—¶å­˜å‚¨èƒ½åŠ›ï¼‰
		syncCtx := ctx
		if decision.HintPeer != "" {
			syncCtx = ContextWithPeerHint(syncCtx, decision.HintPeer)
		}
		err := triggerSyncImpl(syncCtx, p.chainQuery, p.queryService, p.blockValidator, p.blockProcessor,
			p.routingManager, p.networkService, p.p2pService, p.configProvider, p.tempStore, p.blockHashClient, p.forkHandler, p.logger, p.eventBus, nil)
		if err != nil {
			if p.logger != nil {
				p.logger.Warnf("å®šæ—¶åŒæ­¥æ‰§è¡Œå¤±è´¥: %v", err)
			}
		}
	} else {
		if p.logger != nil {
			p.logger.Debug("â° å®šæ—¶åŒæ­¥æ£€æŸ¥å®Œæˆï¼Œæ— éœ€åŒæ­¥")
		}
	}
}
