// Package height_gate_test æä¾›é«˜åº¦é—¨é—¸ç®¡ç†å™¨çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - åŸºæœ¬é«˜åº¦æ“ä½œæµ‹è¯•
// - é«˜åº¦éªŒè¯é€»è¾‘æµ‹è¯•
// - åˆ†å‰åœºæ™¯æµ‹è¯•
// - å¹¶å‘å®‰å…¨æµ‹è¯•
// - æ€§èƒ½åŸºå‡†æµ‹è¯•
package height_gate

import (
	"sync"
	"testing"
	"time"

	"go.uber.org/zap"

	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// mockLogger æµ‹è¯•ç”¨çš„æ¨¡æ‹Ÿæ—¥å¿—å™¨ï¼Œå®ç°å®Œæ•´çš„Loggeræ¥å£
type mockLogger struct{}

func (m *mockLogger) Debug(msg string)                          {}
func (m *mockLogger) Debugf(format string, args ...interface{}) {}
func (m *mockLogger) Info(msg string)                           {}
func (m *mockLogger) Infof(format string, args ...interface{})  {}
func (m *mockLogger) Warn(msg string)                           {}
func (m *mockLogger) Warnf(format string, args ...interface{})  {}
func (m *mockLogger) Error(msg string)                          {}
func (m *mockLogger) Errorf(format string, args ...interface{}) {}
func (m *mockLogger) Fatal(msg string)                          {}
func (m *mockLogger) Fatalf(format string, args ...interface{}) {}
func (m *mockLogger) With(args ...interface{}) log.Logger       { return m }
func (m *mockLogger) Sync() error                               { return nil }
func (m *mockLogger) GetZapLogger() *zap.Logger                 { return nil }

// newTestHeightGate åˆ›å»ºç”¨äºæµ‹è¯•çš„é«˜åº¦é—¨é—¸ç®¡ç†å™¨å®ä¾‹
func newTestHeightGate() interfaces.HeightGateManager {
	return NewHeightGateService(&mockLogger{}, 100)
}

// TestNewHeightGateService æµ‹è¯•é«˜åº¦é—¨é—¸ç®¡ç†å™¨çš„åˆ›å»º
func TestNewHeightGateService(t *testing.T) {
	manager := newTestHeightGate()
	if manager == nil {
		t.Fatal("é«˜åº¦é—¨é—¸ç®¡ç†å™¨åˆ›å»ºå¤±è´¥")
	}

	// éªŒè¯åˆå§‹é«˜åº¦
	initialHeight := manager.GetLastProcessedHeight()
	if initialHeight != 0 {
		t.Errorf("æœŸæœ›åˆå§‹é«˜åº¦ä¸º 0ï¼Œå®é™…ä¸º %d", initialHeight)
	}
}

// TestGetLastProcessedHeight æµ‹è¯•é«˜åº¦è·å–åŠŸèƒ½
func TestGetLastProcessedHeight(t *testing.T) {
	manager := newTestHeightGate()

	// æµ‹è¯•åˆå§‹é«˜åº¦è·å–
	height := manager.GetLastProcessedHeight()
	if height != 0 {
		t.Errorf("æœŸæœ›é«˜åº¦ä¸º 0ï¼Œå®é™…ä¸º %d", height)
	}

	// æµ‹è¯•å¤šæ¬¡è·å–çš„ä¸€è‡´æ€§
	for i := 0; i < 100; i++ {
		if manager.GetLastProcessedHeight() != 0 {
			t.Errorf("ç¬¬ %d æ¬¡è·å–é«˜åº¦ä¸ä¸€è‡´", i+1)
		}
	}
}

// TestUpdateLastProcessedHeight æµ‹è¯•é«˜åº¦æ›´æ–°åŠŸèƒ½
func TestUpdateLastProcessedHeight(t *testing.T) {
	manager := newTestHeightGate()

	// æµ‹è¯•é«˜åº¦é€’å¢æ›´æ–°
	testHeights := []uint64{1, 2, 5, 10, 100, 1000}
	for _, targetHeight := range testHeights {
		manager.UpdateLastProcessedHeight(targetHeight)
		currentHeight := manager.GetLastProcessedHeight()
		if currentHeight != targetHeight {
			t.Errorf("é«˜åº¦æ›´æ–°å¤±è´¥ï¼šæœŸæœ› %dï¼Œå®é™… %d", targetHeight, currentHeight)
		}
	}

	// æµ‹è¯•å¹‚ç­‰æ›´æ–°
	manager.UpdateLastProcessedHeight(1000)
	if manager.GetLastProcessedHeight() != 1000 {
		t.Error("å¹‚ç­‰æ›´æ–°åé«˜åº¦åº”ä¿æŒä¸å˜")
	}
}

// TestHeightForkHandling æµ‹è¯•åˆ†å‰åœºæ™¯çš„é«˜åº¦å¤„ç†
func TestHeightForkHandling(t *testing.T) {
	manager := newTestHeightGate()

	// è®¾ç½®åˆå§‹é«˜åº¦
	manager.UpdateLastProcessedHeight(100)

	// æµ‹è¯•åˆæ³•çš„åˆ†å‰å›é€€ï¼ˆåœ¨uint64(100)èŒƒå›´å†…ï¼‰
	testCases := []struct {
		targetHeight uint64
		shouldUpdate bool
		description  string
	}{
		// åˆæ³•çš„åˆ†å‰å›é€€
		{99, true, "å›é€€1ä¸ªåŒºå—ï¼ˆåˆæ³•ï¼‰"},
		{95, true, "å›é€€4ä¸ªåŒºå—ï¼ˆåˆæ³•ï¼‰"},
		{50, true, "å›é€€45ä¸ªåŒºå—ï¼ˆåˆæ³•ï¼‰"},
		{1, true, "å›é€€98ä¸ªåŒºå—ï¼ˆæ¥è¿‘æœ€å¤§æ·±åº¦ï¼Œåˆæ³•ï¼‰"},

		// é«˜åº¦é€’å¢ï¼ˆæ€»æ˜¯åˆæ³•ï¼‰
		{2, true, "é€’å¢åˆ°2ï¼ˆåˆæ³•ï¼‰"},
		{150, true, "å¤§å¹…é€’å¢ï¼ˆåˆæ³•ï¼‰"},

		// éæ³•çš„æ·±åº¦åˆ†å‰
		// æ³¨æ„ï¼šå½“å‰é«˜åº¦150ï¼Œuint64(100)=100ï¼Œæ‰€ä»¥150-100=50ä»¥ä¸‹çš„é«˜åº¦åº”è¯¥è¢«æ‹’ç»
	}

	for _, tc := range testCases {
		oldHeight := manager.GetLastProcessedHeight()
		manager.UpdateLastProcessedHeight(tc.targetHeight)
		newHeight := manager.GetLastProcessedHeight()

		if tc.shouldUpdate {
			if newHeight != tc.targetHeight {
				t.Errorf("%s: æœŸæœ›é«˜åº¦æ›´æ–°ä¸º %dï¼Œå®é™…ä¸º %d", tc.description, tc.targetHeight, newHeight)
			}
		} else {
			if newHeight != oldHeight {
				t.Errorf("%s: æœŸæœ›é«˜åº¦ä¿æŒä¸º %dï¼Œå®é™…æ›´æ–°ä¸º %d", tc.description, oldHeight, newHeight)
			}
		}
	}
}

// TestDeepForkRejection æµ‹è¯•æ·±åº¦åˆ†å‰æ‹’ç»æœºåˆ¶
func TestDeepForkRejection(t *testing.T) {
	manager := newTestHeightGate()

	// è®¾ç½®ä¸€ä¸ªè¾ƒé«˜çš„åˆå§‹é«˜åº¦
	initialHeight := uint64(1000)
	manager.UpdateLastProcessedHeight(initialHeight)

	// æµ‹è¯•è¶…è¿‡uint64(100)çš„åˆ†å‰å›é€€åº”è¯¥è¢«æ‹’ç»
	deepForkHeight := initialHeight - uint64(100) - 1 // è¶…è¿‡æœ€å¤§åˆ†å‰æ·±åº¦
	manager.UpdateLastProcessedHeight(deepForkHeight)

	// éªŒè¯é«˜åº¦æ²¡æœ‰æ”¹å˜
	currentHeight := manager.GetLastProcessedHeight()
	if currentHeight != initialHeight {
		t.Errorf("æ·±åº¦åˆ†å‰åº”è¯¥è¢«æ‹’ç»ï¼šæœŸæœ›é«˜åº¦ä¿æŒ %dï¼Œå®é™…ä¸º %d", initialHeight, currentHeight)
	}

	// æµ‹è¯•æ­£å¥½åœ¨è¾¹ç•Œçš„åˆ†å‰å›é€€åº”è¯¥è¢«å…è®¸
	boundaryHeight := initialHeight - uint64(100)
	manager.UpdateLastProcessedHeight(boundaryHeight)

	currentHeight = manager.GetLastProcessedHeight()
	if currentHeight != boundaryHeight {
		t.Errorf("è¾¹ç•Œåˆ†å‰åº”è¯¥è¢«å…è®¸ï¼šæœŸæœ›é«˜åº¦æ›´æ–°ä¸º %dï¼Œå®é™…ä¸º %d", boundaryHeight, currentHeight)
	}
}

// TestConcurrentOperations æµ‹è¯•å¹¶å‘å®‰å…¨
func TestConcurrentOperations(t *testing.T) {
	manager := newTestHeightGate()
	const numGoroutines = 1000
	const numOperationsPerGoroutine = 100

	var wg sync.WaitGroup

	// å¹¶å‘è¯»å–æµ‹è¯•
	for i := 0; i < numGoroutines; i++ {
		wg.Add(1)
		go func() {
			defer wg.Done()
			for j := 0; j < numOperationsPerGoroutine; j++ {
				_ = manager.GetLastProcessedHeight() // å¹¶å‘è¯»å–åº”è¯¥æ˜¯å®‰å…¨çš„
			}
		}()
	}

	// å¹¶å‘æ›´æ–°æµ‹è¯•ï¼ˆå°‘é‡goroutineè¿›è¡Œæ›´æ–°ï¼Œé¿å…ç«äº‰æ¡ä»¶å¯¼è‡´çš„ä¸ç¡®å®šæ€§ï¼‰
	const numUpdateGoroutines = 10
	for i := 0; i < numUpdateGoroutines; i++ {
		wg.Add(1)
		go func(id int) {
			defer wg.Done()
			for j := 0; j < 10; j++ {
				// æ¯ä¸ªgoroutineæ›´æ–°åˆ°ä¸åŒçš„é«˜åº¦èŒƒå›´ï¼Œé¿å…å†²çª
				height := uint64(id*100 + j)
				manager.UpdateLastProcessedHeight(height)
			}
		}(i)
	}

	wg.Wait()

	// éªŒè¯æœ€ç»ˆçŠ¶æ€çš„ä¸€è‡´æ€§ï¼ˆåº”è¯¥æ²¡æœ‰æ•°æ®ç«äº‰æˆ–å´©æºƒï¼‰
	finalHeight := manager.GetLastProcessedHeight()
	// æ³¨æ„ï¼šuint64ä¸èƒ½ä¸ºè´Ÿæ•°ï¼Œè¿™é‡Œåªæ˜¯ç¡®ä¿è·å–åˆ°äº†æœ‰æ•ˆå€¼
	_ = finalHeight // è·å–é«˜åº¦æˆåŠŸå³è¡¨æ˜çŠ¶æ€æ­£å¸¸
}

// TestHighConcurrentReads æµ‹è¯•é«˜å¹¶å‘è¯»å–åœºæ™¯
func TestHighConcurrentReads(t *testing.T) {
	manager := newTestHeightGate()
	const numReaders = 10000 // æµ‹è¯•10000+å¹¶å‘è¯»å–
	const numReadsPerReader = 100

	// è®¾ç½®ä¸€ä¸ªåˆå§‹é«˜åº¦
	manager.UpdateLastProcessedHeight(12345)

	var wg sync.WaitGroup
	startTime := time.Now()

	// å¯åŠ¨å¤§é‡å¹¶å‘è¯»å–
	for i := 0; i < numReaders; i++ {
		wg.Add(1)
		go func() {
			defer wg.Done()
			for j := 0; j < numReadsPerReader; j++ {
				height := manager.GetLastProcessedHeight()
				if height != 12345 {
					t.Errorf("å¹¶å‘è¯»å–ç»“æœä¸æ­£ç¡®ï¼šæœŸæœ› 12345ï¼Œå¾—åˆ° %d", height)
					return
				}
			}
		}()
	}

	wg.Wait()
	duration := time.Since(startTime)

	totalReads := numReaders * numReadsPerReader
	avgReadTime := duration / time.Duration(totalReads)

	t.Logf("é«˜å¹¶å‘è¯»å–æµ‹è¯•å®Œæˆï¼š")
	t.Logf("- å¹¶å‘è¯»å–è€…: %d", numReaders)
	t.Logf("- æ¯ä¸ªè¯»å–è€…æ“ä½œæ•°: %d", numReadsPerReader)
	t.Logf("- æ€»è¯»å–æ¬¡æ•°: %d", totalReads)
	t.Logf("- æ€»è€—æ—¶: %v", duration)
	t.Logf("- å¹³å‡æ¯æ¬¡è¯»å–: %v", avgReadTime)

	// éªŒè¯æ€§èƒ½è¦æ±‚ï¼ˆç›®æ ‡ < 100nsï¼Œä½†åœ¨æµ‹è¯•ç¯å¢ƒä¸­å¯èƒ½è¾ƒé«˜ï¼‰
	if avgReadTime > 1*time.Microsecond {
		t.Logf("è­¦å‘Šï¼šå¹³å‡è¯»å–æ—¶é—´ %v è¶…è¿‡1Î¼sï¼Œä½†è¿™å¯èƒ½æ˜¯ç”±äºæµ‹è¯•ç¯å¢ƒçš„å¼€é”€", avgReadTime)
	}
}

// TestFormatUint64 æµ‹è¯•æ•°å­—æ ¼å¼åŒ–å‡½æ•°
func TestFormatUint64(t *testing.T) {
	testCases := []struct {
		input    uint64
		expected string
	}{
		{0, "0"},
		{1, "1"},
		{42, "42"},
		{123, "123"},
		{1000, "1000"},
		{12345, "12345"},
		{18446744073709551615, "18446744073709551615"}, // uint64æœ€å¤§å€¼
	}

	for _, tc := range testCases {
		result := formatUint64(tc.input)
		if result != tc.expected {
			t.Errorf("formatUint64(%d): æœŸæœ› %sï¼Œå®é™… %s", tc.input, tc.expected, result)
		}
	}
}

// TestHeightUpdateSequence æµ‹è¯•å®Œæ•´çš„é«˜åº¦æ›´æ–°åºåˆ—
func TestHeightUpdateSequence(t *testing.T) {
	manager := newTestHeightGate()

	// æ¨¡æ‹Ÿæ­£å¸¸çš„åŒºå—é“¾è¿›å±•
	sequence := []struct {
		height      uint64
		description string
	}{
		{1, "åˆ›ä¸–åç¬¬ä¸€ä¸ªåŒºå—"},
		{2, "ç¬¬äºŒä¸ªåŒºå—"},
		{3, "ç¬¬ä¸‰ä¸ªåŒºå—"},
		{5, "è·³è·ƒåˆ°ç¬¬äº”ä¸ªåŒºå—"},
		{6, "ç»§ç»­åˆ°ç¬¬å…­ä¸ªåŒºå—"},
		{4, "åˆ†å‰å›é€€åˆ°ç¬¬å››ä¸ªåŒºå—"},
		{5, "åˆ†å‰åç»§ç»­åˆ°ç¬¬äº”ä¸ªåŒºå—"},
		{7, "è¶…è¿‡åŸæ¥çš„é«˜åº¦"},
		{10, "ç»§ç»­å¢é•¿"},
	}

	for _, step := range sequence {
		manager.UpdateLastProcessedHeight(step.height)
		currentHeight := manager.GetLastProcessedHeight()
		if currentHeight != step.height {
			t.Errorf("%s: æœŸæœ›é«˜åº¦ %dï¼Œå®é™… %d", step.description, step.height, currentHeight)
		}
	}
}

// TestEdgeCases æµ‹è¯•è¾¹ç•Œæƒ…å†µ
func TestEdgeCases(t *testing.T) {
	// æµ‹è¯•0é«˜åº¦çš„è¾¹ç•Œ
	t.Run("ZeroHeight", func(t *testing.T) {
		manager := newTestHeightGate()
		manager.UpdateLastProcessedHeight(0)
		if manager.GetLastProcessedHeight() != 0 {
			t.Error("0é«˜åº¦æ›´æ–°å¤±è´¥")
		}
	})

	// æµ‹è¯•æ­£å¸¸é«˜åº¦é€’å¢
	t.Run("LargeHeightIncrement", func(t *testing.T) {
		manager := newTestHeightGate()
		largeHeight := uint64(10000)
		manager.UpdateLastProcessedHeight(largeHeight)
		if manager.GetLastProcessedHeight() != largeHeight {
			t.Error("å¤§é«˜åº¦å€¼æ›´æ–°å¤±è´¥")
		}
	})

	// æµ‹è¯•æœ€å¤§å…è®¸å›é€€æ·±åº¦
	t.Run("MaxAllowedRollback", func(t *testing.T) {
		manager := newTestHeightGate()
		baseHeight := uint64(1000)
		manager.UpdateLastProcessedHeight(baseHeight)

		// æµ‹è¯•æ­£å¥½åœ¨uint64(100)è¾¹ç•Œçš„å›é€€ï¼ˆåº”è¯¥å…è®¸ï¼‰
		rollbackTarget := baseHeight - uint64(100)
		manager.UpdateLastProcessedHeight(rollbackTarget)
		if manager.GetLastProcessedHeight() != rollbackTarget {
			t.Errorf("æœ€å¤§å…è®¸å›é€€æ·±åº¦æµ‹è¯•å¤±è´¥ï¼šæœŸæœ› %dï¼Œå®é™… %d", rollbackTarget, manager.GetLastProcessedHeight())
		}
	})

	// æµ‹è¯•è¶…è¿‡æœ€å¤§å›é€€æ·±åº¦ï¼ˆåº”è¯¥è¢«æ‹’ç»ï¼‰
	t.Run("ExceedMaxRollback", func(t *testing.T) {
		manager := newTestHeightGate()
		baseHeight := uint64(1000)
		manager.UpdateLastProcessedHeight(baseHeight)

		// æµ‹è¯•è¶…è¿‡uint64(100)çš„å›é€€ï¼ˆåº”è¯¥è¢«æ‹’ç»ï¼‰
		invalidRollback := baseHeight - uint64(100) - 1
		manager.UpdateLastProcessedHeight(invalidRollback)

		currentHeight := manager.GetLastProcessedHeight()
		if currentHeight != baseHeight {
			t.Errorf("è¶…è¿‡æœ€å¤§å›é€€æ·±åº¦åº”è¯¥è¢«æ‹’ç»ï¼šæœŸæœ›ä¿æŒ %dï¼Œå®é™…å˜æˆ %d", baseHeight, currentHeight)
		}
	})

	// æµ‹è¯•uint64è¾¹ç•Œå€¼
	t.Run("Uint64Boundary", func(t *testing.T) {
		manager := newTestHeightGate()

		// æµ‹è¯•æ¥è¿‘uint64æœ€å¤§å€¼çš„é«˜åº¦ï¼ˆé¿å…æº¢å‡ºï¼‰
		maxSafeHeight := uint64(18446744073709551615 - uint64(100) - 1000) // ç•™å‡ºå®‰å…¨è¾¹ç•Œ
		manager.UpdateLastProcessedHeight(maxSafeHeight)
		if manager.GetLastProcessedHeight() != maxSafeHeight {
			t.Error("æ¥è¿‘uint64æœ€å¤§å€¼çš„é«˜åº¦æ›´æ–°å¤±è´¥")
		}
	})
}

// BenchmarkGetLastProcessedHeight åŸºå‡†æµ‹è¯•ï¼šé«˜åº¦è·å–æ€§èƒ½
func BenchmarkGetLastProcessedHeight(b *testing.B) {
	manager := newTestHeightGate()
	manager.UpdateLastProcessedHeight(12345)

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		_ = manager.GetLastProcessedHeight()
	}
}

// BenchmarkUpdateLastProcessedHeight åŸºå‡†æµ‹è¯•ï¼šé«˜åº¦æ›´æ–°æ€§èƒ½
func BenchmarkUpdateLastProcessedHeight(b *testing.B) {
	manager := newTestHeightGate()

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		manager.UpdateLastProcessedHeight(uint64(i))
	}
}

// BenchmarkConcurrentReads åŸºå‡†æµ‹è¯•ï¼šå¹¶å‘è¯»å–æ€§èƒ½
func BenchmarkConcurrentReads(b *testing.B) {
	manager := newTestHeightGate()
	manager.UpdateLastProcessedHeight(12345)

	b.RunParallel(func(pb *testing.PB) {
		for pb.Next() {
			_ = manager.GetLastProcessedHeight()
		}
	})
}

// BenchmarkFormatUint64 åŸºå‡†æµ‹è¯•ï¼šæ•°å­—æ ¼å¼åŒ–æ€§èƒ½
func BenchmarkFormatUint64(b *testing.B) {
	testValue := uint64(123456789)

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		_ = formatUint64(testValue)
	}
}

// BenchmarkMixedOperations åŸºå‡†æµ‹è¯•ï¼šæ··åˆè¯»å†™æ“ä½œ
func BenchmarkMixedOperations(b *testing.B) {
	manager := newTestHeightGate()

	b.RunParallel(func(pb *testing.PB) {
		counter := 0
		for pb.Next() {
			if counter%10 == 0 {
				// 10%çš„æ“ä½œæ˜¯å†™å…¥
				manager.UpdateLastProcessedHeight(uint64(counter))
			} else {
				// 90%çš„æ“ä½œæ˜¯è¯»å–
				_ = manager.GetLastProcessedHeight()
			}
			counter++
		}
	})
}
