// Package orchestrator å®ç°æŒ–çŸ¿ç¼–æ’å™¨çš„ç¡®è®¤ç­‰å¾…å’ŒåŒæ­¥è§¦å‘åŠŸèƒ½
//
// â³ **å…±è¯†æ¨¡å¼æ„ŸçŸ¥çš„ç¡®è®¤ç­‰å¾…æ¨¡å—**
//
// ğŸ¯ **æ ¹æ®å…±è¯†æ¨¡å¼é‡‡ç”¨ä¸åŒçš„ç¡®è®¤ç­–ç•¥**ï¼š
//   - åˆ†å¸ƒå¼å…±è¯†æ¨¡å¼: ç­‰å¾…ç½‘ç»œç¡®è®¤ï¼Œè¶…æ—¶è§¦å‘åŒæ­¥
//   - å•èŠ‚ç‚¹å¼€å‘æ¨¡å¼: æœ¬åœ°éªŒè¯ï¼Œç«‹å³ç¡®è®¤
//
// æœ¬æ–‡ä»¶å®ç°åŒºå—æäº¤åçš„ç¡®è®¤ç­‰å¾…å’ŒåŒæ­¥è§¦å‘é€»è¾‘ï¼š
// 1. åŒºå—ç¡®è®¤ç­‰å¾… - ç­‰å¾…åŒºå—åœ¨ç½‘ç»œä¸­çš„ç¡®è®¤
// 2. ç¡®è®¤è¶…æ—¶å¤„ç† - è®¾ç½®åˆç†çš„ç­‰å¾…è¶…æ—¶å¹¶å¤„ç†è¶…æ—¶æƒ…å†µ
// 3. åŒæ­¥è§¦å‘æœºåˆ¶ - ç¡®è®¤è¶…æ—¶æ—¶ä¸»åŠ¨è§¦å‘åŒæ­¥ä»¥è·å–æœ€æ–°çŠ¶æ€
// 4. é«˜åº¦é—¨é—¸æ›´æ–° - ç¡®è®¤æˆåŠŸæˆ–è¶…æ—¶åæ›´æ–°å·²å¤„ç†é«˜åº¦
// 5. çŠ¶æ€åè°ƒç®¡ç† - ä¸å…¶ä»–ç»„ä»¶åè°ƒæŒ–çŸ¿åç»­å¤„ç†
package orchestrator

import (
	"context"
	"fmt"
	"strings"
	"time"

	consensusif "github.com/weisyn/v1/internal/core/consensus/interfaces"
	blocktypes "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/types"
)

// æ³¨æ„ï¼šç¡®è®¤è¶…æ—¶å’Œæ£€æŸ¥é—´éš”ç°åœ¨ä»é…ç½®ä¸­è·å–ï¼Œä¸å†ä½¿ç”¨ç¡¬ç¼–ç å¸¸é‡

// waitForConfirmation ç­‰å¾…åŒºå—ç¡®è®¤ï¼ˆæ ¹æ®å…±è¯†æ¨¡å¼è‡ªåŠ¨åˆ†æ”¯ï¼‰
//
// ğŸ¯ **å…±è¯†æ¨¡å¼åˆ†æ”¯å¤„ç†**ï¼š
//   - åˆ†å¸ƒå¼å…±è¯†æ¨¡å¼: ç­‰å¾…ç½‘ç»œç¡®è®¤
//   - å•èŠ‚ç‚¹å¼€å‘æ¨¡å¼: æœ¬åœ°éªŒè¯
//
// è¿™æ˜¯ç¡®è®¤ç­‰å¾…çš„ä¸»å…¥å£æ–¹æ³•ï¼Œè¢« execute_mining_round.go è°ƒç”¨
func (s *MiningOrchestratorService) waitForConfirmation(ctx context.Context, minedBlock *blocktypes.Block) error {
	s.logger.Info("å¼€å§‹ç­‰å¾…åŒºå—ç¡®è®¤")

	// âš ï¸ ç³»ç»Ÿå†…ä¸å­˜åœ¨â€œå•èŠ‚ç‚¹å…±è¯†æ¨¡å¼â€ï¼š
	// v2ï¼šç¡®è®¤ä¸å†å¼ºä¸²è¡Œé˜»å¡æŒ–çŸ¿ä¸»å¾ªç¯ï¼Œè€Œæ˜¯å¯åŠ¨ watcher ç›‘æ§ç¡®è®¤ã€‚
	return s.startDistributedConfirmationWatch(ctx, minedBlock)
}

// confirmationWatch tracks a single height confirmation process (v2 non-blocking).
type confirmationWatch struct {
	height       uint64
	startedAt    time.Time
	lastSubmitAt time.Time
	submits      uint64
	cancel       context.CancelFunc
}

// startDistributedConfirmationWatch åˆ†å¸ƒå¼å…±è¯†æ¨¡å¼ï¼šå¯åŠ¨åå°ç¡®è®¤ watcherï¼ˆéé˜»å¡ï¼‰
//
// ğŸ¯ **ç”Ÿäº§ç¯å¢ƒæ ‡å‡†è·¯å¾„**ï¼š
//   - ä¸é˜»å¡æŒ–çŸ¿ä¸»å¾ªç¯ï¼ˆé¿å…ç¡®è®¤é—¨é—¸å¡ä½å¯¼è‡´â€œå…¨é“¾åœæ‘†â€ï¼‰
//   - åå°é€šè¿‡æ£€æŸ¥é“¾é«˜åº¦å˜åŒ–æ¥åˆ¤æ–­ç¡®è®¤çŠ¶æ€
//   - è¶…æ—¶åè§¦å‘åŒæ­¥ + è¾“å‡ºè¯Šæ–­æ—¥å¿—ï¼ˆpeer æ•°ã€è¿›åº¦ã€åŒæ­¥çŠ¶æ€ç­‰ï¼‰
//
// @param ctx ä¸Šä¸‹æ–‡å¯¹è±¡
// @param minedBlock å·²æŒ–å‡ºçš„å®Œæ•´åŒºå—
// @return error ç¡®è®¤è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (s *MiningOrchestratorService) startDistributedConfirmationWatch(ctx context.Context, minedBlock *blocktypes.Block) error {
	if minedBlock == nil || minedBlock.Header == nil {
		return fmt.Errorf("minedBlock/header ä¸èƒ½ä¸ºç©º")
	}
	if s.minerConfig == nil {
		return fmt.Errorf("minerConfig æœªæ³¨å…¥ï¼Œæ— æ³•å¯åŠ¨ç¡®è®¤ watcher")
	}

	expectedHeight := minedBlock.Header.Height
	now := time.Now()

	// v2ï¼šæŒ‰é«˜åº¦å»é‡ï¼Œåªå…è®¸ä¸€ä¸ª watcher è¿½è¸ªè¯¥é«˜åº¦ï¼Œé¿å… goroutine æ³„æ¼ä¸æ—¥å¿—é£æš´
	s.confirmMu.Lock()
	if existing := s.confirmWatches[expectedHeight]; existing != nil {
		existing.lastSubmitAt = now
		existing.submits++
		s.confirmMu.Unlock()
		return nil
	}

	watchCtx, cancel := context.WithCancel(ctx)
	w := &confirmationWatch{
		height:       expectedHeight,
		startedAt:    now,
		lastSubmitAt: now,
		submits:      1,
		cancel:       cancel,
	}
	s.confirmWatches[expectedHeight] = w
	s.confirmMu.Unlock()

	if s.logger != nil {
		s.logger.Infof("ğŸ”­ v2 å¯åŠ¨ç¡®è®¤ watcher: height=%d", expectedHeight)
	}

	go s.runConfirmationWatch(watchCtx, w)
	return nil
}

func (s *MiningOrchestratorService) runConfirmationWatch(ctx context.Context, w *confirmationWatch) {
	if w == nil {
		return
	}
	defer func() {
		s.confirmMu.Lock()
		delete(s.confirmWatches, w.height)
		s.confirmMu.Unlock()
	}()

	// è¶…æ—¶é…ç½®ï¼ˆå…œåº• 30sï¼‰
	timeout := s.minerConfig.ConfirmationTimeout
	if timeout <= 0 {
		timeout = 30 * time.Second
	}

	// æ£€æŸ¥é—´éš”é…ç½®ï¼ˆå…œåº• 1sï¼‰
	interval := s.minerConfig.ConfirmationCheckInterval
	if interval <= 0 {
		interval = 1 * time.Second
	}

	// è¯Šæ–­æ—¥å¿—é—´éš”ï¼ˆå…œåº• 5sï¼‰
	diagInterval := 5 * time.Second
	if s.minerConfig != nil && s.minerConfig.ConfirmationDiagInterval > 0 {
		diagInterval = s.minerConfig.ConfirmationDiagInterval
	}
	nextDiagAt := time.Now().Add(diagInterval)

	deadline := time.NewTimer(timeout)
	defer deadline.Stop()
	ticker := time.NewTicker(interval)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-deadline.C:
			// è¶…æ—¶ï¼šè§¦å‘åŒæ­¥ + è¾“å‡ºè¯Šæ–­ï¼Œä½†ä¸é˜»å¡ä¸»æŒ–çŸ¿å¾ªç¯
			s.logConfirmationStall(ctx, w, fmt.Errorf("ç¡®è®¤è¶…æ—¶ï¼ˆtimeout=%sï¼‰", timeout))
			s.applyConfirmationTimeoutFallback(w)
			return
		case <-ticker.C:
			// å·²ç¡®è®¤ï¼Ÿ
			if err := s.checkBlockConfirmation(ctx, w.height); err == nil {
				// äºŒæ¬¡éªŒè¯å¹¶æ›´æ–°é«˜åº¦é—¨é—¸
				if err := s.validateChainHeightBeforeGateUpdate(ctx, w.height); err == nil {
					s.updateHeightGate(w.height)
				} else if s.logger != nil {
					s.logger.Warnf("ç¡®è®¤ watcherï¼šé—¨é—¸æ›´æ–°å‰éªŒè¯å¤±è´¥: %v", err)
				}
				if s.logger != nil {
					s.logger.Infof("âœ… v2 ç¡®è®¤ watcherï¼šåŒºå—å·²ç¡®è®¤: height=%d", w.height)
				}
				return
			}

			// å‘¨æœŸæ€§è¯Šæ–­ï¼ˆé¿å…æ—¥å¿—åˆ·å±ï¼‰
			if time.Now().After(nextDiagAt) {
				nextDiagAt = time.Now().Add(diagInterval)
				s.logConfirmationStall(ctx, w, nil)
			}
		}
	}
}

func (s *MiningOrchestratorService) applyConfirmationTimeoutFallback(w *confirmationWatch) {
	if s == nil {
		return
	}
	action := "sync"
	if s.minerConfig != nil && strings.TrimSpace(s.minerConfig.ConfirmationTimeoutFallback) != "" {
		action = strings.ToLower(strings.TrimSpace(s.minerConfig.ConfirmationTimeoutFallback))
	}

	switch action {
	case "drop":
		// ä»…è®°å½•è¯Šæ–­ï¼Œç»§ç»­æŒ–çŸ¿ï¼ˆä¸è§¦å‘ä»»ä½•é¢å¤–åŠ¨ä½œï¼‰
		if s.logger != nil && w != nil {
			s.logger.Warnf("ğŸ—‘ï¸ v2 ç¡®è®¤è¶…æ—¶é€€è·¯=dropï¼šä¸¢å¼ƒæœ¬è½®ç¡®è®¤è·Ÿè¸ªï¼ˆheight=%dï¼‰", w.height)
		}
		return

	default: // "sync"
	}

	// syncï¼šè§¦å‘ä¸€æ¬¡åŒæ­¥ï¼Œç»§ç»­æŒ–çŸ¿
	if err := s.triggerSyncIfNeeded(context.Background()); err != nil && s.logger != nil {
		s.logger.Warnf("ç¡®è®¤è¶…æ—¶åè§¦å‘åŒæ­¥å¤±è´¥: %v", err)
	}
}

// logConfirmationStall prints actionable diagnostics for confirmation stalls.
// It is best-effort and must never panic.
func (s *MiningOrchestratorService) logConfirmationStall(ctx context.Context, w *confirmationWatch, cause error) {
	if s == nil || s.logger == nil || w == nil {
		return
	}

	// 1) é“¾é«˜åº¦/çŠ¶æ€
	var chainHeight uint64
	var chainStatus string
	if s.chainQuery != nil {
		if chainInfo, err := s.chainQuery.GetChainInfo(ctx); err == nil && chainInfo != nil {
			chainHeight = chainInfo.Height
			chainStatus = chainInfo.Status
		}
	}

	// 2) åŒæ­¥çŠ¶æ€ï¼ˆç½‘ç»œé«˜åº¦/peerä¸è¶³çš„å¸¸è§æ ¹å› ï¼‰
	var (
		localHeight   uint64
		networkHeight uint64
		syncStatus    string
	)
	if s.syncService != nil {
		if st, err := s.syncService.CheckSync(ctx); err == nil && st != nil {
			localHeight = st.CurrentHeight
			networkHeight = st.NetworkHeight
			syncStatus = st.Status.String()
		}
	}

	// 3) gossip è®¢é˜… peersï¼ˆç²—ç•¥åæ˜ â€œæ˜¯å¦èƒ½æ”¶åˆ°å…±è¯†ç»“æœå¹¿æ’­â€ï¼‰
	var consensusPeers int
	var registeredProtocols int
	if s.networkService != nil {
		consensusPeers = len(s.networkService.GetTopicPeers(protocols.TopicConsensusResult))
		registeredProtocols = len(s.networkService.ListProtocols())
	}

	// 4) èšåˆå™¨ä¾§ï¼ˆå¦‚æœæ³¨å…¥çš„æ˜¯ aggregator.Managerï¼Œå¯é€šè¿‡ type assertion æ‹¿åˆ°æ›´å¤šçŠ¶æ€ï¼‰
	var (
		aggState  string
		aggHeight uint64
		progress  *types.CollectionProgress
		distStats *types.DistanceStatistics
	)
	if s.aggregatorController != nil {
		if p, ok := any(s.aggregatorController).(interface {
			GetCurrentState() consensusif.AggregationState
			GetCurrentHeight() uint64
		}); ok {
			aggState = p.GetCurrentState().String()
			aggHeight = p.GetCurrentHeight()
		}
		if p, ok := any(s.aggregatorController).(interface {
			GetCollectionProgress(height uint64) (*types.CollectionProgress, error)
		}); ok {
			if cp, err := p.GetCollectionProgress(w.height); err == nil {
				progress = cp
			}
		}
		if p, ok := any(s.aggregatorController).(interface {
			GetDistanceStatistics() *types.DistanceStatistics
		}); ok {
			distStats = p.GetDistanceStatistics()
		}
	}

	elapsed := time.Since(w.startedAt)
	minPeer := 0
	enableAgg := false
	maxCandidates := 0
	if s.consensusOptions != nil {
		enableAgg = s.consensusOptions.Aggregator.EnableAggregator
		minPeer = s.consensusOptions.Aggregator.MinPeerThreshold
		maxCandidates = s.consensusOptions.Aggregator.MaxCandidates
	}
	msg := fmt.Sprintf("â³ v2 ç¡®è®¤é˜»å¡è¯Šæ–­: expected=%d elapsed=%s submits=%d chainHeight=%d chainStatus=%s syncStatus=%v local=%d network=%d enableAggregator=%v minPeerThreshold=%d topicPeers(consensus)=%d protocols=%d aggState=%s aggHeight=%d",
		w.height, elapsed, w.submits, chainHeight, chainStatus, syncStatus, localHeight, networkHeight, enableAgg, minPeer, consensusPeers, registeredProtocols, aggState, aggHeight)
	if progress != nil {
		msg = fmt.Sprintf("%s collectionProgress={active:%v collected:%d validated:%d rejected:%d dup:%d maxCandidates:%d progress:%.2f%%}",
			msg,
			progress.IsActive,
			progress.CandidatesCollected,
			progress.CandidatesValidated,
			progress.CandidatesRejected,
			progress.DuplicatesDetected,
			maxCandidates,
			progress.ProgressPercentage*100,
		)
	}
	if distStats != nil {
		msg = fmt.Sprintf("%s distanceStats={total:%d avg:%s last:%s}",
			msg, distStats.TotalCalculations, distStats.AverageTime, distStats.LastCalculatedAt.Format(time.RFC3339))
	}
	if cause != nil {
		msg = fmt.Sprintf("%s cause=%v", msg, cause)
	}
	s.logger.Warn(msg)
}

// waitForBlockConfirmation ç­‰å¾…åŒºå—ç¡®è®¤
// é€šè¿‡å®šæœŸæ£€æŸ¥é“¾é«˜åº¦æ¥åˆ¤æ–­åŒºå—æ˜¯å¦å·²è¢«ç½‘ç»œç¡®è®¤
func (s *MiningOrchestratorService) waitForBlockConfirmation(ctx context.Context, minedBlock *blocktypes.Block) error {
	s.logger.Info("å¼€å§‹ç›‘å¬åŒºå—ç¡®è®¤")

	expectedHeight := minedBlock.Header.Height
	s.logger.Debugf("ç­‰å¾…åŒºå—ç¡®è®¤ï¼ŒæœŸæœ›é«˜åº¦: %d", expectedHeight)

	// ä»é…ç½®è·å–æ£€æŸ¥é—´éš”ï¼ˆé…ç½®å¿…é¡»æä¾›æœ‰æ•ˆå€¼ï¼‰
	checkInterval := s.minerConfig.ConfirmationCheckInterval
	if checkInterval <= 0 {
		return fmt.Errorf("é…ç½®é”™è¯¯ï¼šConfirmationCheckIntervalå¿…é¡»å¤§äº0ï¼Œå½“å‰å€¼: %v", checkInterval)
	}

	ticker := time.NewTicker(checkInterval)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			// ä¸Šä¸‹æ–‡è¶…æ—¶æˆ–å–æ¶ˆ
			return fmt.Errorf("ç­‰å¾…åŒºå—ç¡®è®¤è¶…æ—¶: %v", ctx.Err())

		case <-ticker.C:
			// ä½¿ç”¨ChainServiceæ£€æŸ¥å½“å‰é“¾é«˜åº¦
			if err := s.checkBlockConfirmation(ctx, expectedHeight); err != nil {
				s.logger.Debugf("åŒºå—ç¡®è®¤æ£€æŸ¥å¤±è´¥: %v", err)
				continue // ç»§ç»­ç­‰å¾…
			}

			// ç¡®è®¤æˆåŠŸ
			s.logger.Infof("åŒºå—ç¡®è®¤æˆåŠŸï¼Œé«˜åº¦: %d", expectedHeight)
			return nil
		}
	}
}

// handleConfirmationTimeout å¤„ç†ç¡®è®¤è¶…æ—¶
// å½“åŒºå—ç¡®è®¤è¶…æ—¶æ—¶çš„å¤„ç†é€»è¾‘
func (s *MiningOrchestratorService) handleConfirmationTimeout(ctx context.Context, minedBlock *blocktypes.Block) error {
	s.logger.Info("å¤„ç†åŒºå—ç¡®è®¤è¶…æ—¶")

	// 1. è·å–å½“å‰é“¾çŠ¶æ€è¿›è¡Œè¯Šæ–­
	if s.chainQuery != nil {
		chainInfo, err := s.chainQuery.GetChainInfo(ctx)
		if err != nil {
			s.logger.Errorf("è·å–é“¾çŠ¶æ€å¤±è´¥: %v", err)
		} else {
			s.logger.Infof("ç¡®è®¤è¶…æ—¶è¯Šæ–­ - å½“å‰é«˜åº¦: %d, æœŸæœ›é«˜åº¦: %d, é“¾çŠ¶æ€: %s",
				chainInfo.Height, minedBlock.Header.Height, chainInfo.Status)
		}
	}

	// 2. è¿”å›è¶…æ—¶é”™è¯¯
	return fmt.Errorf("åŒºå—ç¡®è®¤è¶…æ—¶ï¼Œé«˜åº¦: %d", minedBlock.Header.Height)
}

// triggerSyncIfNeeded è§¦å‘åŒæ­¥
// å½“ç¡®è®¤å¤±è´¥æ—¶ï¼Œä¸»åŠ¨è§¦å‘åŒæ­¥ä»¥è·å–ç½‘ç»œæœ€æ–°çŠ¶æ€
func (s *MiningOrchestratorService) triggerSyncIfNeeded(ctx context.Context) error {
	s.logger.Info("è§¦å‘ç½‘ç»œåŒæ­¥ä»¥è·å–æœ€æ–°çŠ¶æ€")

	// åŒæ­¥æœåŠ¡æ˜¯é“¾ç®¡ç†çš„èŒè´£ï¼Œè¿™é‡Œä»…åœ¨éœ€è¦æ—¶è§¦å‘ä¸€æ¬¡åŒæ­¥è¯·æ±‚
	if s.syncService == nil {
		return fmt.Errorf("åŒæ­¥æœåŠ¡æœªæ³¨å…¥ï¼Œæ— æ³•è§¦å‘ç³»ç»ŸåŒæ­¥")
	}

	// ğŸ¯ å…ˆé€šè¿‡ CheckSync å®æ—¶æŸ¥è¯¢åŒæ­¥çŠ¶æ€ï¼Œåªåœ¨â€œç¡®å®è½åç½‘ç»œé«˜åº¦â€æ—¶æ‰è§¦å‘åŒæ­¥
	status, err := s.syncService.CheckSync(ctx)
	if err != nil {
		return fmt.Errorf("æ£€æŸ¥åŒæ­¥çŠ¶æ€å¤±è´¥: %w", err)
	}
	if status == nil {
		return fmt.Errorf("åŒæ­¥çŠ¶æ€ä¸ºç©ºï¼Œæ— æ³•åˆ¤æ–­æ˜¯å¦éœ€è¦åŒæ­¥")
	}

	// å¦‚æœç½‘ç»œé«˜åº¦ä¸é«˜äºæœ¬åœ°é«˜åº¦ï¼Œåˆ™è®¤ä¸ºå½“å‰ä¸å­˜åœ¨éœ€è¦è¿½èµ¶çš„ä¸Šæ¸¸åŒºå—ï¼š
	// - å¯èƒ½æ˜¯å•èŠ‚ç‚¹ / æ— ä»»ä½•WESå¯¹ç«¯ï¼Œä»…æœ‰æœ¬åœ°é“¾ï¼›
	// - ä¹Ÿå¯èƒ½æ˜¯æœ¬åœ°é«˜åº¦å·²ä¸ç½‘ç»œæŒå¹³æˆ–é¢†å…ˆã€‚
	// è¿™ç§æƒ…å†µä¸‹ï¼ŒåŒæ­¥åº”è§†ä¸ºâ€œæ— äº‹å¯åšâ€ï¼Œè€Œä¸æ˜¯å¼ºè¡Œè§¦å‘ä¸€æ¬¡å®Œæ•´åŒæ­¥æµç¨‹ã€‚
	if status.NetworkHeight <= status.CurrentHeight {
		s.logger.Infof("è·³è¿‡åŒæ­¥ï¼šæœªå‘ç°æ›´é«˜çš„ç½‘ç»œé«˜åº¦ (local=%d, network=%d, status=%v)",
			status.CurrentHeight, status.NetworkHeight, status.Status)
		return nil
	}

	// ä»…å½“æ˜ç¡®è§‚æµ‹åˆ° NetworkHeight > CurrentHeight æ—¶ï¼Œæ‰çœŸæ­£è§¦å‘ä¸€æ¬¡ç³»ç»ŸåŒæ­¥
	if err := s.syncService.TriggerSync(ctx); err != nil {
		return fmt.Errorf("è§¦å‘ç³»ç»ŸåŒæ­¥å¤±è´¥: %w", err)
	}

	s.logger.Info("ç³»ç»ŸåŒæ­¥è§¦å‘æˆåŠŸï¼Œç­‰å¾…åŒæ­¥è¿‡ç¨‹ä¿®å¤é“¾çŠ¶æ€")
	return nil
}

// updateHeightGate æ›´æ–°é«˜åº¦é—¨é—¸
// æ— è®ºç¡®è®¤æˆåŠŸä¸å¦ï¼Œéƒ½éœ€è¦æ›´æ–°å·²å¤„ç†é«˜åº¦ä»¥é˜²æ­¢é‡å¤æŒ–çŸ¿
func (s *MiningOrchestratorService) updateHeightGate(height uint64) {
	s.logger.Info("æ›´æ–°é«˜åº¦é—¨é—¸")

	// æ›´æ–°å·²å¤„ç†çš„æœ€é«˜é«˜åº¦
	s.heightGateService.UpdateLastProcessedHeight(height)

	s.logger.Info("é«˜åº¦é—¨é—¸æ›´æ–°å®Œæˆ")
}

// ==================== åŒºå—ç¡®è®¤æ£€æŸ¥ ====================

// checkBlockConfirmation æ£€æŸ¥åŒºå—æ˜¯å¦å·²è¢«ç¡®è®¤
//
// ğŸ¯ **ç¡®è®¤æ£€æŸ¥é€»è¾‘**
//
// é€šè¿‡ChainServiceæ£€æŸ¥å½“å‰é“¾çš„çŠ¶æ€ï¼Œåˆ¤æ–­æŒ‡å®šé«˜åº¦çš„åŒºå—æ˜¯å¦å·²è¢«ç½‘ç»œç¡®è®¤ã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	expectedHeight: æœŸæœ›ç¡®è®¤çš„åŒºå—é«˜åº¦
//
// è¿”å›å€¼ï¼š
//
//	error: ç¡®è®¤å¤±è´¥æ—¶çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºå·²ç¡®è®¤
func (s *MiningOrchestratorService) checkBlockConfirmation(ctx context.Context, expectedHeight uint64) error {
	// 1. æ£€æŸ¥ChainServiceæ˜¯å¦å¯ç”¨
	if s.chainQuery == nil {
		return fmt.Errorf("ChainQueryæœªæ³¨å…¥")
	}

	// 2. è·å–å½“å‰é“¾ä¿¡æ¯
	chainInfo, err := s.chainQuery.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
	}

	currentHeight := chainInfo.Height
	s.logger.Debugf("å½“å‰é“¾é«˜åº¦: %d, æœŸæœ›é«˜åº¦: %d", currentHeight, expectedHeight)

	// 3. æ£€æŸ¥é«˜åº¦æ˜¯å¦å·²è¾¾åˆ°æˆ–è¶…è¿‡æœŸæœ›é«˜åº¦
	if currentHeight >= expectedHeight {
		// åŒºå—å·²ç¡®è®¤
		return nil
	}

	// 4. é«˜åº¦æœªè¾¾åˆ°ï¼Œç»§ç»­ç­‰å¾…
	return fmt.Errorf("åŒºå—å°šæœªç¡®è®¤ï¼Œå½“å‰é«˜åº¦: %d, æœŸæœ›é«˜åº¦: %d", currentHeight, expectedHeight)
}

// validateChainHeightBeforeGateUpdate åœ¨æ›´æ–°é—¨é—¸å‰éªŒè¯é“¾é«˜åº¦
//
// ğŸ”’ **é˜²å¾¡æ€§éªŒè¯**
//
// åœ¨ç¡®è®¤æˆåŠŸåï¼Œæ›´æ–°é—¨é—¸å‰å†æ¬¡éªŒè¯é“¾é«˜åº¦ï¼Œç¡®ä¿é—¨é—¸ä¸ä¼šè¶…å‰äºå®é™…é“¾é«˜åº¦ã€‚
// è¿™æ˜¯é˜²æ­¢é—¨é—¸ä¸é“¾çŠ¶æ€ä¸ä¸€è‡´çš„æœ€åä¸€é“é˜²çº¿ã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	expectedHeight: æœŸæœ›çš„åŒºå—é«˜åº¦
//
// è¿”å›å€¼ï¼š
//
//	error: éªŒè¯å¤±è´¥æ—¶çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºéªŒè¯é€šè¿‡
func (s *MiningOrchestratorService) validateChainHeightBeforeGateUpdate(ctx context.Context, expectedHeight uint64) error {
	// è·å–å½“å‰é“¾ä¿¡æ¯
	if s.chainQuery == nil {
		return fmt.Errorf("ChainQueryæœªæ³¨å…¥")
	}

	chainInfo, err := s.chainQuery.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
	}

	currentHeight := chainInfo.Height
	s.logger.Infof("é—¨é—¸æ›´æ–°å‰éªŒè¯ - å½“å‰é“¾é«˜åº¦: %d, æœŸæœ›é«˜åº¦: %d", currentHeight, expectedHeight)

	// ä¸¥æ ¼éªŒè¯ï¼šé“¾é«˜åº¦å¿…é¡»å¤§äºç­‰äºæœŸæœ›é«˜åº¦
	if currentHeight < expectedHeight {
		return fmt.Errorf("é“¾é«˜åº¦éªŒè¯å¤±è´¥ï¼šå½“å‰é«˜åº¦ %d å°äºæœŸæœ›é«˜åº¦ %d", currentHeight, expectedHeight)
	}

	s.logger.Info("é“¾é«˜åº¦éªŒè¯é€šè¿‡ï¼Œå…è®¸æ›´æ–°é—¨é—¸")
	return nil
}
