package kbucket

import (
	"context"
	"strings"
	"sync"
	"time"

	"go.uber.org/fx"

	"github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	p2pi "github.com/weisyn/v1/pkg/interfaces/p2p"
)

// ============================================================================
//                              è¾“å…¥è¾“å‡ºå®šä¹‰
// ============================================================================

// ModuleInput å®šä¹‰Kæ¡¶æ¨¡å—çš„è¾“å…¥ä¾èµ–
type ModuleInput struct {
	fx.In

	Config         kademlia.KBucketConfig `name:"kbucket_config"`
	Logger         log.Logger             // æ—¥å¿—è®°å½•å™¨ï¼ˆå¿…éœ€ï¼‰
	P2PService     p2pi.Service           `name:"p2p_service" optional:"true"` // P2P æœåŠ¡ï¼Œç”¨äºWESèŠ‚ç‚¹éªŒè¯å’Œè¿æ¥çŠ¶æ€æ£€æŸ¥
	ConfigProvider config.Provider        `optional:"true"`                    // é…ç½®æä¾›è€…ï¼Œç”¨äºè·å–æœ¬åœ°é“¾èº«ä»½
}

// ModuleOutput å®šä¹‰Kæ¡¶æ¨¡å—çš„è¾“å‡º
type ModuleOutput struct {
	fx.Out

	RoutingTableManager kademlia.RoutingTableManager `name:"routing_table_manager"`
	DistanceCalculator  kademlia.DistanceCalculator  `name:"distance_calculator"`
	PeerSelector        kademlia.PeerSelector        `name:"peer_selector"`
}

// ============================================================================
//                              ä¸»æ¨¡å—å®šä¹‰
// ============================================================================

// Module Kæ¡¶æ¨¡å—
// é‡‡ç”¨fxä¾èµ–æ³¨å…¥æ¨¡å¼ï¼Œæä¾›å®Œæ•´çš„Kademliaè·¯ç”±è¡¨åŠŸèƒ½
func Module() fx.Option {
	return fx.Module("kbucket",
		// === é…ç½®æä¾› ===
		fx.Provide(fx.Annotate(
			ProvideKBucketConfig,
			fx.ResultTags(`name:"kbucket_config"`),
		)),

		// === æ ¸å¿ƒç»„ä»¶æä¾› ===
		fx.Provide(
			func(in ModuleInput) ModuleOutput {
				// ğŸ¯ ä¸º Kademlia æ¨¡å—æ·»åŠ  module å­—æ®µï¼Œæ—¥å¿—å°†è·¯ç”±åˆ° node-system.log
				var kademliaLogger log.Logger
				if in.Logger != nil {
					kademliaLogger = in.Logger.With("module", "kademlia")
				}

				// åˆ›å»ºæ ¸å¿ƒç»„ä»¶
				routingTableManager := NewRoutingTableManager(in.Config, kademliaLogger, in.P2PService, in.ConfigProvider)
				distanceCalculator := NewXORDistanceCalculator(kademliaLogger)
				peerSelector := NewKademliaPeerSelector(kademliaLogger)

				return ModuleOutput{
					RoutingTableManager: routingTableManager,
					DistanceCalculator:  distanceCalculator,
					PeerSelector:        peerSelector,
				}
			},
		),

		// === ç”Ÿå‘½å‘¨æœŸç®¡ç† ===
		fx.Invoke(RegisterKBucketLifecycle),
	)
}

// LifecycleInput å®šä¹‰ç”Ÿå‘½å‘¨æœŸç®¡ç†çš„è¾“å…¥ä¾èµ–
type LifecycleInput struct {
	fx.In

	Lifecycle           fx.Lifecycle
	RoutingTableManager kademlia.RoutingTableManager `name:"routing_table_manager"`
	Logger              log.Logger
	EventBus            event.EventBus  `optional:"true"`                    // äº‹ä»¶æ€»çº¿ï¼Œç”¨äºè®¢é˜…peerè¿æ¥äº‹ä»¶
	P2PService          p2pi.Service    `name:"p2p_service" optional:"true"` // P2P æœåŠ¡ï¼Œç”¨äºè·å–å·²è¿æ¥peersè¿›è¡Œå…¨é‡å¯¼å…¥
	ConfigProvider      config.Provider `optional:"true"`                    // é…ç½®æä¾›è€…ï¼Œç”¨äºè¯»å– sync.advanced çš„å…¥æ¡¶ä¿éšœé…ç½®
}

// RegisterKBucketLifecycle æ³¨å†ŒKæ¡¶ç”Ÿå‘½å‘¨æœŸç®¡ç†
func RegisterKBucketLifecycle(in LifecycleInput) {
	// ğŸ¯ ä¸º Kademlia æ¨¡å—æ·»åŠ  module å­—æ®µ
	var kademliaLogger log.Logger
	if in.Logger != nil {
		kademliaLogger = in.Logger.With("module", "kademlia")
	}

	// æ—¥å¿—ç˜¦èº«ï¼šå¯¹ â€œpeeræœªåŠ å…¥Kæ¡¶â€ è¿›è¡ŒæŒ‰ peer å»é‡ï¼Œé¿å…è¿æ¥æŠ–åŠ¨/é‡å¤äº‹ä»¶åˆ·å±
	// - external peersï¼ˆkubo/p2pd/...ï¼‰é»˜è®¤ Debug ä¸”æ›´çŸ­çª—å£
	// - weisyn peers æ‰ä½¿ç”¨ Warnï¼Œçª—å£æ›´é•¿
	var (
		rejectMu   sync.Mutex
		rejectLast = map[string]time.Time{}
	)

	in.Lifecycle.Append(fx.Hook{
		OnStart: func(ctx context.Context) error {
			if kademliaLogger != nil {
				kademliaLogger.Info("ğŸ—‚ï¸  æ­£åœ¨å¯åŠ¨Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨...")
			}

			// è¯»å–å¯é…ç½®çš„å…¥æ¡¶ä¿éšœå‚æ•°ï¼ˆé»˜è®¤å€¼ä¸ä»£ç å†…ç½®ä¿æŒä¸€è‡´ï¼‰
			reconcileInterval := 30 * time.Second
			retryBackoffs := []time.Duration{200 * time.Millisecond, 1 * time.Second, 3 * time.Second, 8 * time.Second, 15 * time.Second}
			if in.ConfigProvider != nil {
				if bc := in.ConfigProvider.GetBlockchain(); bc != nil {
					if bc.Sync.Advanced.KBucketReconcileIntervalSeconds > 0 {
						reconcileInterval = time.Duration(bc.Sync.Advanced.KBucketReconcileIntervalSeconds) * time.Second
					}
					if len(bc.Sync.Advanced.KBucketPeerAddRetryBackoffsMs) > 0 {
						var tmp []time.Duration
						for _, ms := range bc.Sync.Advanced.KBucketPeerAddRetryBackoffsMs {
							if ms <= 0 {
								continue
							}
							tmp = append(tmp, time.Duration(ms)*time.Millisecond)
						}
						if len(tmp) > 0 {
							retryBackoffs = tmp
						}
					}
				}
			}

			// ä½¿ç”¨ç±»å‹æ–­è¨€è°ƒç”¨å…·ä½“å®ç°çš„Startæ–¹æ³•
			if manager, ok := in.RoutingTableManager.(*RoutingTableManager); ok {
				// ğŸ”§ Phase 3: æ³¨å…¥äº‹ä»¶æ€»çº¿ï¼ˆç”¨äºå‘å¸ƒDiscoveryé—´éš”é‡ç½®äº‹ä»¶ï¼‰
				if in.EventBus != nil {
					manager.SetEventBus(in.EventBus)
					if kademliaLogger != nil {
						kademliaLogger.Debug("Kæ¡¶å·²æ³¨å…¥äº‹ä»¶æ€»çº¿ï¼Œå¯å‘å¸ƒDiscoveryé‡ç½®äº‹ä»¶")
					}
				}

				if err := manager.Start(ctx); err != nil {
					if kademliaLogger != nil {
						kademliaLogger.Errorf("å¯åŠ¨Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨å¤±è´¥: %v", err)
					}
					return err
				}

				// å…¨é‡å¯¼å…¥å·²è¿æ¥çš„peersåˆ°Kæ¡¶ï¼ˆé¿å…è®¢é˜…æ—¶åºé—®é¢˜ï¼‰
				if in.P2PService != nil {
					// è·å–åº•å±‚libp2p host
					libp2pHost := in.P2PService.Host()
					if libp2pHost != nil {
						connectedPeers := libp2pHost.Network().Peers()
						if kademliaLogger != nil {
							kademliaLogger.Infof("ğŸ”’ å¼€å§‹å…¨é‡å¯¼å…¥å·²è¿æ¥peersåˆ°Kæ¡¶ï¼ˆå«WESè¿‡æ»¤ï¼‰: å…±%dä¸ªpeer", len(connectedPeers))
						}

						importedCount := 0
						rejectedCount := 0
						for _, peerID := range connectedPeers {
							// è·³è¿‡è‡ªå·±
							if peerID == libp2pHost.ID() {
								continue
							}

							addrInfo := peer.AddrInfo{ID: peerID}
							// è°ƒç”¨AddPeerï¼Œå†…éƒ¨ä¼šè¿›è¡ŒWESèŠ‚ç‚¹éªŒè¯
							if added, err := manager.AddPeer(ctx, addrInfo); err != nil {
								if kademliaLogger != nil {
									kademliaLogger.Warnf("å…¨é‡å¯¼å…¥peerå¤±è´¥: %s, é”™è¯¯: %v", peerID, err)
								}
							} else if added {
								importedCount++
								if kademliaLogger != nil {
									kademliaLogger.Debugf("WESèŠ‚ç‚¹å¯¼å…¥æˆåŠŸ: %s", peerID)
								}
							} else {
								rejectedCount++
								// AddPeerè¿”å›falseé€šå¸¸è¡¨ç¤ºå¤–éƒ¨èŠ‚ç‚¹è¢«è¿‡æ»¤
							}
						}
						if kademliaLogger != nil {
							total := len(connectedPeers) - 1
							if total < 0 {
								total = 0
							}
							kademliaLogger.Infof("ğŸ”’ å…¨é‡å¯¼å…¥å®Œæˆ: WESèŠ‚ç‚¹=%d, å¤–éƒ¨èŠ‚ç‚¹å·²è¿‡æ»¤=%d, æ€»è®¡=%d",
								importedCount, rejectedCount, total)
							// å¦‚æœå·²è¿æ¥ peers å­˜åœ¨ï¼Œä½†ä¸€ä¸ªéƒ½æ²¡èƒ½å…¥æ¡¶ï¼Œç»™å‡ºä¸€æ¬¡æ˜ç¡®ã€å¯æ“ä½œçš„å‘Šè­¦ï¼š
							// - å¸¸è§åŸå› ï¼šbootstrap peers æŒ‡å‘äº† IPFS/kubo ç­‰å¤–éƒ¨ç½‘ç»œï¼›æˆ–é“¾èº«ä»½(namespace/chain_id/genesis)ä¸åŒ¹é…ï¼›
							// - ç»“æœï¼šKæ¡¶é•¿æœŸä¸ºç©º -> sync/é€‰ä¸¾åªèƒ½ fallback æˆ– no-opã€‚
							if total > 0 && importedCount == 0 {
								kademliaLogger.Warnf("âš ï¸ Kæ¡¶ä¸ºç©ºé£é™©ï¼šå½“å‰å·²è¿æ¥ peers=%dï¼Œä½† WES èŠ‚ç‚¹å¯¼å…¥=0ï¼ˆå¤–éƒ¨/é“¾ä¸åŒ¹é…å·²è¿‡æ»¤=%dï¼‰ã€‚è¯·æ£€æŸ¥ bootstrap_peers / rendezvous_ns / network_namespace / chain_id / genesis æ˜¯å¦æŒ‡å‘åŒä¸€æ¡ WES ç½‘ç»œã€‚",
									total, rejectedCount)
							}
						}
					} else {
						if kademliaLogger != nil {
							kademliaLogger.Warn("ğŸ—‚ï¸  æ— æ³•è·å–libp2p Hostï¼Œè·³è¿‡å…¨é‡å¯¼å…¥å·²è¿æ¥peers")
						}
					}
				} else {
					if kademliaLogger != nil {
						kademliaLogger.Warn("ğŸ—‚ï¸  P2PServiceä¸ºnilï¼Œè·³è¿‡å…¨é‡å¯¼å…¥å·²è¿æ¥peers")
					}
				}

				// å‘å¸ƒä¸€æ¬¡æ‘˜è¦ï¼ˆä¾¿äº diagnostics ç«‹å³çœ‹åˆ°å½“å‰Kæ¡¶çŠ¶æ€ï¼‰
				if in.EventBus != nil {
					in.EventBus.Publish(event.EventTypeKBucketSummaryUpdated, context.Background(), manager.GetDiagnosticsSummary())
				}

				// è®¢é˜…peerè¿æ¥äº‹ä»¶ï¼Œè‡ªåŠ¨æ·»åŠ åˆ°è·¯ç”±è¡¨
				if in.EventBus != nil {
					peerConnectedHandler := func(ctx context.Context, data interface{}) error {
						if peerID, ok := data.(peer.ID); ok {
							if kademliaLogger != nil {
								// âš ï¸ æ—¥å¿—ç˜¦èº«ï¼šè¯¥äº‹ä»¶åœ¨ä¸»ç½‘/å…¬ç½‘ä¼šéå¸¸é¢‘ç¹ï¼ŒINFO ä¼šé€ æˆæ—¥å¿—è‡ƒè‚¿
								kademliaLogger.Debugf("[kbucket] ğŸŒ peer.connected -> try_add: %s", peerID)
							}

							// ğŸ”§ è¿æ¥æˆåŠŸæ—¶æ›´æ–°LastUsefulAtï¼ˆè¡¨ç¤ºpeerä»æ´»è·ƒï¼‰
							manager.RecordPeerSuccess(peerID)

							// åˆ›å»ºAddrInfoï¼ˆåœ°å€ç•™ç©ºï¼Œå› ä¸ºæˆ‘ä»¬ä¸»è¦å…³å¿ƒè·¯ç”±è¡¨çš„peer IDï¼‰
							addrInfo := peer.AddrInfo{ID: peerID}

							// âš ï¸ ç”Ÿäº§çº§æ—¶åºå¤„ç†ï¼š
							// libp2p çš„ Identify/åè®®åˆ—è¡¨å†™å…¥ peerstore å¯èƒ½æ»åäº â€œconnectedâ€ äº‹ä»¶ï¼Œ
							// å¦‚æœç«‹åˆ»æ ¡éªŒåè®®èƒ½åŠ›ï¼ˆProtocolBlockSubmissionï¼‰ï¼Œå¯èƒ½å‡ºç°â€œåè®®åˆ—è¡¨ä¸ºç©º â†’ è¯¯åˆ¤å¤–éƒ¨èŠ‚ç‚¹â€çš„ç«æ€ã€‚
							//
							// è¿™é‡Œç”¨â€œæ›´é•¿çª—å£â€çš„å»¶è¿Ÿ + é‡è¯•ï¼Œç­‰å¾… peerstore å¡«å……åè®®ä¿¡æ¯åå†å…¥ K æ¡¶ã€‚
							// ç›®æ ‡ï¼šä»æ ¹æœ¬ä¸Šé¿å… Kæ¡¶ä¸ºç©ºï¼ˆä¸šåŠ¡èŠ‚ç‚¹ä¸å…¥æ¡¶ï¼‰çš„è‡´å‘½ç¼ºé™·ã€‚
							go func(pid peer.ID) {
								for i, d := range retryBackoffs {
									time.Sleep(d)

									added, err := manager.AddPeer(context.Background(), addrInfo)
									if err != nil {
										if kademliaLogger != nil {
											kademliaLogger.Debugf("å»¶è¿Ÿå…¥è¡¨å°è¯•å¤±è´¥: peer=%s attempt=%d/%d err=%v", pid, i+1, len(retryBackoffs), err)
										}
										continue
									}
									if added {
										if kademliaLogger != nil {
											kademliaLogger.Infof("âœ… å·²å°†peeråŠ å…¥Kæ¡¶è·¯ç”±è¡¨: %s", pid)
										}

										// âœ… ä¿®å¤ç¼ºé™·Mï¼šä¿æŠ¤WESä¸šåŠ¡èŠ‚ç‚¹è¿æ¥ï¼Œé˜²æ­¢è¢«è¿æ¥ç®¡ç†å™¨æ·˜æ±°
										// åœºæ™¯ï¼šå½“è¿æ¥æ•°è¶…è¿‡ HighWater æ—¶ï¼Œè¿æ¥ç®¡ç†å™¨ä¼šæ·˜æ±°æœªä¿æŠ¤çš„è¿æ¥
										// - bootstrapèŠ‚ç‚¹å·²è¢«ä¿æŠ¤ï¼ˆruntime.go:78ï¼‰
										// - WESä¸šåŠ¡èŠ‚ç‚¹ä¹Ÿéœ€è¦ä¿æŠ¤ï¼Œå¦åˆ™ä¼šå› ä¸ºè¿æ¥åˆ°å¤§é‡libp2på…¬å…±èŠ‚ç‚¹è€Œè¢«æ·˜æ±°
										// - ä¿æŠ¤æ ‡ç­¾ "kbucket" è¡¨æ˜è¿™æ˜¯Kæ¡¶æ ¸å¿ƒèŠ‚ç‚¹ï¼Œåº”ä¼˜å…ˆä¿ç•™
										if manager.p2pService != nil && manager.p2pService.Host() != nil {
											if cm := manager.p2pService.Host().ConnManager(); cm != nil {
												cm.Protect(pid, "kbucket")
												if kademliaLogger != nil {
													kademliaLogger.Debugf("ğŸ”’ å·²ä¿æŠ¤Kæ¡¶peerè¿æ¥: %s (tag=kbucket)", pid)
												}
											}
										}

										if in.EventBus != nil {
											in.EventBus.Publish(event.EventTypeKBucketSummaryUpdated, context.Background(), manager.GetDiagnosticsSummary())
										}
										return
									}
								}

								// ä»æœªåŠ å…¥ï¼šè¾“å‡ºä¸€æ¬¡â€œå¯è§£é‡Šâ€çš„è¯Šæ–­ä¿¡æ¯ï¼Œä¾¿äºä»æ—¥å¿—ç›´æ¥å®šä½åŸå› 
								// ï¼ˆé‡è¦ï¼šæŒ‰ peer åšæ—¶é—´çª—å£å»é‡ï¼Œé¿å…åˆ·å±ï¼‰
								if kademliaLogger != nil {
									var (
										connected        bool
										connectednessStr string
										protoCount       int
										hasWESProto      bool
										agentStr         string
										protoList        string
										wesOK            bool
										wesErr           error
										chainOK          bool
										chainReason      string
										chainErr         error
										peerstoreAddrs   int
									)

									// è¿æ¥çŠ¶æ€
									if manager.p2pService != nil && manager.p2pService.Host() != nil {
										h := manager.p2pService.Host()
										connectedness := h.Network().Connectedness(pid)
										connected = connectedness.String() == "Connected"
										connectednessStr = connectedness.String()

										// åè®®åˆ—è¡¨
										if ps, err := h.Peerstore().GetProtocols(pid); err == nil {
											protoCount = len(ps)
											// å¿«é€Ÿåˆ¤å®šæ˜¯å¦åŒ…å« weisyn åè®®æ—ï¼ˆä»…ç”¨äºæ—¥å¿—å¯è¯»æ€§ï¼Œä¸å‚ä¸å†³ç­–ï¼‰
											for _, p := range ps {
												if strings.HasPrefix(string(p), "/weisyn/") {
													hasWESProto = true
													break
												}
											}
											// è®°å½•åè®®åˆ—è¡¨ï¼ˆæˆªæ–­ï¼‰ï¼Œä¾¿äºä»æ—¥å¿—ç›´æ¥ç¡®è®¤æ˜¯å¦æ˜¯â€œå‘½åç©ºé—´åŒ–åè®®ä¸åŒ¹é…â€
											// ä¾‹å¦‚ï¼š/weisyn/public-testnet-demo/consensus/block_submission/1.0.0
											var list []string
											for i, p := range ps {
												if i >= 20 {
													break
												}
												list = append(list, string(p))
											}
											if len(list) > 0 {
												protoList = strings.Join(list, ",")
											}
										}

										// UserAgentï¼ˆAgentVersionï¼‰
										if av, err := h.Peerstore().Get(pid, "AgentVersion"); err == nil {
											if s, ok := av.(string); ok {
												agentStr = s
											}
										}

										// è·å–peerstoreä¸­çš„åœ°å€æ•°é‡ï¼ˆç”¨äºè¯Šæ–­åœ°å€å‘å¸ƒé—®é¢˜ï¼‰
										if addrs := h.Peerstore().Addrs(pid); addrs != nil {
											peerstoreAddrs = len(addrs)
										}
									}

									// WES/é“¾èº«ä»½ç­–ç•¥ï¼ˆåŒåŒ…å†…å¯è°ƒç”¨æœªå¯¼å‡ºæ–¹æ³•ï¼Œç›´æ¥ç»™"åŸå› "ï¼‰
									wesOK, wesErr = manager.validateWESPeer(context.Background(), pid)
									chainOK, chainReason, chainErr = manager.validatePeerChainIdentity(context.Background(), pid)

									// ç®€å•æˆªæ–­ï¼Œé¿å…æé•¿ UserAgent åˆ·å±
									if len(agentStr) > 200 {
										agentStr = agentStr[:200] + "..."
									}
									if len(protoList) > 800 {
										protoList = protoList[:800] + "..."
									}

									// è¯†åˆ«æ˜¯å¦æ˜¯ weisyn èŠ‚ç‚¹ï¼ˆåªæœ‰è¿™ç±»æ‰å€¼å¾— Warnï¼‰
									agentLower := strings.ToLower(agentStr)
									isWeisyn := strings.Contains(agentLower, "weisyn")
									isExternalKnown := strings.HasPrefix(agentLower, "kubo/") ||
										strings.HasPrefix(agentLower, "go-ipfs/") ||
										strings.HasPrefix(agentLower, "p2pd/") ||
										strings.Contains(agentLower, "bootstrap.libp2p.io") ||
										strings.Contains(agentLower, "ipfs")

									// âœ… è¯Šæ–­å¢å¼ºï¼šè‹¥è¯¥ peer å±äºâ€œé…ç½®çš„ WES bootstrap peersâ€ï¼ˆéå…¬ç½‘ bootstrapï¼‰ï¼Œå³ä½¿ agent æœªåŒ…å« weisyn ä¹Ÿè¦æå‡åˆ° warnã€‚
									// ç›®çš„ï¼šå¿«é€Ÿçœ‹æ¸…â€œä¸šåŠ¡å…³é”®èŠ‚ç‚¹ä¸ºä½•æœªå…¥æ¡¶â€ï¼ˆåè®®æœªå°±ç»ª/é“¾èº«ä»½ä¸åŒ¹é…/åœ°å€ç¼ºå¤±ï¼‰ã€‚
									isConfiguredWESBootstrap := false
									if in.ConfigProvider != nil {
										if nc := in.ConfigProvider.GetNode(); nc != nil {
											for _, s := range nc.Discovery.BootstrapPeers {
												ls := strings.ToLower(s)
												if strings.Contains(ls, "bootstrap.libp2p.io") || strings.Contains(ls, "ipfs") {
													continue
												}
												parts := strings.Split(s, "/p2p/")
												if len(parts) == 2 && parts[1] == pid.String() {
													isConfiguredWESBootstrap = true
													break
												}
											}
										}
									}

									// æŒ‰ peer + çº§åˆ«åšå»é‡
									now := time.Now()
									peerKey := pid.String()
									ttl := 2 * time.Minute
									if isWeisyn {
										ttl = 10 * time.Minute
									} else if isExternalKnown {
										ttl = 1 * time.Minute
									}
									rejectMu.Lock()
									last, ok := rejectLast[peerKey]
									if ok && now.Sub(last) < ttl {
										rejectMu.Unlock()
										return
									}
									rejectLast[peerKey] = now
									rejectMu.Unlock()

									args := []interface{}{pid, connectednessStr, connected, peerstoreAddrs, wesOK, hasWESProto, protoCount, chainOK, chainReason, agentStr, protoList, wesErr, chainErr}

									// æ—¥å¿—ç˜¦èº«ï¼š
									// 1. å¤–éƒ¨å·²çŸ¥èŠ‚ç‚¹ï¼ˆkubo/go-ipfs/p2pd/IPFSå…¬ç½‘ï¼‰è¢«æ‹’ç»æ˜¯**é¢„æœŸè¡Œä¸º**ï¼ŒDebug çº§åˆ« + ğŸš« è¡¨æƒ…
									// 2. weisyn èŠ‚ç‚¹å¼‚å¸¸ æˆ– é…ç½®çš„ WES bootstrap æœªå…¥æ¡¶ï¼Œå¿…é¡» Warn + âŒ è¡¨æƒ…ï¼ˆé¿å…ä¸šåŠ¡èŠ‚ç‚¹é—®é¢˜æ— ä»å®šä½ï¼‰
									// 3. æœªçŸ¥å¤–éƒ¨èŠ‚ç‚¹ï¼ˆæ—  agent æˆ–æœªè¯†åˆ«ï¼‰ï¼ŒInfo çº§åˆ« + ğŸš« è¡¨æƒ…
									if isWeisyn || isConfiguredWESBootstrap {
										// ä¸šåŠ¡èŠ‚ç‚¹æœªå…¥æ¡¶ â†’ éœ€è¦å…³æ³¨
										kademliaLogger.Warnf("[kbucket] âŒ peeræœªåŠ å…¥Kæ¡¶: peer=%s connectedness=%s connected=%v peerstore_addrs=%d wes_ok=%v has_wes_proto=%v proto_count=%d chain_ok=%v chain_reason=%s agent=%q proto_list=%q wes_err=%v chain_err=%v", args...)
									} else if isExternalKnown {
										// å·²çŸ¥å¤–éƒ¨èŠ‚ç‚¹ï¼ˆkubo/IPFSï¼‰è¢«æ‹’ç» â†’ é¢„æœŸè¡Œä¸ºï¼ŒDebug
										kademliaLogger.Debugf("[kbucket] ğŸš« å¤–éƒ¨èŠ‚ç‚¹è¢«è¿‡æ»¤ï¼ˆé¢„æœŸè¡Œä¸ºï¼‰: peer=%s agent=%q chain_reason=%s", pid, agentStr, chainReason)
									} else {
										// æœªçŸ¥å¤–éƒ¨èŠ‚ç‚¹ â†’ Infoï¼ˆé¦–æ¬¡å¯è§ï¼Œåç»­å»é‡ï¼‰
										kademliaLogger.Infof("[kbucket] ğŸš« éWESèŠ‚ç‚¹è¢«è¿‡æ»¤: peer=%s connectedness=%s wes_ok=%v chain_ok=%v chain_reason=%s agent=%q", pid, connectednessStr, wesOK, chainOK, chainReason, agentStr)
									}
								}
							}(peerID)
						}
						return nil
					}

					// è®¢é˜…peeræ–­è¿äº‹ä»¶ï¼Œæ ‡è®°ä¸ºSuspectï¼ˆæ¸©å’Œå¤„ç†ï¼Œä¸ç«‹å³åˆ é™¤ï¼‰
					//
					// âš ï¸ æ³¨æ„ï¼š
					// - è¯¥äº‹ä»¶åœ¨ä¸»ç½‘ä¸Šä¼šéå¸¸é¢‘ç¹ï¼Œå¦‚æœä½¿ç”¨ Info çº§åˆ«ä¼šäº§ç”Ÿå¤§é‡æ— ä»·å€¼å™ªéŸ³æ—¥å¿—ã€‚
					// - è¿™é‡Œåªä¿ç•™ Debug çº§åˆ«çš„æ˜ç»†æ—¥å¿—ï¼Œå°†å…³é”®çŠ¶æ€å˜æ›´äº¤ç”± manager å†…éƒ¨åº¦é‡ã€‚
					peerDisconnectedHandler := func(ctx context.Context, data interface{}) error {
						if peerID, ok := data.(peer.ID); ok {
							if kademliaLogger != nil {
								// ä½¿ç”¨ Debug çº§åˆ«ï¼Œé¿å…åœ¨ç”Ÿäº§ç¯å¢ƒåˆ·å±
								kademliaLogger.Debugf("æ”¶åˆ°peeræ–­è¿äº‹ä»¶: %sï¼Œæ ‡è®°ä¸ºSuspect", peerID)
							}

							// è®°å½•å¤±è´¥ï¼ˆè§¦å‘çŠ¶æ€è½¬æ¢ä¸ºSuspectæˆ–Quarantinedï¼‰
							manager.RecordPeerFailure(peerID)

							if kademliaLogger != nil {
								kademliaLogger.Debugf("èŠ‚ç‚¹æ–­è¿åçŠ¶æ€å·²æ›´æ–°: %s", peerID)
							}
						}
						return nil
					}

					// è®¢é˜…peerè¿æ¥äº‹ä»¶
					if err := in.EventBus.Subscribe(event.EventTypeNetworkPeerConnected, peerConnectedHandler); err != nil {
						if kademliaLogger != nil {
							kademliaLogger.Warnf("è®¢é˜…peerè¿æ¥äº‹ä»¶å¤±è´¥: %v", err)
						}
					} else {
						if kademliaLogger != nil {
							kademliaLogger.Info("ğŸ—‚ï¸  å·²è®¢é˜…peerè¿æ¥äº‹ä»¶ï¼Œå°†è‡ªåŠ¨ç»´æŠ¤è·¯ç”±è¡¨")
						}
					}

					// è®¢é˜…peeræ–­è¿äº‹ä»¶
					if err := in.EventBus.Subscribe(event.EventTypeNetworkPeerDisconnected, peerDisconnectedHandler); err != nil {
						if kademliaLogger != nil {
							kademliaLogger.Warnf("è®¢é˜…peeræ–­è¿äº‹ä»¶å¤±è´¥: %v", err)
						}
					} else {
						if kademliaLogger != nil {
							kademliaLogger.Info("ğŸ—‚ï¸  å·²è®¢é˜…peeræ–­è¿äº‹ä»¶ï¼Œå°†è‡ªåŠ¨æ ‡è®°ä¸ºSuspectï¼ˆæ¸©å’Œå¤„ç†ï¼‰")
						}
					}
				}
			}

			// å‘¨æœŸæ€§ reconcileï¼šæŠŠâ€œå½“å‰å·²è¿æ¥ peersâ€æŒç»­å¯¼å…¥ Kæ¡¶ï¼Œé˜²æ­¢æŠ–åŠ¨/æ—¶åºå¯¼è‡´é•¿æœŸç©ºæ¡¶
			// - connected äº‹ä»¶å¯èƒ½å› ä¸ºç»„ä»¶å¯åŠ¨é¡ºåºé”™è¿‡
			// - Identify/peerstore åè®®å†™å…¥å¯èƒ½æ¯”è¿æ¥äº‹ä»¶æ›´æ™š
			// - èŠ‚ç‚¹çŸ­æš‚æ–­è¿/é‡è¿åï¼Œéœ€è¦å†æ¬¡å°è¯•å…¥æ¡¶
			if in.P2PService != nil {
				if manager, ok := in.RoutingTableManager.(*RoutingTableManager); ok {
					go func() {
						ticker := time.NewTicker(reconcileInterval)
						defer ticker.Stop()
						for {
							select {
							case <-manager.ctx.Done():
								return
							case <-ticker.C:
								h := in.P2PService.Host()
								if h == nil {
									continue
								}
								peers := h.Network().Peers()
								if len(peers) == 0 {
									continue
								}
								for _, pid := range peers {
									if pid == h.ID() {
										continue
									}
									_, _ = manager.AddPeer(context.Background(), peer.AddrInfo{ID: pid})
								}
								if in.EventBus != nil {
									in.EventBus.Publish(event.EventTypeKBucketSummaryUpdated, context.Background(), manager.GetDiagnosticsSummary())
								}
							}
						}
					}()
					if kademliaLogger != nil {
						kademliaLogger.Infof("ğŸ§­ å·²å¯åŠ¨Kæ¡¶å‘¨æœŸæ€§reconcileï¼šæŒç»­å¯¼å…¥å·²è¿æ¥peersï¼Œé˜²æ­¢ç©ºæ¡¶ (interval=%s retry_backoffs=%d)",
							reconcileInterval.String(), len(retryBackoffs))
					}
				}
			}

			if kademliaLogger != nil {
				kademliaLogger.Info("ğŸ—‚ï¸  Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨å·²å¯åŠ¨")
			}
			return nil
		},
		OnStop: func(ctx context.Context) error {
			if kademliaLogger != nil {
				kademliaLogger.Info("ğŸ—‚ï¸  æ­£åœ¨å…³é—­Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨...")
			}

			// ä½¿ç”¨ç±»å‹æ–­è¨€è°ƒç”¨å…·ä½“å®ç°çš„Stopæ–¹æ³•
			if manager, ok := in.RoutingTableManager.(*RoutingTableManager); ok {
				if err := manager.Stop(ctx); err != nil {
					if kademliaLogger != nil {
						kademliaLogger.Errorf("å…³é—­Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨å¤±è´¥: %v", err)
					}
					return err
				}
			}

			if kademliaLogger != nil {
				kademliaLogger.Info("ğŸ—‚ï¸  Kæ¡¶è·¯ç”±è¡¨ç®¡ç†å™¨å·²å…³é—­")
			}
			return nil
		},
	})
}
