package repository

import (
	"context"
	"encoding/binary"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// ============================================================================
//                        ğŸ”— åŒºå—é“¾çŠ¶æ€ç®¡ç†å®ç°
// ============================================================================

// ChainState åŒºå—é“¾çŠ¶æ€ç®¡ç†å™¨
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šåŒºå—é“¾çŠ¶æ€ç®¡ç†æ ¸å¿ƒ
// è´Ÿè´£ç»´æŠ¤åŒºå—é“¾çš„å…¨å±€çŠ¶æ€ä¿¡æ¯ï¼ŒåŒ…æ‹¬æœ€é«˜åŒºå—ã€ç»Ÿè®¡ä¿¡æ¯ç­‰ã€‚
//
// æ ¸å¿ƒèŒè´£ï¼š
// - æœ€é«˜åŒºå—ç®¡ç†ï¼šç»´æŠ¤å½“å‰é“¾çš„æœ€æ–°çŠ¶æ€
// - çŠ¶æ€æŒä¹…åŒ–ï¼šç¡®ä¿çŠ¶æ€ä¿¡æ¯çš„å¯é å­˜å‚¨
// - çŠ¶æ€æŸ¥è¯¢ï¼šæä¾›å¿«é€Ÿçš„çŠ¶æ€ä¿¡æ¯æŸ¥è¯¢
// - ä¸€è‡´æ€§ä¿è¯ï¼šç¡®ä¿çŠ¶æ€æ›´æ–°çš„åŸå­æ€§
type ChainState struct {
	storage storage.BadgerStore
}

// UpdateHighestBlockInTransaction åœ¨äº‹åŠ¡ä¸­æ›´æ–°æœ€é«˜åŒºå—ä¿¡æ¯
func (cs *ChainState) UpdateHighestBlockInTransaction(ctx context.Context, tx storage.BadgerTransaction, block *core.Block, blockHash []byte) error {
	// 1. æ›´æ–°æœ€é«˜é«˜åº¦
	heightBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(heightBytes, block.Header.Height)
	if err := tx.Set([]byte(ChainLatestHeightKey), heightBytes); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€é«˜é«˜åº¦å¤±è´¥: %w", err)
	}

	// 2. éªŒè¯å¹¶æ›´æ–°æœ€é«˜åŒºå—å“ˆå¸Œ
	if len(blockHash) == 0 {
		return fmt.Errorf("åŒºå—å“ˆå¸Œä¸èƒ½ä¸ºç©º")
	}
	if err := tx.Set([]byte(ChainLatestHashKey), blockHash); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€é«˜åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// 3. æ›´æ–°æ€»åŒºå—æ•°ï¼ˆé€’å¢ï¼‰
	totalBlocks, _ := cs.getTotalBlocks(ctx)
	totalBlocksBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(totalBlocksBytes, totalBlocks+1)
	if err := tx.Set([]byte(ChainTotalBlocksKey), totalBlocksBytes); err != nil {
		return fmt.Errorf("æ›´æ–°æ€»åŒºå—æ•°å¤±è´¥: %w", err)
	}

	// 4. æ›´æ–°æ€»äº¤æ˜“æ•°
	totalTxs, _ := cs.getTotalTransactions(ctx)
	totalTxsBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(totalTxsBytes, totalTxs+uint64(len(block.Body.Transactions)))
	if err := tx.Set([]byte(ChainTotalTxsKey), totalTxsBytes); err != nil {
		return fmt.Errorf("æ›´æ–°æ€»äº¤æ˜“æ•°å¤±è´¥: %w", err)
	}

	// 5. æ›´æ–°æœ€åæ›´æ–°æ—¶é—´
	lastUpdateBytes, _ := time.Now().MarshalBinary()
	if err := tx.Set([]byte(ChainLastUpdateKey), lastUpdateBytes); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€åæ›´æ–°æ—¶é—´å¤±è´¥: %w", err)
	}

	return nil
}

// getTotalBlocks è·å–å½“å‰æ€»åŒºå—æ•°
func (cs *ChainState) getTotalBlocks(ctx context.Context) (uint64, error) {
	data, err := cs.storage.Get(ctx, []byte(ChainTotalBlocksKey))
	if err != nil || data == nil {
		return 0, nil
	}
	return binary.BigEndian.Uint64(data), nil
}

// getTotalTransactions è·å–å½“å‰æ€»äº¤æ˜“æ•°
func (cs *ChainState) getTotalTransactions(ctx context.Context) (uint64, error) {
	data, err := cs.storage.Get(ctx, []byte(ChainTotalTxsKey))
	if err != nil || data == nil {
		return 0, nil
	}
	return binary.BigEndian.Uint64(data), nil
}

// ChainStateInfo åŒºå—é“¾çŠ¶æ€ä¿¡æ¯
type ChainStateInfo struct {
	HighestHeight   uint64    `json:"highest_height"`    // æœ€é«˜åŒºå—é«˜åº¦
	HighestHash     []byte    `json:"highest_hash"`      // æœ€é«˜åŒºå—å“ˆå¸Œ
	TotalBlocks     uint64    `json:"total_blocks"`      // æ€»åŒºå—æ•°é‡
	TotalTxs        uint64    `json:"total_txs"`         // æ€»äº¤æ˜“æ•°é‡
	LastUpdatedTime time.Time `json:"last_updated_time"` // æœ€åæ›´æ–°æ—¶é—´
	GenesisHash     []byte    `json:"genesis_hash"`      // åˆ›ä¸–åŒºå—å“ˆå¸Œ
	GenesisTime     time.Time `json:"genesis_time"`      // åˆ›ä¸–åŒºå—æ—¶é—´
}

// å­˜å‚¨é”®å®šä¹‰
const (
	ChainLatestHeightKey = "chain:latest_height" // æœ€é«˜åŒºå—é«˜åº¦
	ChainLatestHashKey   = "chain:latest_hash"   // æœ€é«˜åŒºå—å“ˆå¸Œ
	ChainTotalBlocksKey  = "chain:total_blocks"  // æ€»åŒºå—æ•°é‡
	ChainTotalTxsKey     = "chain:total_txs"     // æ€»äº¤æ˜“æ•°é‡
	ChainLastUpdateKey   = "chain:last_update"   // æœ€åæ›´æ–°æ—¶é—´
	ChainGenesisHashKey  = "chain:genesis_hash"  // åˆ›ä¸–åŒºå—å“ˆå¸Œ
	ChainGenesisTimeKey  = "chain:genesis_time"  // åˆ›ä¸–åŒºå—æ—¶é—´
	ChainInitializedKey  = "chain:initialized"   // é“¾åˆå§‹åŒ–æ ‡å¿—
)

// ============================================================================
//                           çŠ¶æ€æ›´æ–°æ–¹æ³•
// ============================================================================

// updateChainState æ›´æ–°åŒºå—é“¾çŠ¶æ€
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šçŠ¶æ€åŒæ­¥æ›´æ–°æ ¸å¿ƒ
// åœ¨äº‹åŠ¡ä¸­åŸå­æ€§æ›´æ–°æ‰€æœ‰ç›¸å…³çš„é“¾çŠ¶æ€ä¿¡æ¯
func (m *Manager) updateChainState(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	height := block.Header.Height
	blockHash, err := m.blockStorage.computeBlockHashWithService(ctx, block)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ£€æŸ¥æ˜¯å¦ä¸ºåˆ›ä¸–åŒºå—
	if height == 0 {
		return m.initializeGenesisState(tx, block, blockHash)
	}

	return m.updateRegularBlockState(tx, block, blockHash)
}

// initializeGenesisState åˆå§‹åŒ–åˆ›ä¸–åŒºå—çŠ¶æ€
func (m *Manager) initializeGenesisState(tx storage.BadgerTransaction, block *core.Block, blockHash []byte) error {
	now := time.Now()

	// è®¾ç½®åˆ›ä¸–åŒºå—ä¿¡æ¯
	if err := tx.Set([]byte(ChainGenesisHashKey), blockHash); err != nil {
		return fmt.Errorf("è®¾ç½®åˆ›ä¸–åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	genesisTime := time.Unix(int64(block.Header.Timestamp), 0)
	if err := tx.Set([]byte(ChainGenesisTimeKey), timeToBytes(genesisTime)); err != nil {
		return fmt.Errorf("è®¾ç½®åˆ›ä¸–åŒºå—æ—¶é—´å¤±è´¥: %w", err)
	}

	// åˆå§‹åŒ–ç»Ÿè®¡ä¿¡æ¯
	if err := tx.Set([]byte(ChainLatestHeightKey), uint64ToBytes(0)); err != nil {
		return err
	}
	if err := tx.Set([]byte(ChainLatestHashKey), blockHash); err != nil {
		return err
	}
	if err := tx.Set([]byte(ChainTotalBlocksKey), uint64ToBytes(1)); err != nil {
		return err
	}
	if err := tx.Set([]byte(ChainTotalTxsKey), uint64ToBytes(uint64(len(block.Body.Transactions)))); err != nil {
		return err
	}
	if err := tx.Set([]byte(ChainLastUpdateKey), timeToBytes(now)); err != nil {
		return err
	}

	// è®¾ç½®åˆå§‹åŒ–å®Œæˆæ ‡å¿—
	if err := tx.Set([]byte(ChainInitializedKey), []byte("true")); err != nil {
		return err
	}

	return nil
}

// updateRegularBlockState æ›´æ–°å¸¸è§„åŒºå—çŠ¶æ€
func (m *Manager) updateRegularBlockState(tx storage.BadgerTransaction, block *core.Block, blockHash []byte) error {
	height := block.Header.Height

	// æ£€æŸ¥æ˜¯å¦éœ€è¦æ›´æ–°æœ€é«˜é«˜åº¦
	currentHeightBytes, err := tx.Get([]byte(ChainLatestHeightKey))
	if err == nil && currentHeightBytes != nil {
		currentHeight := bytesToUint64(currentHeightBytes)
		if height <= currentHeight {
			// ä¸éœ€è¦æ›´æ–°
			return nil
		}
	}

	now := time.Now()

	// æ›´æ–°æœ€é«˜åŒºå—ä¿¡æ¯
	if err := tx.Set([]byte(ChainLatestHeightKey), uint64ToBytes(height)); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€é«˜é«˜åº¦å¤±è´¥: %w", err)
	}
	if err := tx.Set([]byte(ChainLatestHashKey), blockHash); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€é«˜åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ›´æ–°æ€»åŒºå—æ•°é‡
	totalBlocksBytes, err := tx.Get([]byte(ChainTotalBlocksKey))
	var totalBlocks uint64 = 1
	if err == nil && totalBlocksBytes != nil {
		totalBlocks = bytesToUint64(totalBlocksBytes) + 1
	}
	if err := tx.Set([]byte(ChainTotalBlocksKey), uint64ToBytes(totalBlocks)); err != nil {
		return fmt.Errorf("æ›´æ–°æ€»åŒºå—æ•°é‡å¤±è´¥: %w", err)
	}

	// æ›´æ–°æ€»äº¤æ˜“æ•°é‡
	totalTxsBytes, err := tx.Get([]byte(ChainTotalTxsKey))
	var totalTxs uint64 = uint64(len(block.Body.Transactions))
	if err == nil && totalTxsBytes != nil {
		totalTxs = bytesToUint64(totalTxsBytes) + uint64(len(block.Body.Transactions))
	}
	if err := tx.Set([]byte(ChainTotalTxsKey), uint64ToBytes(totalTxs)); err != nil {
		return fmt.Errorf("æ›´æ–°æ€»äº¤æ˜“æ•°é‡å¤±è´¥: %w", err)
	}

	// æ›´æ–°æœ€åæ›´æ–°æ—¶é—´
	if err := tx.Set([]byte(ChainLastUpdateKey), timeToBytes(now)); err != nil {
		return fmt.Errorf("æ›´æ–°æœ€åæ›´æ–°æ—¶é—´å¤±è´¥: %w", err)
	}

	return nil
}

// ============================================================================
//                           çŠ¶æ€æŸ¥è¯¢æ–¹æ³•
// ============================================================================

// getChainState è·å–å®Œæ•´çš„åŒºå—é“¾çŠ¶æ€ä¿¡æ¯
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šçŠ¶æ€ä¿¡æ¯æŸ¥è¯¢æ ¸å¿ƒ
// è¿”å›åŒºå—é“¾çš„å®Œæ•´çŠ¶æ€ä¿¡æ¯ï¼Œç”¨äºç›‘æ§å’Œç®¡ç†
func (m *Manager) getChainState(ctx context.Context) (*ChainStateInfo, error) {
	if m.logger != nil {
		m.logger.Debug("æŸ¥è¯¢åŒºå—é“¾çŠ¶æ€ä¿¡æ¯")
	}

	// æ£€æŸ¥é“¾æ˜¯å¦å·²åˆå§‹åŒ–
	initialized, err := m.badgerStore.Get(ctx, []byte(ChainInitializedKey))
	if err != nil || initialized == nil {
		return &ChainStateInfo{}, nil // è¿”å›ç©ºçŠ¶æ€
	}

	state := &ChainStateInfo{}

	// è·å–æœ€é«˜åŒºå—ä¿¡æ¯
	heightBytes, err := m.badgerStore.Get(ctx, []byte(ChainLatestHeightKey))
	if err == nil && heightBytes != nil {
		state.HighestHeight = bytesToUint64(heightBytes)
	}

	state.HighestHash, err = m.badgerStore.Get(ctx, []byte(ChainLatestHashKey))
	if err != nil {
		return nil, fmt.Errorf("è·å–æœ€é«˜åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// è·å–ç»Ÿè®¡ä¿¡æ¯
	totalBlocksBytes, err := m.badgerStore.Get(ctx, []byte(ChainTotalBlocksKey))
	if err == nil && totalBlocksBytes != nil {
		state.TotalBlocks = bytesToUint64(totalBlocksBytes)
	}

	totalTxsBytes, err := m.badgerStore.Get(ctx, []byte(ChainTotalTxsKey))
	if err == nil && totalTxsBytes != nil {
		state.TotalTxs = bytesToUint64(totalTxsBytes)
	}

	// è·å–æ—¶é—´ä¿¡æ¯
	lastUpdateBytes, err := m.badgerStore.Get(ctx, []byte(ChainLastUpdateKey))
	if err == nil && lastUpdateBytes != nil {
		state.LastUpdatedTime = bytesToTime(lastUpdateBytes)
	}

	// è·å–åˆ›ä¸–åŒºå—ä¿¡æ¯
	state.GenesisHash, err = m.badgerStore.Get(ctx, []byte(ChainGenesisHashKey))
	if err != nil && state.TotalBlocks > 0 {
		return nil, fmt.Errorf("è·å–åˆ›ä¸–åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	genesisTimeBytes, err := m.badgerStore.Get(ctx, []byte(ChainGenesisTimeKey))
	if err == nil && genesisTimeBytes != nil {
		state.GenesisTime = bytesToTime(genesisTimeBytes)
	}

	if m.logger != nil {
		m.logger.Debugf("æŸ¥è¯¢é“¾çŠ¶æ€å®Œæˆ - height: %d, totalBlocks: %d, totalTxs: %d",
			state.HighestHeight, state.TotalBlocks, state.TotalTxs)
	}

	return state, nil
}

// isChainInitialized æ£€æŸ¥åŒºå—é“¾æ˜¯å¦å·²åˆå§‹åŒ–
func (m *Manager) isChainInitialized(ctx context.Context) (bool, error) {
	initialized, err := m.badgerStore.Get(ctx, []byte(ChainInitializedKey))
	if err != nil {
		return false, err
	}
	return initialized != nil, nil
}

// ============================================================================
//                           è¾…åŠ©å‡½æ•°
// ============================================================================

// timeToBytes æ—¶é—´è½¬å­—èŠ‚æ•°ç»„
func timeToBytes(t time.Time) []byte {
	return uint64ToBytes(uint64(t.Unix()))
}

// bytesToTime å­—èŠ‚æ•°ç»„è½¬æ—¶é—´
func bytesToTime(bytes []byte) time.Time {
	return time.Unix(int64(bytesToUint64(bytes)), 0)
}

// validateChainConsistency éªŒè¯åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šçŠ¶æ€ä¸€è‡´æ€§éªŒè¯æ ¸å¿ƒ
// éªŒè¯åŒºå—é“¾çŠ¶æ€ä¿¡æ¯çš„ä¸€è‡´æ€§ï¼Œç”¨äºå¥åº·æ£€æŸ¥
func (m *Manager) validateChainConsistency(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("éªŒè¯åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§")
	}

	initialized, err := m.isChainInitialized(ctx)
	if err != nil {
		return fmt.Errorf("æ£€æŸ¥åˆå§‹åŒ–çŠ¶æ€å¤±è´¥: %w", err)
	}
	if !initialized {
		return nil // æœªåˆå§‹åŒ–çš„é“¾ä¸éœ€è¦éªŒè¯
	}

	state, err := m.getChainState(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	// éªŒè¯æœ€é«˜åŒºå—æ˜¯å¦å­˜åœ¨
	if state.HighestHash != nil {
		block, err := m.getBlock(ctx, state.HighestHash)
		if err != nil {
			return fmt.Errorf("éªŒè¯æœ€é«˜åŒºå—å¤±è´¥: %w", err)
		}
		if block.Header.Height != state.HighestHeight {
			return fmt.Errorf("æœ€é«˜åŒºå—é«˜åº¦ä¸ä¸€è‡´: çŠ¶æ€=%d, åŒºå—=%d",
				state.HighestHeight, block.Header.Height)
		}
	}

	if m.logger != nil {
		m.logger.Debug("åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§éªŒè¯é€šè¿‡")
	}

	return nil
}

// repairChainState ä¿®å¤åŒºå—é“¾çŠ¶æ€
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šçŠ¶æ€ä¿®å¤æ ¸å¿ƒ
// ä»åŒºå—æ•°æ®é‡å»ºåŒºå—é“¾çŠ¶æ€ä¿¡æ¯
func (m *Manager) repairChainState(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("å¼€å§‹ä¿®å¤åŒºå—é“¾çŠ¶æ€")
	}

	// è·å–æœ€é«˜åŒºå—
	height, blockHash, err := m.getHighestBlock(ctx)
	if err != nil {
		return fmt.Errorf("è·å–æœ€é«˜åŒºå—å¤±è´¥: %w", err)
	}
	if height == 0 && blockHash == nil {
		// ç©ºé“¾ï¼Œæ— éœ€ä¿®å¤
		return nil
	}

	// åœ¨äº‹åŠ¡ä¸­ä¿®å¤çŠ¶æ€
	return m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// é‡æ–°è®¡ç®—ç»Ÿè®¡ä¿¡æ¯
		var totalBlocks uint64 = 0
		var totalTxs uint64 = 0
		var genesisHash []byte
		var genesisTime time.Time

		// éå†æ‰€æœ‰åŒºå—é‡æ–°è®¡ç®—
		for h := uint64(0); h <= height; h++ {
			block, err := m.getBlockByHeight(ctx, h)
			if err != nil {
				continue // è·³è¿‡ä¸å­˜åœ¨çš„åŒºå—
			}

			totalBlocks++
			totalTxs += uint64(len(block.Body.Transactions))

			if h == 0 {
				genesisHash, err = m.blockStorage.computeBlockHashWithService(ctx, block)
				if err != nil {
					return fmt.Errorf("è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
				}
				genesisTime = time.Unix(int64(block.Header.Timestamp), 0)
			}
		}

		// æ›´æ–°æ‰€æœ‰çŠ¶æ€
		now := time.Now()

		if err := tx.Set([]byte(ChainLatestHeightKey), uint64ToBytes(height)); err != nil {
			return err
		}
		if err := tx.Set([]byte(ChainLatestHashKey), blockHash); err != nil {
			return err
		}
		if err := tx.Set([]byte(ChainTotalBlocksKey), uint64ToBytes(totalBlocks)); err != nil {
			return err
		}
		if err := tx.Set([]byte(ChainTotalTxsKey), uint64ToBytes(totalTxs)); err != nil {
			return err
		}
		if err := tx.Set([]byte(ChainLastUpdateKey), timeToBytes(now)); err != nil {
			return err
		}

		if genesisHash != nil {
			if err := tx.Set([]byte(ChainGenesisHashKey), genesisHash); err != nil {
				return err
			}
			if err := tx.Set([]byte(ChainGenesisTimeKey), timeToBytes(genesisTime)); err != nil {
				return err
			}
		}

		if err := tx.Set([]byte(ChainInitializedKey), []byte("true")); err != nil {
			return err
		}

		if m.logger != nil {
			m.logger.Debugf("åŒºå—é“¾çŠ¶æ€ä¿®å¤å®Œæˆ - totalBlocks: %d, totalTxs: %d", totalBlocks, totalTxs)
		}

		return nil
	})
}
